@@ -1,9 +1,12 @@
-// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.codeInspection.reference;
 
+import com.intellij.codeInsight.TestFrameworks;
 import com.intellij.lang.java.JavaLanguage;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.ReadAction;
+import com.intellij.openapi.util.Predicates;
+import com.intellij.openapi.util.text.Strings;
 import com.intellij.psi.*;
 import com.intellij.psi.impl.light.LightElement;
 import com.intellij.psi.search.GlobalSearchScope;
@@ -12,35 +15,31 @@ import com.intellij.util.IncorrectOperationException;
 import com.intellij.util.ObjectUtils;
 import com.intellij.util.SmartList;
 import com.intellij.util.containers.ContainerUtil;
-import one.util.streamex.StreamEx;
-import org.jetbrains.annotations.NonNls;
+import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.uast.*;
 
 import java.util.*;
+import java.util.function.Predicate;
 
 public class RefMethodImpl extends RefJavaElementImpl implements RefMethod {
-  private static final RefParameter[] EMPTY_PARAMS_ARRAY = new RefParameter[0];
+  private static final int IS_APPMAIN_MASK            = 0b1_00000000_00000000; // 17th bit
+  private static final int IS_LIBRARY_OVERRIDE_MASK   = 0b10_00000000_00000000; // 18th bit
+  private static final int IS_CONSTRUCTOR_MASK        = 0b100_00000000_00000000; // 19th bit
+  private static final int IS_ABSTRACT_MASK           = 0b1000_00000000_00000000; // 20th bit
+  public static final int IS_BODY_EMPTY_MASK          = 0b10000_00000000_00000000; // 21st bit
+  private static final int IS_ONLY_CALLS_SUPER_MASK   = 0b100000_00000000_00000000; // 22nd bit
+  private static final int IS_RETURN_VALUE_USED_MASK  = 0b1000000_00000000_00000000; // 23rd bit
+  private static final int IS_RECORD_ACCESSOR_MASK    = 0b10000000_00000000_00000000; // 24rd bit
 
-  private static final int IS_APPMAIN_MASK = 0b1_00000000_00000000;
-  private static final int IS_LIBRARY_OVERRIDE_MASK = 0b10_00000000_00000000;
-  private static final int IS_CONSTRUCTOR_MASK = 0b100_00000000_00000000;
-  private static final int IS_ABSTRACT_MASK = 0b1000_00000000_00000000;
-  private static final int IS_BODY_EMPTY_MASK = 0b10000_00000000_00000000;
-  private static final int IS_ONLY_CALLS_SUPER_MASK = 0b100000_00000000_00000000;
-  private static final int IS_RETURN_VALUE_USED_MASK = 0b1000000_00000000_00000000;
-
-  private static final int IS_TEST_METHOD_MASK = 0b100_00000000_00000000_00000000;
-  private static final int IS_CALLED_ON_SUBCLASS_MASK = 0b1000_00000000_00000000_00000000;
+  private static final int IS_CALLED_ON_SUBCLASS_MASK = 0b1000_00000000_00000000_00000000; // 28th bit
 
   private static final String RETURN_VALUE_UNDEFINED = "#";
 
-  private List<RefMethod> mySuperMethods; // guarded by this
+  private Object mySuperMethods; // guarded by this
   private List<RefOverridable> myDerivedReferences; // guarded by this
   private List<String> myUnThrownExceptions; // guarded by this
-
-  private RefParameter[] myParameters; // guarded by this
   private volatile String myReturnValueTemplate = RETURN_VALUE_UNDEFINED; // guarded by this
 
   RefMethodImpl(UMethod method, PsiElement psi, RefManager manager) {
@@ -48,12 +47,12 @@ public class RefMethodImpl extends RefJavaElementImpl implements RefMethod {
 
     setConstructor(method.isConstructor());
     PsiType returnType = method.getReturnType();
-    setFlag(returnType == null || PsiType.VOID.equals(returnType) ||
+    setFlag(returnType == null || PsiTypes.voidType().equals(returnType) ||
             returnType.equalsToText(CommonClassNames.JAVA_LANG_VOID), IS_RETURN_VALUE_USED_MASK);
   }
 
   // To be used only from RefImplicitConstructor!
-  protected RefMethodImpl(@NotNull String name, @NotNull RefClass ownerClass) {
+  RefMethodImpl(@NotNull String name, @NotNull RefClass ownerClass) {
     super(name, ownerClass);
 
     // fair enough to add parent here
@@ -66,108 +65,74 @@ public class RefMethodImpl extends RefJavaElementImpl implements RefMethod {
   }
 
   @Override
-  public synchronized void add(@NotNull RefEntity child) {
-    if (child instanceof RefParameter) {
-      ((WritableRefEntity)child).setOwner(this);
-      return;
-    }
-    super.add(child);
-  }
-
-  @NotNull
-  @Override
-  public synchronized List<RefEntity> getChildren() {
-    List<RefEntity> superChildren = super.getChildren();
-    if (myParameters == null) return superChildren;
-    if (superChildren.isEmpty()) return Arrays.asList(myParameters);
-
-    List<RefEntity> allChildren = new ArrayList<>(superChildren.size() + myParameters.length);
-    allChildren.addAll(superChildren);
-    Collections.addAll(allChildren, myParameters);
-    return allChildren;
-  }
-
-  @Override
-  protected void initialize() {
-    UMethod method = (UMethod)getUastElement();
+  protected synchronized void initialize() {
+    UMethod method = getUastElement();
     LOG.assertTrue(method != null);
     PsiElement sourcePsi = method.getSourcePsi();
     LOG.assertTrue(sourcePsi != null);
 
     List<UParameter> paramList = method.getUastParameters();
     if (!paramList.isEmpty()) {
-      List<RefParameter> newParameters = new ArrayList<>(paramList.size());
-      final RefJavaUtil refUtil = RefJavaUtil.getInstance();
+      // Empty constructor body signals Java record header or Kotlin primary constructor (or red code): uses all parameters implicitly
+      // TODO create an extension point for this kind of thing.
+      boolean parameterUsed = method.isConstructor() && method.getUastBody() == null;
       for (int i = 0; i < paramList.size(); i++) {
         UParameter param = paramList.get(i);
         if (param.getSourcePsi() != null) {
-          final RefParameter refParameter = getRefJavaManager().getParameterReference(param, i, this);
-          if (refParameter != null) {
-            refUtil.setIsFinal(refParameter, param.isFinal());
-            newParameters.add(refParameter);
+          RefParameterImpl parameter = (RefParameterImpl)getRefJavaManager().getParameterReference(param, i, this);
+          if (parameterUsed && parameter != null) {
+            parameter.setUsedForReading();
           }
         }
-      }
-      synchronized (this) {
-        myParameters = newParameters.toArray(EMPTY_PARAMS_ARRAY);
       }
     }
 
     RefElement parentRef = findParentRef(sourcePsi, method, myManager);
     if (parentRef == null) return;
-    this.setOwner((WritableRefEntity)parentRef);
+    setOwner((WritableRefEntity)parentRef);
     if (!myManager.isDeclarationsFound()) return;
 
     PsiMethod javaPsi = method.getJavaPsi();
-    RefClass ownerClass = ObjectUtils.tryCast(parentRef, RefClass.class);
-    if (!isConstructor()) {
-      if (ownerClass != null && ownerClass.isInterface()) {
-        setAbstract(false);
-      }
-      else {
-        setAbstract(javaPsi.hasModifierProperty(PsiModifier.ABSTRACT));
-      }
+    if (!method.isConstructor()) {
+      setAbstract(javaPsi.hasModifierProperty(PsiModifier.ABSTRACT));
 
-      boolean isNative = javaPsi.hasModifierProperty(PsiModifier.NATIVE);
-      setLibraryOverride(isNative);
-      if (javaPsi.hasModifierProperty(PsiModifier.PUBLIC)) {
+      setLibraryOverride(javaPsi.hasModifierProperty(PsiModifier.NATIVE));
+      if (PsiModifier.PUBLIC.equals(getAccessModifier())) {
         setAppMain(isAppMain(javaPsi, this));
-
-        @NonNls final String name = method.getName();
-        if (ownerClass != null && ownerClass.isTestCase() && name.startsWith("test")) {
-          setTestMethod(true);
-        }
       }
-      if (!javaPsi.hasModifierProperty(PsiModifier.PRIVATE)) {
+      if (!PsiModifier.PRIVATE.equals(getAccessModifier()) && !isStatic()) {
         initializeSuperMethods(javaPsi);
-        if (ownerClass != null && isExternalOverride()) {
-          ((RefClassImpl)ownerClass).addLibraryOverrideMethod(this);
-        }
       }
     }
 
     if (sourcePsi instanceof PsiMethod && sourcePsi.getLanguage().isKindOf(JavaLanguage.INSTANCE)) {
+      if (!method.isConstructor() && JavaPsiRecordUtil.getRecordComponentForAccessor((PsiMethod)sourcePsi) != null) {
+        setRecordAccessor(true);
+      }
       collectUncaughtExceptions((PsiMethod)sourcePsi);
     }
   }
 
   public void setParametersAreUnknown() {
     for (RefParameter parameter : getParameters()) {
-      parameter.waitForInitialized();
+      parameter.initializeIfNeeded();
       ((RefParameterImpl)parameter).clearTemplateValue();
     }
     for (RefMethod method : getSuperMethods()) {
-      method.waitForInitialized();
+      method.initializeIfNeeded();
       ((RefMethodImpl)method).setParametersAreUnknown();
     }
   }
 
   private static boolean isAppMain(PsiMethod psiMethod, RefMethod refMethod) {
     if (!refMethod.isStatic()) return false;
-    if (!PsiType.VOID.equals(psiMethod.getReturnType())) return false;
+    if (!PsiTypes.voidType().equals(psiMethod.getReturnType())) return false;
 
     PsiMethod appMainPattern = ((RefMethodImpl)refMethod).getRefJavaManager().getAppMainPattern();
     if (MethodSignatureUtil.areSignaturesEqual(psiMethod, appMainPattern)) return true;
+
+    if ("main".equals(psiMethod.getName()) && psiMethod.getParameterList().isEmpty() &&
+        psiMethod.getLanguage().isKindOf("kotlin")) return true;
 
     PsiMethod appPremainPattern = ((RefMethodImpl)refMethod).getRefJavaManager().getAppPremainPattern();
     if (MethodSignatureUtil.areSignaturesEqual(psiMethod, appPremainPattern)) return true;
@@ -182,11 +147,11 @@ public class RefMethodImpl extends RefJavaElementImpl implements RefMethod {
       if (body == null) return;
 
       List<UExpression> statements =
-        body instanceof UBlockExpression ? ((UBlockExpression)body).getExpressions() : Collections.singletonList(body);
+        body instanceof UBlockExpression blockExpression ? blockExpression.getExpressions() : Collections.singletonList(body);
       boolean isBaseExplicitlyCalled = false;
       if (!statements.isEmpty()) {
         UExpression first = statements.get(0);
-        if (first instanceof UCallExpression && ((UCallExpression)first).getKind() == UastCallKind.CONSTRUCTOR_CALL) {
+        if (first instanceof UCallExpression callExpression && callExpression.getKind() == UastCallKind.CONSTRUCTOR_CALL) {
           isBaseExplicitlyCalled = true;
         }
       }
@@ -195,6 +160,7 @@ public class RefMethodImpl extends RefJavaElementImpl implements RefMethod {
         RefClass ownerClass = getOwnerClass();
         if (ownerClass != null) {
           for (RefClass superClass : ownerClass.getBaseClasses()) {
+            superClass.initializeIfNeeded();
             WritableRefElement superDefaultConstructor = (WritableRefElement)superClass.getDefaultConstructor();
             if (superDefaultConstructor != null) {
               superDefaultConstructor.addInReference(this);
@@ -209,14 +175,18 @@ public class RefMethodImpl extends RefJavaElementImpl implements RefMethod {
   @Override
   @NotNull
   public synchronized Collection<RefMethod> getSuperMethods() {
-    return ObjectUtils.notNull(mySuperMethods, Collections.emptyList());
+    if (mySuperMethods instanceof Collection) {
+      //noinspection unchecked
+      return (Collection<RefMethod>)mySuperMethods;
+    }
+    return mySuperMethods != null ? List.of((RefMethod)mySuperMethods) : List.of();
   }
 
   @Override
   @NotNull
   public synchronized Collection<RefMethod> getDerivedMethods() {
     if (myDerivedReferences == null) return Collections.emptyList();
-    return StreamEx.of(myDerivedReferences).select(RefMethod.class).toList();
+    return ContainerUtil.filterIsInstance(myDerivedReferences, RefMethod.class);
   }
 
   @Override
@@ -259,15 +229,15 @@ public class RefMethodImpl extends RefJavaElementImpl implements RefMethod {
   }
 
   private void initializeSuperMethods(PsiMethod method) {
-    if (getRefManager().isOfflineView()) return;
+    final RefManagerImpl refManager = getRefManager();
+    if (refManager.isOfflineView()) return;
     for (PsiMethod psiSuperMethod : method.findSuperMethods()) {
-      if (getRefManager().belongsToScope(psiSuperMethod)) {
-        PsiElement sourceElement = psiSuperMethod instanceof LightElement ? psiSuperMethod.getNavigationElement() : psiSuperMethod;
-        RefElement refElement = getRefManager().getReference(sourceElement);
-        if (refElement instanceof RefMethodImpl) {
-          RefMethodImpl refSuperMethod = (RefMethodImpl)refElement;
+      if (refManager.belongsToScope(psiSuperMethod)) {
+        PsiElement sourceElement = RefJavaUtilImpl.returnToPhysical(psiSuperMethod);
+        RefElement refElement = refManager.getReference(sourceElement);
+        if (refElement instanceof RefMethodImpl refSuperMethod) {
           addSuperMethod(refSuperMethod);
-          refSuperMethod.markExtended(this);
+          refManager.executeTask(() -> refSuperMethod.markExtended(this));
         }
         else {
           setLibraryOverride(true);
@@ -279,16 +249,20 @@ public class RefMethodImpl extends RefJavaElementImpl implements RefMethod {
     }
   }
 
-  public void addSuperMethod(RefMethodImpl refSuperMethod) {
-    if (!refSuperMethod.getSuperMethods().contains(this)) {
-      synchronized (this) {
-        if (mySuperMethods == null) {
-          mySuperMethods = new ArrayList<>(1);
-        }
-        if (!mySuperMethods.contains(refSuperMethod)) {
-          mySuperMethods.add(refSuperMethod);
-        }
-      }
+  public synchronized void addSuperMethod(RefMethodImpl refSuperMethod) {
+    if (refSuperMethod.checkFlag(IS_LIBRARY_OVERRIDE_MASK)) setLibraryOverride(true);
+    if (mySuperMethods == null) {
+      mySuperMethods = refSuperMethod;
+    }
+    else if (mySuperMethods instanceof RefMethod refMethod) {
+      ArrayList<RefMethod> list = new ArrayList<>(2);
+      list.add(refMethod);
+      list.add(refSuperMethod);
+      mySuperMethods = list;
+    }
+    else {
+      //noinspection unchecked
+      ((List<RefMethod>)mySuperMethods).add(refSuperMethod);
     }
   }
 
@@ -299,36 +273,29 @@ public class RefMethodImpl extends RefJavaElementImpl implements RefMethod {
   @Override
   public synchronized RefParameter @NotNull [] getParameters() {
     LOG.assertTrue(isInitialized());
-    return ObjectUtils.notNull(myParameters, EMPTY_PARAMS_ARRAY);
+    return ContainerUtil.filterIsInstance(getChildren(), RefParameter.class).toArray(RefParameter.EMPTY_ARRAY);
   }
 
   @Override
   public void buildReferences() {
-    if (!isInitialized()) {
-      // delay task until initialized.
-      getRefManager().executeTask(() -> buildReferences());
-      return;
-    }
+    initializeIfNeeded();
 
     // Work on code block to find what we're referencing...
-    UMethod method = (UMethod)getUastElement();
+    UMethod method = getUastElement();
     if (method == null) return;
     if (isConstructor()) {
       final RefClass ownerClass = getOwnerClass();
       assert ownerClass != null;
-      ownerClass.waitForInitialized();
+      ownerClass.initializeIfNeeded();
       addReference(ownerClass, ownerClass.getPsiElement(), method, false, true, null);
     }
-    UExpression body = method.getUastBody();
     final RefJavaUtil refUtil = RefJavaUtil.getInstance();
     refUtil.addReferencesTo(method, this, method);
     checkForSuperCall(method);
     setOnlyCallsSuper(refUtil.isMethodOnlyCallsSuper(method));
 
-    setBodyEmpty(isOnlyCallsSuper() || !isExternalOverride() && isEmptyExpression(body));
+    setBodyEmpty(isOnlyCallsSuper() || !isExternalOverride() && isEmptyExpression(method.getUastBody()));
     refUtil.addTypeReference(method, method.getReturnType(), getRefManager(), this);
-
-    getRefManager().fireBuildReferences(this);
   }
 
   private void collectUncaughtExceptions(@NotNull PsiMethod method) {
@@ -358,8 +325,8 @@ public class RefMethodImpl extends RefJavaElementImpl implements RefMethod {
 
   @Override
   public void accept(@NotNull final RefVisitor visitor) {
-    if (visitor instanceof RefJavaVisitor) {
-      ApplicationManager.getApplication().runReadAction(() -> ((RefJavaVisitor)visitor).visitMethod(this));
+    if (visitor instanceof RefJavaVisitor refJavaVisitor) {
+      ApplicationManager.getApplication().runReadAction(() -> refJavaVisitor.visitMethod(this));
     }
     else {
       super.accept(visitor);
@@ -377,7 +344,7 @@ public class RefMethodImpl extends RefJavaElementImpl implements RefMethod {
     if (checkFlag(IS_LIBRARY_OVERRIDE_MASK)) return true;
     for (RefMethod superMethod : getSuperMethods()) {
       if (((RefMethodImpl)superMethod).isLibraryOverride(processed)) {
-        setFlag(true, IS_LIBRARY_OVERRIDE_MASK);
+        setLibraryOverride(true);
         return true;
       }
     }
@@ -446,7 +413,7 @@ public class RefMethodImpl extends RefJavaElementImpl implements RefMethod {
   @Override
   public String getExternalName() {
     return ReadAction.compute(() -> {
-      final UMethod uMethod = (UMethod)getUastElement();
+      final UMethod uMethod = getUastElement();
       LOG.assertTrue(uMethod != null);
       PsiMethod javaMethod = uMethod.getJavaPsi();
       return PsiFormatUtil.getExternalName(javaMethod, true, Integer.MAX_VALUE);
@@ -454,12 +421,14 @@ public class RefMethodImpl extends RefJavaElementImpl implements RefMethod {
   }
 
   @Nullable
-  static RefMethod methodFromExternalName(RefManager manager, String externalName) {
-    PsiElement method = findPsiMethod(PsiManager.getInstance(manager.getProject()), externalName);
-    if (method instanceof LightElement) {
-      method = method.getNavigationElement();
+  static RefJavaElement methodFromExternalName(RefManager manager, String externalName) {
+    PsiElement method = RefJavaUtilImpl.returnToPhysical(findPsiMethod(PsiManager.getInstance(manager.getProject()), externalName));
+    RefElement reference = manager.getReference(method);
+    if (!(reference instanceof RefJavaElement) && reference != null) {
+      LOG.error("Expected refMethod but found: " + reference.getClass().getName() + "; for externalName: " +externalName );
+      return null;
     }
-    return (RefMethod)manager.getReference(method);
+    return (RefJavaElement)reference;
   }
 
   @Nullable
@@ -517,7 +486,7 @@ public class RefMethodImpl extends RefJavaElementImpl implements RefMethod {
     if (checkFlag(IS_RETURN_VALUE_USED_MASK) == value) return;
     setFlag(value, IS_RETURN_VALUE_USED_MASK);
     for (RefMethod refSuper : getSuperMethods()) {
-      refSuper.waitForInitialized();
+      refSuper.initializeIfNeeded();
       ((RefMethodImpl)refSuper).setReturnValueUsed(value);
     }
   }
@@ -537,37 +506,16 @@ public class RefMethodImpl extends RefJavaElementImpl implements RefMethod {
     if (!getSuperMethods().isEmpty()) {
       for (final RefMethod refMethod : getSuperMethods()) {
         RefMethodImpl refSuper = (RefMethodImpl)refMethod;
-        refSuper.waitForInitialized();
+        refSuper.initializeIfNeeded();
         refSuper.updateReturnValueTemplate(expression);
       }
     }
     else {
-      String newTemplate = null;
-      final RefJavaUtil refUtil = RefJavaUtil.getInstance();
-      if (expression instanceof ULiteralExpression) {
-        ULiteralExpression psiLiteralExpression = (ULiteralExpression)expression;
-        newTemplate = String.valueOf(psiLiteralExpression.getValue());
-      }
-      else if (expression instanceof UResolvable) {
-        UResolvable referenceExpression = (UResolvable)expression;
-        UElement resolved = UResolvableKt.resolveToUElement(referenceExpression);
-        if (resolved instanceof UField) {
-          UField uField = (UField)resolved;
-          PsiField psi = (PsiField)uField.getJavaPsi();
-          if (uField.isStatic() &&
-              uField.isFinal() &&
-              refUtil.compareAccess(refUtil.getAccessModifier(psi), getAccessModifier()) >= 0) {
-            newTemplate = PsiFormatUtil.formatVariable(psi, PsiFormatUtilBase.SHOW_NAME |
-                                                            PsiFormatUtilBase.SHOW_CONTAINING_CLASS |
-                                                            PsiFormatUtilBase.SHOW_FQ_NAME, PsiSubstitutor.EMPTY);
-          }
-        }
-      }
-      else if (refUtil.isCallToSuperMethod(expression, (UMethod)getUastElement())) return;
+      if (RefJavaUtil.getInstance().isCallToSuperMethod(expression, getUastElement())) return;
+      String newTemplate = createReturnValueTemplate(expression, this);
 
       synchronized (this) {
-        //noinspection StringEquality
-        if (myReturnValueTemplate == RETURN_VALUE_UNDEFINED) {
+        if (Strings.areSameInstance(myReturnValueTemplate, RETURN_VALUE_UNDEFINED)) {
           myReturnValueTemplate = newTemplate;
         }
         else if (!Objects.equals(myReturnValueTemplate, newTemplate)) {
@@ -577,40 +525,39 @@ public class RefMethodImpl extends RefJavaElementImpl implements RefMethod {
     }
   }
 
-  void updateParameterValues(List<UExpression> args, @Nullable PsiElement elementPlace) {
+  void updateParameterValues(@NotNull UCallExpression call, @Nullable PsiElement elementPlace) {
     LOG.assertTrue(isInitialized());
+    if (call.getValueArguments().isEmpty()) return;
     if (isExternalOverride()) return;
 
     if (!getSuperMethods().isEmpty()) {
       for (RefMethod refSuper : getSuperMethods()) {
-        refSuper.waitForInitialized();
-        ((RefMethodImpl)refSuper).updateParameterValues(args, null);
+        refSuper.initializeIfNeeded();
+        ((RefMethodImpl)refSuper).updateParameterValues(call, null);
       }
     }
     else {
       final RefParameter[] params = getParameters();
-      for (int i = 0; i < Math.min(params.length, args.size()); i++) {
-        ((RefParameterImpl)params[i]).updateTemplateValue(args.get(i), elementPlace);
-      }
-
-      if (params.length != args.size() && params.length != 0) {
-        ((RefParameterImpl)params[params.length - 1]).clearTemplateValue();
+      for (int i = 0; i < params.length; i++) {
+        ((RefParameterImpl)params[i]).updateTemplateValue(call.getArgumentForParameter(i), elementPlace);
       }
     }
   }
 
   @Override
   public synchronized String getReturnValueIfSame() {
-    //noinspection StringEquality
-    if (myReturnValueTemplate == RETURN_VALUE_UNDEFINED) return null;
+    if (Strings.areSameInstance(myReturnValueTemplate, RETURN_VALUE_UNDEFINED)) return null;
     return myReturnValueTemplate;
   }
 
   public void updateThrowsList(PsiClassType exceptionType) {
     LOG.assertTrue(isInitialized());
-    for (RefMethod refSuper : getSuperMethods()) {
-      ((RefMethodImpl)refSuper).updateThrowsList(exceptionType);
-    }
+    myManager.executeTask(() -> {
+      for (RefMethod refSuper : getSuperMethods()) {
+        refSuper.initializeIfNeeded();
+        ((RefMethodImpl)refSuper).updateThrowsList(exceptionType);
+      }
+    });
     synchronized (this) {
       List<String> unThrownExceptions = myUnThrownExceptions;
       if (unThrownExceptions != null) {
@@ -675,17 +622,22 @@ public class RefMethodImpl extends RefJavaElementImpl implements RefMethod {
     setFlag(constructor, IS_CONSTRUCTOR_MASK);
   }
 
+  private void setRecordAccessor(boolean accessor) {
+    setFlag(accessor, IS_RECORD_ACCESSOR_MASK);
+  }
+
   @Override
   public boolean isTestMethod() {
-    return checkFlag(IS_TEST_METHOD_MASK);
-  }
-
-  private void setTestMethod(boolean testMethod) {
-    setFlag(testMethod, IS_TEST_METHOD_MASK);
+    return TestFrameworks.getInstance().isTestMethod(getUastElement().getJavaPsi());
   }
 
   @Override
-  public UDeclaration getUastElement() {
+  public boolean isRecordAccessor() {
+    return checkFlag(IS_RECORD_ACCESSOR_MASK);
+  }
+
+  @Override
+  public UMethod getUastElement() {
     return UastContextKt.toUElement(getPsiElement(), UMethod.class);
   }
 
@@ -700,17 +652,13 @@ public class RefMethodImpl extends RefJavaElementImpl implements RefMethod {
 
   public static boolean isEmptyExpression(@Nullable UExpression expression) {
     if (expression == null) return true;
-    if (expression instanceof UBlockExpression) return ((UBlockExpression)expression).getExpressions().isEmpty();
-    return false;
+    return expression instanceof UBlockExpression blockExpression && blockExpression.getExpressions().isEmpty();
   }
 
   @Nullable
   static RefElement findParentRef(@NotNull PsiElement psiElement, @NotNull UElement uElement, @NotNull RefManagerImpl refManager) {
     UDeclaration containingUDecl = UDeclarationKt.getContainingDeclaration(uElement);
-    PsiElement containingDeclaration = containingUDecl == null ? null : containingUDecl.getSourcePsi();
-    if (containingDeclaration instanceof LightElement) {
-      containingDeclaration = containingDeclaration.getNavigationElement();
-    }
+    PsiElement containingDeclaration = RefJavaUtilImpl.returnToPhysical(containingUDecl == null ? null : containingUDecl.getSourcePsi());
     final RefElement parentRef;
     //TODO strange
     if (containingDeclaration == null || containingDeclaration instanceof LightElement) {
@@ -720,5 +668,45 @@ public class RefMethodImpl extends RefJavaElementImpl implements RefMethod {
       parentRef = refManager.getReference(containingDeclaration, true);
     }
     return parentRef;
+  }
+
+  /**
+   * Returns the string representation of the {@code UExpression} argument if the
+   * expression is either a {@code ULiteralExpression} or a {@code UResolvable}
+   * that resolves to a constant.
+   *
+   * @param expression an {@code UExpression}.
+   * @return the string representation of a literal expression value if the
+   * argument is a {@code UExpression}, or the fully qualified name of a
+   * constant if the argument is a {@code UExpression} and resolves to a
+   * constant, or {@code null} in all other cases.
+   */
+  @Contract("null -> null")
+  public static @Nullable String createReturnValueTemplate(@Nullable UExpression expression) {
+    return createReturnValueTemplate(expression, Predicates.alwaysTrue());
+  }
+
+  private static @Nullable String createReturnValueTemplate(UExpression expression, @NotNull RefMethodImpl refMethod) {
+    RefJavaUtil refUtil = RefJavaUtil.getInstance();
+    return createReturnValueTemplate(expression,
+                                     field -> refUtil.compareAccess(refUtil.getAccessModifier(field), refMethod.getAccessModifier()) >= 0);
+  }
+
+  private static @Nullable String createReturnValueTemplate(UExpression expression, @NotNull Predicate<PsiField> predicate) {
+    if (expression instanceof ULiteralExpression literalExpression) {
+      return String.valueOf(literalExpression.getValue());
+    }
+    else if (expression instanceof UResolvable resolvable) {
+      UElement resolved = UResolvableKt.resolveToUElement(resolvable);
+      if (resolved instanceof UField uField && uField.isStatic() && uField.isFinal()) {
+        PsiField psi = (PsiField)uField.getJavaPsi();
+        if (psi != null && predicate.test(psi)) {
+          return PsiFormatUtil.formatVariable(psi, PsiFormatUtilBase.SHOW_NAME |
+                                                   PsiFormatUtilBase.SHOW_CONTAINING_CLASS |
+                                                   PsiFormatUtilBase.SHOW_FQ_NAME, PsiSubstitutor.EMPTY);
+        }
+      }
+    }
+    return null;
   }
 }
