@@ -1,16 +1,19 @@
-// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.java.codeInsight.daemon
 
 import com.intellij.codeInsight.daemon.impl.JavaHighlightInfoTypes
 import com.intellij.codeInsight.daemon.impl.analysis.JavaModuleGraphUtil
 import com.intellij.codeInsight.intention.IntentionActionDelegate
+import com.intellij.codeInspection.IllegalDependencyOnInternalPackageInspection
 import com.intellij.codeInspection.deprecation.DeprecationInspection
 import com.intellij.codeInspection.deprecation.MarkedForRemovalInspection
 import com.intellij.java.testFramework.fixtures.LightJava9ModulesCodeInsightFixtureTestCase
 import com.intellij.java.testFramework.fixtures.MultiModuleJava9ProjectDescriptor.ModuleDescriptor
 import com.intellij.java.testFramework.fixtures.MultiModuleJava9ProjectDescriptor.ModuleDescriptor.*
+import com.intellij.openapi.module.Module
 import com.intellij.openapi.roots.ProjectRootManager
 import com.intellij.openapi.util.TextRange
+import com.intellij.psi.JavaCompilerConfigurationProxy
 import com.intellij.psi.PsiManager
 import com.intellij.psi.search.GlobalSearchScope
 import com.intellij.psi.search.ProjectScope
@@ -24,6 +27,15 @@ class ModuleHighlightingTest : LightJava9ModulesCodeInsightFixtureTestCase() {
 
     addFile("module-info.java", "module M2 { }", M2)
     addFile("module-info.java", "module M3 { }", M3)
+  }
+
+  private fun withCompileArguments(module: Module = getModule(), vararg arguments: String, test: () -> Unit) {
+    try {
+      JavaCompilerConfigurationProxy.setAdditionalOptions(project, module, arguments.toList())
+      test()
+    } finally {
+      JavaCompilerConfigurationProxy.setAdditionalOptions(project, module, emptyList())
+    }
   }
 
   fun testPackageStatement() {
@@ -41,6 +53,16 @@ class ModuleHighlightingTest : LightJava9ModulesCodeInsightFixtureTestCase() {
     assertEquals(2, keywords.size)
     assertEquals(TextRange(0, 6), TextRange(keywords[0].startOffset, keywords[0].endOffset))
     assertEquals(TextRange(11, 18), TextRange(keywords[1].startOffset, keywords[1].endOffset))
+  }
+
+  fun testDependencyOnIllegalPackage() {
+    addFile("a/secret/Secret.java", "package a.secret;\npublic class Secret {}", M4)
+    addFile("module-info.java", "module M4 { exports pkg.module; }", M4)
+    myFixture.enableInspections(IllegalDependencyOnInternalPackageInspection())
+    myFixture.configureByText("C.java", "package pkg;\n" +
+                                        "import a.secret.*;\n" +
+                                        "public class C {<error descr=\"Illegal dependency: module 'M4' doesn't export package 'a.secret'\">Secret</error> s; }")
+    myFixture.checkHighlighting()
   }
 
   fun testWrongFileName() {
@@ -334,6 +356,58 @@ class ModuleHighlightingTest : LightJava9ModulesCodeInsightFixtureTestCase() {
     highlight("test.java", highlightText, M_TEST, isTest = true)
   }
 
+  fun testPatchingJavaBase() {
+    highlight("Main.java", """
+      package <error descr="Package 'lang' exists in another module: java.base">java.lang</error>;
+      public class Main {}
+    """.trimIndent())
+    withCompileArguments(module, "--patch-module=java.base=/src") {
+      highlight("Main.java", """
+       package java.lang;
+       public class Main {}
+     """.trimIndent())
+    }
+  }
+
+  fun testAddReadsDependingOnSourceModule() {
+    addFile("pkg/m4/C4.java", """
+      package pkg.m4;     
+      public class C4 { }
+    """.trimIndent(), M4)
+    myFixture.addFileToProject("module-info.java", "module M { }")
+    highlight("TestFoo.java", """
+      import <error descr="Package 'pkg.m4' is declared in the unnamed module, but module 'M' does not read it">pkg.m4</error>.C4;
+      public class TestFoo { }
+    """.trimIndent())
+    withCompileArguments(module, "--add-reads", "M=ALL-UNNAMED") {
+      highlight("TestBar.java", """
+        import pkg.m4.C4;
+        public class TestBar { }
+    """.trimIndent())
+    }
+  }
+
+  fun testAddReadsDependingOnLibrary() {
+    myFixture.addFileToProject("module-info.java", "module M { }")
+    highlight("TestFoo.java", """
+      import <error descr="Package 'pkg.lib2' is declared in module 'lib.auto', but module 'M' does not read it">pkg.lib2</error>.LC2;
+      public class TestFoo { }
+    """.trimIndent())
+    withCompileArguments(module, "--add-reads", "M=ALL-UNNAMED") {
+      highlight("TestBar.java", """
+        import pkg.lib2.LC2; 
+        public class TestBar { }
+    """.trimIndent())
+    }
+  }
+  
+  fun testNoModuleInfoSamePackageAsInAttachedLibraryWithModuleInfo() {
+    highlight("Main.java", """
+      package lib.named;
+      public class Main {}
+    """.trimIndent())
+  }
+
   fun testPrivateJdkPackage() {
     addFile("module-info.java", "module M { }")
     highlight("test.java", """
@@ -486,6 +560,44 @@ class ModuleHighlightingTest : LightJava9ModulesCodeInsightFixtureTestCase() {
         }""".trimIndent())
   }
 
+  fun testAutomaticModuleFromIdeaModule() {
+    highlight("module-info.java", """
+        module M {
+          requires ${M6.moduleName.replace('_', '.')};  // `light.idea.test.m6`
+          requires <error descr="Module not found: m42">m42</error>;
+        }""".trimIndent())
+
+    addFile("p/B.java", "package p; public class B {}", module = M6)
+    addFile("p/C.java", "package p; public class C {}", module = M4)
+    highlight("A.java", """
+        public class A extends p.B {
+          private <error descr="Package 'p' is declared in the unnamed module, but module 'M' does not read it">p</error>.C c;
+        }
+        """.trimIndent())
+  }
+
+  fun testAutomaticModuleFromManifest() {
+    addResourceFile(JarFile.MANIFEST_NAME, "Automatic-Module-Name: m6.bar\n", module = M6)
+    highlight("module-info.java", "module M { requires m6.bar; }")
+
+    addFile("p/B.java", "package p; public class B {}", module = M6)
+    addFile("p/C.java", "package p; public class C {}", module = M4)
+    highlight("A.java", """
+        public class A extends p.B {
+          private <error descr="Package 'p' is declared in the unnamed module, but module 'M' does not read it">p</error>.C c;
+        }
+        """.trimIndent())
+  }
+
+  fun testAutomaticModuleFromManifestHighlighting() {
+    addResourceFile(JarFile.MANIFEST_NAME, "Automatic-Module-Name: m6.bar\n", module = M6)
+    addFile("p/B.java", "package p; public class B {}", M7)
+    addFile("module-info.java", "module M4 { exports p; }", M7)
+    highlight("A.java", """
+        public class A extends p.B {}
+        """.trimIndent(), M6, false)
+  }
+
   fun testLightModuleDescriptorCaching() {
     val libClass = myFixture.javaFacade.findClass("pkg.lib2.LC2", ProjectScope.getLibrariesScope(project))!!
     val libModule = JavaModuleGraphUtil.findDescriptorByElement(libClass)!!
@@ -500,7 +612,26 @@ class ModuleHighlightingTest : LightJava9ModulesCodeInsightFixtureTestCase() {
   fun testModuleInSources() {
     val classInLibrary = myFixture.javaFacade.findClass("lib.named.C", GlobalSearchScope.allScope(project))!!
     val elementInSources = classInLibrary.navigationElement
-    assertThat(JavaModuleGraphUtil.findDescriptorByFile (PsiUtilCore.getVirtualFile(elementInSources), project)).isNotNull
+    assertThat(JavaModuleGraphUtil.findDescriptorByFile(PsiUtilCore.getVirtualFile(elementInSources), project)).isNotNull
+  }
+
+  fun testMultiReleaseJarParts() {
+    addFile("pkg/I.java", """
+      package pkg;
+      public interface I {
+        String m();
+      }""".trimIndent(), MR_MAIN)
+    addFile("pkg/Impl.java", """
+      package pkg;
+      public class Impl implements I {
+        public String m() { return "main impl"; }
+      }""".trimIndent(), MR_MAIN)
+    addFile("module-info.java", "module light.idea.test.mr { }", MR_JAVA9)
+    highlight("pkg/Impl.java", """
+      package pkg;
+      public class Impl implements I {
+        public String m() { return "alt impl"; }
+      }""".trimIndent(), MR_JAVA9)
   }
 
   //<editor-fold desc="Helpers.">
