@@ -1,12 +1,12 @@
-// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.incremental;
 
-import com.google.common.collect.Lists;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.util.*;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.tracing.Tracer;
+import com.intellij.util.ReflectionUtil;
 import com.intellij.util.SmartList;
 import com.intellij.util.concurrency.AppExecutorUtil;
 import com.intellij.util.containers.CollectionFactory;
@@ -52,7 +52,6 @@ import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.Method;
-import java.lang.reflect.Proxy;
 import java.nio.file.FileSystem;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
@@ -110,7 +109,7 @@ public final class IncProjectBuilder {
   private final boolean myIsTestMode;
 
   private final int myTotalModuleLevelBuilderCount;
-  private final List<Future> myAsyncTasks = Collections.synchronizedList(new ArrayList<>());
+  private final List<Future<?>> myAsyncTasks = Collections.synchronizedList(new ArrayList<>());
   private final ConcurrentMap<Builder, AtomicLong> myElapsedTimeNanosByBuilder = new ConcurrentHashMap<>();
   private final ConcurrentMap<Builder, AtomicInteger> myNumberOfSourcesProcessedByBuilder = new ConcurrentHashMap<>();
 
@@ -205,7 +204,7 @@ public final class IncProjectBuilder {
     catch (StopBuildException e) {
       reportRebuiltModules(context);
       reportUnprocessedChanges(context);
-      // If build was canceled for some reasons e.g compilation error we should report built modules
+      // If build was canceled for some reasons e.g., compilation error we should report built modules
       sourcesState.reportSourcesState();
       // some builder decided to stop the build
       // report optional progress message if any
@@ -249,7 +248,7 @@ public final class IncProjectBuilder {
       // wait for async tasks
       final CanceledStatus status = context == null ? CanceledStatus.NULL : context.getCancelStatus();
       synchronized (myAsyncTasks) {
-        for (Future task : myAsyncTasks) {
+        for (Future<?> task : myAsyncTasks) {
           if (status.isCanceled()) {
             break;
           }
@@ -261,14 +260,18 @@ public final class IncProjectBuilder {
   }
 
   private void checkRebuildRequired(final CompileScope scope) throws RebuildRequestedException {
-    if (myIsTestMode) {
+    if (myIsTestMode || isAutoBuild()) {
       // do not use the heuristic in tests in order to properly test all cases
+      // automatic builds should not cause start full project rebuilds to avoid situations when rebuild is not expected by user
       return;
     }
     final BuildTargetsState targetsState = myProjectDescriptor.getTargetsState();
     final long timeThreshold = targetsState.getLastSuccessfulRebuildDuration() * 95 / 100; // 95% of last registered clean rebuild time
     if (timeThreshold <= 0) {
-      return; // no stats available
+      if (LOG.isDebugEnabled()) {
+        LOG.debug("Rebuild heuristic: no stats available");
+      }
+      return;
     }
     // check that this is a whole-project incremental build
     // checking only JavaModuleBuildTargetType because these target types directly correspond to project modules
@@ -278,30 +281,14 @@ public final class IncProjectBuilder {
       }
     }
     // compute estimated times for dirty targets
-    long estimatedWorkTime = 0L;
-
-    final Predicate<BuildTarget<?>> isAffected = new Predicate<BuildTarget<?>>() {
+    final long estimatedWorkTime = calculateEstimatedBuildTime(myProjectDescriptor, new Predicate<>() {
       private final Set<BuildTargetType<?>> allTargetsAffected = new HashSet<>(JavaModuleBuildTargetType.ALL_TYPES);
       @Override
       public boolean test(BuildTarget<?> target) {
         // optimization, since we know here that all targets of types JavaModuleBuildTargetType are affected
         return allTargetsAffected.contains(target.getTargetType()) || scope.isAffected(target);
       }
-    };
-    final BuildTargetIndex targetIndex = myProjectDescriptor.getBuildTargetIndex();
-    for (BuildTarget<?> target : targetIndex.getAllTargets()) {
-      if (!targetIndex.isDummy(target)) {
-        final long avgTimeToBuild = targetsState.getAverageBuildTime(target.getTargetType());
-        if (avgTimeToBuild > 0) {
-          // 1. in general case this time should include dependency analysis and cache update times
-          // 2. need to check isAffected() since some targets (like artifacts) may be unaffected even for rebuild
-          if (targetsState.getTargetConfiguration(target).isTargetDirty(myProjectDescriptor) && isAffected.test(target)) {
-            estimatedWorkTime += avgTimeToBuild;
-          }
-        }
-      }
-    }
-
+    });
     if (LOG.isDebugEnabled()) {
       LOG.debug("Rebuild heuristic: estimated build time / timeThreshold : " + estimatedWorkTime + " / " + timeThreshold);
     }
@@ -317,6 +304,30 @@ public final class IncProjectBuilder {
     }
   }
 
+  public static long calculateEstimatedBuildTime(ProjectDescriptor projectDescriptor, Predicate<BuildTarget<?>> isAffected) {
+    final BuildTargetsState targetsState = projectDescriptor.getTargetsState();
+    // compute estimated times for dirty targets
+    long estimatedBuildTime = 0L;
+
+    final BuildTargetIndex targetIndex = projectDescriptor.getBuildTargetIndex();
+    int affectedTargets = 0;
+    for (BuildTarget<?> target : targetIndex.getAllTargets()) {
+      if (!targetIndex.isDummy(target)) {
+        final long avgTimeToBuild = targetsState.getAverageBuildTime(target.getTargetType());
+        if (avgTimeToBuild > 0) {
+          // 1. in general case this time should include dependency analysis and cache update times
+          // 2. need to check isAffected() since some targets (like artifacts) may be unaffected even for rebuild
+          if (targetsState.getTargetConfiguration(target).isTargetDirty(projectDescriptor) && isAffected.test(target)) {
+            estimatedBuildTime += avgTimeToBuild;
+            affectedTargets++;
+          }
+        }
+      }
+    }
+    LOG.info("Affected build targets count: " + affectedTargets);
+    return estimatedBuildTime;
+  }
+
   private void requestRebuild(Exception e, Throwable cause) throws RebuildRequestedException {
     myMessageDispatcher.processMessage(new CompilerMessage(
       "", BuildMessage.Kind.INFO, JpsBuildBundle.message("build.message.internal.caches.are.corrupted", e.getMessage()))
@@ -324,7 +335,7 @@ public final class IncProjectBuilder {
     throw new RebuildRequestedException(cause);
   }
 
-  private static void waitForTask(@NotNull CanceledStatus status, Future task) {
+  private static void waitForTask(@NotNull CanceledStatus status, Future<?> task) {
     try {
       while (true) {
         try {
@@ -379,9 +390,12 @@ public final class IncProjectBuilder {
     }
   }
 
-  private static boolean isParallelBuild(CompileContext context) {
-    return Boolean.parseBoolean(context.getBuilderParameter(BuildParametersKeys.IS_AUTOMAKE)) ?
-           BuildRunner.isParallelBuildAutomakeEnabled() : BuildRunner.isParallelBuildEnabled();
+  private boolean isAutoBuild() {
+    return Boolean.parseBoolean(myBuilderParams.get(BuildParametersKeys.IS_AUTOMAKE));
+  }
+
+  private boolean isParallelBuild() {
+    return isAutoBuild() ? BuildRunner.isParallelBuildAutomakeEnabled() : BuildRunner.isParallelBuildEnabled();
   }
 
   private void runBuild(final CompileContextImpl context, boolean forceCleanCaches) throws ProjectBuildException {
@@ -392,7 +406,7 @@ public final class IncProjectBuilder {
              "; isMake:" +
              context.isMake() +
              " parallel compilation:" +
-             isParallelBuild(context));
+             isParallelBuild());
 
     context.addBuildListener(new ChainedTargetsBuildListener(context));
 
@@ -427,7 +441,7 @@ public final class IncProjectBuilder {
       }
     });
     Tracer.Span allTargetBuilderBuildStartedSpan = Tracer.start("All TargetBuilder.buildStarted");
-    for (TargetBuilder builder : myBuilderRegistry.getTargetBuilders()) {
+    for (TargetBuilder<?, ?> builder : myBuilderRegistry.getTargetBuilders()) {
       builder.buildStarted(context);
     }
     allTargetBuilderBuildStartedSpan.complete();
@@ -474,7 +488,7 @@ public final class IncProjectBuilder {
           myProjectDescriptor.getTargetsState().setLastSuccessfulRebuildDuration(buildProgress.getAbsoluteBuildTime());
         }
       }
-      for (TargetBuilder builder : myBuilderRegistry.getTargetBuilders()) {
+      for (TargetBuilder<?, ?> builder : myBuilderRegistry.getTargetBuilders()) {
         builder.buildFinished(context);
       }
       for (ModuleLevelBuilder builder : myBuilderRegistry.getModuleLevelBuilders()) {
@@ -534,20 +548,28 @@ public final class IncProjectBuilder {
   private void cleanOutputRoots(CompileContext context, boolean cleanCaches) throws ProjectBuildException {
     final ProjectDescriptor projectDescriptor = context.getProjectDescriptor();
     ProjectBuildException ex = null;
+    final ExecutorService cleanupExecutor = AppExecutorUtil.createBoundedApplicationPoolExecutor("IncProjectBuilder Output Cleanup Pool", SharedThreadPool.getInstance(), MAX_BUILDER_THREADS);
+    final List<Future<?>> cleanupTasks = new ArrayList<>();
+    final long cleanStart = System.nanoTime();
     try {
       final JpsJavaCompilerConfiguration configuration = JpsJavaExtensionService.getInstance().getCompilerConfiguration(projectDescriptor.getProject());
-      final boolean shouldClear = configuration.isClearOutputDirectoryOnRebuild();
-      if (shouldClear) {
-        clearOutputs(context);
+      if (configuration.isClearOutputDirectoryOnRebuild()) {
+        clearOutputs(context, cleanupExecutor, cleanupTasks);
       }
       else {
         for (BuildTarget<?> target : projectDescriptor.getBuildTargetIndex().getAllTargets()) {
           context.checkCanceled();
           if (context.getScope().isBuildForced(target)) {
-            clearOutputFilesUninterruptibly(context, target);
+            if (SYNC_DELETE) {
+              clearOutputFilesUninterruptibly(context, target);
+            }
+            else {
+              cleanupTasks.add(cleanupExecutor.submit(() -> clearOutputFilesUninterruptibly(context, target)));
+            }
           }
         }
       }
+
       for (BuildTargetType<?> type : TargetTypeRegistry.getInstance().getTargetTypes()) {
         if (context.getScope().isAllTargetsOfTypeAffected(type)) {
           cleanOutputOfStaleTargets(type, context);
@@ -558,6 +580,15 @@ public final class IncProjectBuilder {
       ex = e;
     }
     finally {
+      for (Future<?> task : cleanupTasks) {
+        try {
+          task.get();
+        }
+        catch (Throwable e) {
+          LOG.info(e);
+        }
+      }
+      LOG.info("Cleaned output directories in " + TimeUnit.NANOSECONDS.toMillis(System.nanoTime() - cleanStart) + " ms");
       if (cleanCaches) {
         try {
           projectDescriptor.getProjectStamps().getStampStorage().clean();
@@ -572,7 +603,7 @@ public final class IncProjectBuilder {
         }
         finally {
           try {
-            projectDescriptor.dataManager.clean();
+            projectDescriptor.dataManager.clean(myAsyncTasks::add);
           }
           catch (IOException e) {
             if (ex == null) {
@@ -683,7 +714,7 @@ public final class IncProjectBuilder {
   private static Set<BuildTarget<?>> getTargetsWithClearedOutput(CompileContext context) {
     synchronized (TARGET_WITH_CLEARED_OUTPUT) {
       Set<BuildTarget<?>> data = context.getUserData(TARGET_WITH_CLEARED_OUTPUT);
-      return data != null? Collections.unmodifiableSet(new HashSet<>(data)) : Collections.emptySet();
+      return data != null ? Set.copyOf(data) : Collections.emptySet();
     }
   }
 
@@ -711,8 +742,7 @@ public final class IncProjectBuilder {
     }
   }
 
-  private void clearOutputs(CompileContext context) throws ProjectBuildException {
-    final long cleanStart = System.nanoTime();
+  private void clearOutputs(CompileContext context, final ExecutorService cleanupExecutor, final List<Future<?>> cleanupTasks) throws ProjectBuildException {
     final MultiMap<File, BuildTarget<?>> rootsToDelete = MultiMap.createSet();
     final Set<File> allSourceRoots = FileCollectionFactory.createCanonicalFileSet();
 
@@ -726,7 +756,12 @@ public final class IncProjectBuilder {
       }
       else {
         if (context.getScope().isBuildForced(target)) {
-          clearOutputFilesUninterruptibly(context, target);
+          if (SYNC_DELETE) {
+            clearOutputFilesUninterruptibly(context, target);
+          }
+          else {
+            cleanupTasks.add(cleanupExecutor.submit(() -> clearOutputFilesUninterruptibly(context, target)));
+          }
         }
       }
     }
@@ -737,8 +772,9 @@ public final class IncProjectBuilder {
         // excluding from checks roots with generated sources; because it is safe to delete generated stuff
         if (!descriptor.isGenerated()) {
           File rootFile = descriptor.getRootFile();
-          //some roots aren't marked by as generated but in fact they are produced by some builder and it's safe to remove them.
-          //However if a root isn't excluded it means that its content will be shown in 'Project View' and an user can create new files under it so it would be dangerous to clean such roots
+          //some roots aren't marked by as generated but in fact they are produced by some builder, and it's safe to remove them.
+          //However, if a root isn't excluded it means that its content will be shown in 'Project View' and a user can create new files under it,
+          //so it would be dangerous to clean such roots
           if (moduleIndex.isInContent(rootFile)) {
             allSourceRoots.add(rootFile);
           }
@@ -807,7 +843,12 @@ public final class IncProjectBuilder {
         // clean only those files we are aware of
         for (BuildTarget<?> target : rootTargets) {
           if (compileScope.isBuildForced(target)) {
-            clearOutputFilesUninterruptibly(context, target);
+            if (SYNC_DELETE) {
+              clearOutputFilesUninterruptibly(context, target);
+            }
+            else {
+              cleanupTasks.add(cleanupExecutor.submit(() -> clearOutputFilesUninterruptibly(context, target)));
+            }
           }
         }
       }
@@ -825,7 +866,6 @@ public final class IncProjectBuilder {
         myAsyncTasks.add(FileUtil.asyncDelete(filesToDelete));
       }
     }
-    LOG.info("Cleaned output directories in " + TimeUnit.NANOSECONDS.toMillis(System.nanoTime() - cleanStart) + " ms");
   }
 
   private static boolean isEmpty(File outputRoot) {
@@ -857,7 +897,7 @@ public final class IncProjectBuilder {
   private void buildChunks(final CompileContextImpl context, BuildProgress buildProgress) throws ProjectBuildException {
     try {
 
-      boolean compileInParallel = isParallelBuild(context);
+      boolean compileInParallel = isParallelBuild();
       if (compileInParallel && MAX_BUILDER_THREADS <= 1) {
         LOG.info("Switched off parallel compilation because maximum number of builder threads is less than 2. Set '"
                  + GlobalOptions.COMPILE_PARALLEL_MAX_THREADS_OPTION + "' system property to a value greater than 1 to really enable parallel compilation.");
@@ -968,6 +1008,7 @@ public final class IncProjectBuilder {
         task.mySelfScore = chunk.getTargets().size();
       }
 
+      Tracer.Span collectTaskDependantsSpan = Tracer.start("IncProjectBuilder.collectTaskDependants");
       int taskCounter = 0;
       for (BuildChunkTask task : myTasks) {
         task.myIndex = taskCounter;
@@ -981,23 +1022,23 @@ public final class IncProjectBuilder {
           }
         }
       }
-
-      Tracer.Span collectTaskDependantsSpan = Tracer.start("IncProjectBuilder.collectTaskDependants");
-      Map<BuildChunkTask, ? extends Queue<BuildChunkTask>> taskToDependants = collectTaskToDependants(context, targetIndex, targetToTask);
       collectTaskDependantsSpan.complete();
 
 
       Tracer.Span prioritisationSpan = Tracer.start("IncProjectBuilder.prioritisation");
       // bitset stores indexes of transitively dependant tasks
       HashMap<BuildChunkTask, BitSet> chunkToTransitive = new HashMap<>();
-      for (BuildChunkTask task : Lists.reverse(myTasks)) {
-        Queue<BuildChunkTask> dependantTasks = taskToDependants.get(task);
-        Set<BuildChunkTask> directDependants = new HashSet<>(dependantTasks != null ? dependantTasks : Collections.emptyList());
+      for (int i = myTasks.size() - 1; i >= 0; i--) {
+        BuildChunkTask task = myTasks.get(i);
+        List<BuildChunkTask> dependantTasks = task.myTasksDependsOnThis;
+        Set<BuildChunkTask> directDependants = new HashSet<>(dependantTasks);
         BitSet transitiveDependants = new BitSet();
         for (BuildChunkTask directDependant : directDependants) {
           BitSet dependantChunkTransitiveDependants = chunkToTransitive.get(directDependant);
-          transitiveDependants.or(dependantChunkTransitiveDependants);
-          transitiveDependants.set(directDependant.myIndex);
+          if (dependantChunkTransitiveDependants != null) {
+            transitiveDependants.or(dependantChunkTransitiveDependants);
+            transitiveDependants.set(directDependant.myIndex);
+          }
         }
         chunkToTransitive.put(task, transitiveDependants);
         task.myDepsScore = transitiveDependants.cardinality();
@@ -1006,26 +1047,6 @@ public final class IncProjectBuilder {
 
       myTasksCountDown = new CountDownLatch(myTasks.size());
       span.complete();
-    }
-
-    @NotNull
-    private Map<BuildChunkTask, ? extends Queue<BuildChunkTask>> collectTaskToDependants(CompileContext context,
-                                                                                         BuildTargetIndex targetIndex,
-                                                                                         Map<BuildTarget<?>, BuildChunkTask> targetToTask) {
-      ConcurrentHashMap<BuildChunkTask, ConcurrentLinkedQueue<BuildChunkTask>> taskToDependants = new ConcurrentHashMap<>(myTasks.size());
-      myTasks.parallelStream().forEach(task -> {
-        BuildTargetChunk chunk = task.getChunk();
-        for (BuildTarget<?> target : chunk.getTargets()) {
-          Collection<BuildTarget<?>> dependencies = targetIndex.getDependencies(target, context);
-          for (BuildTarget<?> dependency : dependencies) {
-            BuildChunkTask dependencyTask = targetToTask.get(dependency);
-            if (dependencyTask != task) {
-              taskToDependants.computeIfAbsent(dependencyTask, __ -> new ConcurrentLinkedQueue<>()).add(task);
-            }
-          }
-        }
-      });
-      return taskToDependants;
     }
 
     public void buildInParallel() throws IOException, ProjectBuildException {
@@ -1053,9 +1074,9 @@ public final class IncProjectBuilder {
       }
     }
 
-    private void queueTasks(List<? extends BuildChunkTask> tasks) {
+    private void queueTasks(List<BuildChunkTask> tasks) {
       if (tasks.isEmpty()) return;
-      ArrayList<? extends BuildChunkTask> sorted = new ArrayList<>(tasks);
+      ArrayList<BuildChunkTask> sorted = new ArrayList<>(tasks);
       sorted.sort(Comparator.comparingLong(BuildChunkTask::getScore).reversed());
 
       if (LOG.isDebugEnabled()) {
@@ -1182,7 +1203,7 @@ public final class IncProjectBuilder {
 
   private static CompileContext wrapWithModuleInfoAppender(CompileContext context, Collection<ModuleBuildTarget> moduleTargets) {
     final Class<MessageHandler> messageHandlerInterface = MessageHandler.class;
-    return (CompileContext)Proxy.newProxyInstance(context.getClass().getClassLoader(), new Class[] {CompileContext.class}, new InvocationHandler() {
+    return ReflectionUtil.proxy(context.getClass().getClassLoader(), CompileContext.class, new InvocationHandler() {
       @Override
       public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
         if (args != null && args.length > 0 && messageHandlerInterface.equals(method.getDeclaringClass())) {
@@ -1219,20 +1240,24 @@ public final class IncProjectBuilder {
 
     final List<SourceToOutputMapping> mappings = new ArrayList<>();
     for (T target : targets) {
-      final SourceToOutputMapping srcToOut = pd.dataManager.getSourceToOutputMap(target);
-      mappings.add(srcToOut);
-      pd.fsState.processFilesToRecompile(context, target, new FileProcessor<R, T>() {
+      pd.fsState.processFilesToRecompile(context, target, new FileProcessor<>() {
+        private SourceToOutputMapping srcToOut;
         @Override
         public boolean apply(T target, File file, R root) throws IOException {
           final String src = FileUtil.toSystemIndependentName(file.getPath());
           if (affectedSources.add(src)) {
+            if (srcToOut == null) { // lazy init
+              srcToOut = pd.dataManager.getSourceToOutputMap(target);
+              mappings.add(srcToOut);
+            }
             final Collection<String> outs = srcToOut.getOutputs(src);
             if (outs != null) {
               // Temporary hack for KTIJ-197
               // Change of only one input of *.kotlin_module files didn't trigger recompilation of all inputs in old behaviour.
               // Now it does. It isn't yet obvious whether it is right or wrong behaviour. Let's leave old behaviour for a
               // while for safety and keeping kotlin incremental JPS tests green
-              List<String> filteredOuts = ContainerUtil.filter(outs, out -> !"kotlin_module".equals(StringUtil.substringAfterLast(out, ".")));
+              List<String> filteredOuts =
+                ContainerUtil.filter(outs, out -> !"kotlin_module".equals(StringUtil.substringAfterLast(out, ".")));
               affectedOutputs.addAll(filteredOuts);
             }
           }
@@ -1487,7 +1512,7 @@ public final class IncProjectBuilder {
         myProjectDescriptor.fsState.beforeNextRoundStart(context, chunk);
 
         DirtyFilesHolder<JavaSourceRootDescriptor, ModuleBuildTarget> dirtyFilesHolder =
-          new DirtyFilesHolderBase<JavaSourceRootDescriptor, ModuleBuildTarget>(context) {
+          new DirtyFilesHolderBase<>(context) {
             @Override
             public void processDirtyFiles(@NotNull FileProcessor<JavaSourceRootDescriptor, ModuleBuildTarget> processor)
               throws IOException {
@@ -1523,6 +1548,7 @@ public final class IncProjectBuilder {
 
             try {
               for (ModuleLevelBuilder builder : builders) {
+                outputConsumer.setCurrentBuilderName(builder.getPresentableName());
                 processDeletedPaths(context, chunk.getTargets());
                 long start = System.nanoTime();
                 int processedSourcesBefore = outputConsumer.getNumberOfProcessedSources();
@@ -1570,6 +1596,7 @@ public final class IncProjectBuilder {
               }
             }
             finally {
+              outputConsumer.setCurrentBuilderName(null);
               final boolean moreToCompile = JavaBuilderUtil.updateMappingsOnRoundCompletion(context, dirtyFilesHolder, chunk);
               if (moreToCompile) {
                 nextPassRequired = true;
@@ -1634,7 +1661,7 @@ public final class IncProjectBuilder {
     final Set<Object> deletedKeysSet = ContainerUtil.newConcurrentSet();
     final Class<UserDataHolder> dataHolderInterface = UserDataHolder.class;
     final Class<MessageHandler> messageHandlerInterface = MessageHandler.class;
-    return (CompileContext)Proxy.newProxyInstance(delegate.getClass().getClassLoader(), new Class[]{CompileContext.class}, new InvocationHandler() {
+    return ReflectionUtil.proxy(delegate.getClass().getClassLoader(), CompileContext.class, new InvocationHandler() {
       @Override
       public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
         if (args != null) {
