@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.jetbrains.jsonSchema.widget;
 
 import com.intellij.codeInsight.hint.HintUtil;
@@ -21,9 +21,11 @@ import com.intellij.openapi.ui.popup.Balloon;
 import com.intellij.openapi.ui.popup.BalloonBuilder;
 import com.intellij.openapi.ui.popup.JBPopupFactory;
 import com.intellij.openapi.ui.popup.ListPopup;
-import com.intellij.openapi.util.*;
+import com.intellij.openapi.util.Comparing;
 import com.intellij.openapi.util.NlsContexts.StatusBarText;
 import com.intellij.openapi.util.NlsContexts.Tooltip;
+import com.intellij.openapi.util.NlsSafe;
+import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.text.HtmlBuilder;
 import com.intellij.openapi.util.text.HtmlChunk;
 import com.intellij.openapi.util.text.StringUtil;
@@ -37,11 +39,14 @@ import com.intellij.util.Alarm;
 import com.intellij.util.concurrency.AppExecutorUtil;
 import com.intellij.util.concurrency.SynchronizedClearableLazy;
 import com.intellij.util.containers.ContainerUtil;
+import com.intellij.util.messages.MessageBusConnection;
 import com.jetbrains.jsonSchema.JsonSchemaCatalogProjectConfiguration;
+import com.jetbrains.jsonSchema.JsonSchemaMappingsProjectConfiguration;
 import com.jetbrains.jsonSchema.extension.*;
 import com.jetbrains.jsonSchema.ide.JsonSchemaService;
 import com.jetbrains.jsonSchema.impl.JsonSchemaServiceImpl;
 import com.jetbrains.jsonSchema.remote.JsonFileResolver;
+import kotlinx.coroutines.CoroutineScope;
 import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
@@ -56,19 +61,19 @@ import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 
-class JsonSchemaStatusWidget extends EditorBasedStatusBarPopup {
+final class JsonSchemaStatusWidget extends EditorBasedStatusBarPopup {
   public static final String ID = "JSONSchemaSelector";
   private final SynchronizedClearableLazy<JsonSchemaService> myServiceLazy;
   private static final AtomicBoolean myIsNotified = new AtomicBoolean(false);
 
   private final AtomicReference<Pair<VirtualFile, Boolean>> mySuppressInfoRef = new AtomicReference<>();
 
-  private VirtualFile myLastUpdatedFile;
-  private WidgetState mySchemaWidgetState;
+  private volatile Pair<WidgetState, VirtualFile> myLastWidgetStateAndFilePair;
   private ProgressIndicator myCurrentProgress;
 
-  JsonSchemaStatusWidget(@NotNull Project project) {
-    super(project, false);
+  JsonSchemaStatusWidget(@NotNull Project project, @NotNull CoroutineScope scope) {
+    super(project, false, scope);
+
     myServiceLazy = new SynchronizedClearableLazy<>(() -> {
       if (!project.isDisposed()) {
         JsonSchemaService myService = JsonSchemaService.Impl.get(project);
@@ -81,8 +86,7 @@ class JsonSchemaStatusWidget extends EditorBasedStatusBarPopup {
     JsonWidgetSuppressor.EXTENSION_POINT_NAME.addChangeListener(this::update, this);
   }
 
-  @Nullable
-  private JsonSchemaService getService() {
+  private @Nullable JsonSchemaService getService() {
     return myServiceLazy.getValue();
   }
 
@@ -91,7 +95,7 @@ class JsonSchemaStatusWidget extends EditorBasedStatusBarPopup {
     myIsNotified.set(false);
   };
 
-  private static class MyWidgetState extends WidgetState {
+  private static final class MyWidgetState extends WidgetState {
     boolean warning = false;
     boolean conflict = false;
 
@@ -110,10 +114,6 @@ class JsonSchemaStatusWidget extends EditorBasedStatusBarPopup {
 
     private void setConflict() {
       this.conflict = true;
-    }
-
-    private @Tooltip String getTooltip() {
-      return this.toolTip;
     }
   }
 
@@ -143,20 +143,24 @@ class JsonSchemaStatusWidget extends EditorBasedStatusBarPopup {
     if (DumbService.getInstance(project).isDumb()) {
       return WidgetStatus.ENABLED;
     }
-    if (JsonWidgetSuppressor.EXTENSION_POINT_NAME.extensions().anyMatch(s -> s.isCandidateForSuppress(file, project))) {
+    if (ContainerUtil.exists(JsonWidgetSuppressor.EXTENSION_POINT_NAME.getExtensionList(), s -> s.isCandidateForSuppress(file, project))) {
       return WidgetStatus.MAYBE_SUPPRESSED;
     }
     return WidgetStatus.ENABLED;
   }
 
-  @NotNull
   @Override
-  protected WidgetState getWidgetState(@Nullable VirtualFile file) {
+  protected @NotNull WidgetState getWidgetState(@Nullable VirtualFile file) {
+    Pair<WidgetState, VirtualFile> lastStateAndFilePair = myLastWidgetStateAndFilePair;
+    WidgetState widgetState = calcWidgetState(file, Pair.getFirst(lastStateAndFilePair), Pair.getSecond(lastStateAndFilePair));
+    myLastWidgetStateAndFilePair = new Pair<>(widgetState, file);
+    return widgetState;
+  }
+
+  private @NotNull WidgetState calcWidgetState(@Nullable VirtualFile file,
+                                               @Nullable WidgetState lastWidgetState,
+                                               @Nullable VirtualFile lastFile) {
     Pair<VirtualFile, Boolean> suppressInfo = mySuppressInfoRef.getAndSet(null);
-    WidgetState schemaWidgetState = mySchemaWidgetState;
-    mySchemaWidgetState = null;
-    VirtualFile lastUpdatedFile = myLastUpdatedFile;
-    myLastUpdatedFile = file;
     if (myCurrentProgress != null && !myCurrentProgress.isCanceled()) {
       myCurrentProgress.cancel();
     }
@@ -164,7 +168,7 @@ class JsonSchemaStatusWidget extends EditorBasedStatusBarPopup {
     if (file == null) {
       return WidgetState.HIDDEN;
     }
-    WidgetStatus status = getWidgetStatus(myProject, file);
+    WidgetStatus status = getWidgetStatus(getProject(), file);
     if (status == WidgetStatus.DISABLED) {
       return WidgetState.HIDDEN;
     }
@@ -173,7 +177,7 @@ class JsonSchemaStatusWidget extends EditorBasedStatusBarPopup {
     Language language = fileType instanceof LanguageFileType ? ((LanguageFileType)fileType).getLanguage() : null;
     boolean isJsonFile = language instanceof JsonLanguage;
 
-    if (DumbService.getInstance(myProject).isDumb()) {
+    if (DumbService.getInstance(getProject()).isDumb()) {
       return getDumbModeState(isJsonFile);
     }
 
@@ -183,7 +187,7 @@ class JsonSchemaStatusWidget extends EditorBasedStatusBarPopup {
         scheduleSuppressCheck(file, myCurrentProgress);
 
         // show 'loading' only when switching between files and previous state was not hidden, otherwise the widget will "jump"
-        if (!Comparing.equal(lastUpdatedFile, file) && schemaWidgetState != null && schemaWidgetState != WidgetState.HIDDEN) {
+        if (!Comparing.equal(lastFile, file) && lastWidgetState != null && lastWidgetState != WidgetState.HIDDEN) {
           return new WidgetState(JsonBundle.message("schema.widget.checking.state.tooltip"),
                                  JsonBundle.message("schema.widget.checking.state.text",
                                                     isJsonFile ? JsonBundle.message("schema.widget.prefix.json.files")
@@ -199,14 +203,13 @@ class JsonSchemaStatusWidget extends EditorBasedStatusBarPopup {
       }
     }
 
-    WidgetState state = doGetWidgetState(file, isJsonFile);
-    mySchemaWidgetState = state;
-    return state;
+    return doGetWidgetState(file, isJsonFile);
   }
 
-  private WidgetState doGetWidgetState(@NotNull VirtualFile file, boolean isJsonFile) {
+  private @NotNull WidgetState doGetWidgetState(@NotNull VirtualFile file, boolean isJsonFile) {
     JsonSchemaService service = getService();
-    if (service == null) {
+    JsonSchemaMappingsProjectConfiguration userMappingsConfiguration = JsonSchemaMappingsProjectConfiguration.getInstance(myProject);
+    if (service == null || userMappingsConfiguration.isIgnoredFile(file)) {
       return getNoSchemaState();
     }
     Collection<VirtualFile> schemaFiles = service.getSchemaFilesForFile(file);
@@ -246,16 +249,19 @@ class JsonSchemaStatusWidget extends EditorBasedStatusBarPopup {
 
       //noinspection EnumSwitchStatementWhichMissesCases
       switch (info.getState()) {
-        case DOWNLOADING_NOT_STARTED:
+        case DOWNLOADING_NOT_STARTED -> {
           addDownloadingUpdateListener(info);
           return new MyWidgetState(tooltip + getSchemaFileDesc(schemaFile), bar + getPresentableNameForFile(schemaFile),
                                    true);
-        case DOWNLOADING_IN_PROGRESS:
+        }
+        case DOWNLOADING_IN_PROGRESS -> {
           addDownloadingUpdateListener(info);
           return new MyWidgetState(JsonBundle.message("schema.widget.download.in.progress.tooltip"),
                                    JsonBundle.message("schema.widget.download.in.progress.label"), false);
-        case ERROR_OCCURRED:
+        }
+        case ERROR_OCCURRED -> {
           return getDownloadErrorState(info.getErrorMessage());
+        }
       }
     }
 
@@ -268,7 +274,7 @@ class JsonSchemaStatusWidget extends EditorBasedStatusBarPopup {
 
     JsonSchemaFileProvider provider = service.getSchemaProvider(schemaFile);
     if (provider != null) {
-      final boolean preferRemoteSchemas = JsonSchemaCatalogProjectConfiguration.getInstance(myProject).isPreferRemoteSchemas();
+      final boolean preferRemoteSchemas = JsonSchemaCatalogProjectConfiguration.getInstance(getProject()).isPreferRemoteSchemas();
       final String remoteSource = provider.getRemoteSource();
       boolean useRemoteSource = preferRemoteSchemas && remoteSource != null
                                 && !JsonFileResolver.isSchemaUrl(remoteSource)
@@ -291,12 +297,13 @@ class JsonSchemaStatusWidget extends EditorBasedStatusBarPopup {
 
   private void scheduleSuppressCheck(@NotNull VirtualFile file, @NotNull ProgressIndicator globalProgress) {
     Runnable update = () -> {
-      if (DumbService.getInstance(myProject).isDumb()) {
+      if (DumbService.getInstance(getProject()).isDumb()) {
         // Suppress check should be rescheduled when dumb mode ends.
         mySuppressInfoRef.set(null);
       }
       else {
-        boolean suppress = JsonWidgetSuppressor.EXTENSION_POINT_NAME.extensions().anyMatch(s -> s.suppressSwitcherWidget(file, myProject));
+        boolean suppress = ContainerUtil.exists(JsonWidgetSuppressor.EXTENSION_POINT_NAME.getExtensionList(),
+                                                s -> s.suppressSwitcherWidget(file, getProject()));
         mySuppressInfoRef.set(Pair.create(file, suppress));
       }
       super.update(null);
@@ -347,8 +354,7 @@ class JsonSchemaStatusWidget extends EditorBasedStatusBarPopup {
     return service != null && service.isSchemaFile(schemaFile) && service.isApplicableToFile(schemaFile);
   }
 
-  @Nullable
-  private static @NlsSafe String extractNpmPackageName(@Nullable String path) {
+  private static @Nullable @NlsSafe String extractNpmPackageName(@Nullable String path) {
     if (path == null) return null;
     int idx = path.indexOf("node_modules");
     if (idx != -1) {
@@ -370,8 +376,7 @@ class JsonSchemaStatusWidget extends EditorBasedStatusBarPopup {
     return null;
   }
 
-  @NotNull
-  private static @Nls String getPresentableNameForFile(@NotNull VirtualFile schemaFile) {
+  private static @NotNull @Nls String getPresentableNameForFile(@NotNull VirtualFile schemaFile) {
     if (schemaFile instanceof HttpVirtualFile) {
       return new JsonSchemaInfo(schemaFile.getUrl()).getDescription();
     }
@@ -385,8 +390,7 @@ class JsonSchemaStatusWidget extends EditorBasedStatusBarPopup {
     return npmPackageName != null ? npmPackageName : schemaFile.getName();
   }
 
-  @NotNull
-  private static WidgetState getDownloadErrorState(@Nullable @Nls String message) {
+  private static @NotNull WidgetState getDownloadErrorState(@Nullable @Nls String message) {
     String s = message == null ? "" : (": " + HtmlChunk.br() + message);
     MyWidgetState state = new MyWidgetState(JsonBundle.message("schema.widget.error.cant.download") + s,
                                             JsonBundle.message("schema.widget.error.label"), true);
@@ -394,14 +398,12 @@ class JsonSchemaStatusWidget extends EditorBasedStatusBarPopup {
     return state;
   }
 
-  @NotNull
-  private static WidgetState getNoSchemaState() {
+  private static @NotNull WidgetState getNoSchemaState() {
     return new MyWidgetState(JsonBundle.message("schema.widget.no.schema.tooltip"), JsonBundle.message("schema.widget.no.schema.label"),
                              true);
   }
 
-  @NotNull
-  private static @Nls String getSchemaFileDesc(@NotNull VirtualFile schemaFile) {
+  private static @NotNull @Nls String getSchemaFileDesc(@NotNull VirtualFile schemaFile) {
     if (schemaFile instanceof HttpVirtualFile) {
       return schemaFile.getPresentableUrl();
     }
@@ -411,24 +413,25 @@ class JsonSchemaStatusWidget extends EditorBasedStatusBarPopup {
            (npmPackageName == null ? "" : (" " + JsonBundle.message("schema.widget.package.postfix", npmPackageName)));
   }
 
-  @Nullable
   @Override
-  protected ListPopup createPopup(DataContext context) {
-    final VirtualFile virtualFile = CommonDataKeys.VIRTUAL_FILE.getData(context);
-    if (virtualFile == null) return null;
+  protected @Nullable ListPopup createPopup(@NotNull DataContext context) {
+    VirtualFile file = CommonDataKeys.VIRTUAL_FILE.getData(context);
+    if (file == null) return null;
 
     Project project = getProject();
-    WidgetState popupState = mySchemaWidgetState;
-    if (!(popupState instanceof MyWidgetState) || !virtualFile.equals(myLastUpdatedFile)) return null;
-
-    JsonSchemaService service = getService();
-    if (service == null) return null;
-
-    return JsonSchemaStatusPopup.createPopup(service, project, virtualFile, ((MyWidgetState)popupState).isWarning());
+    Pair<WidgetState, VirtualFile> lastWidgetStateAndFilePair = myLastWidgetStateAndFilePair;
+    WidgetState lastWidgetState = Pair.getFirst(lastWidgetStateAndFilePair);
+    if (lastWidgetState instanceof MyWidgetState && file.equals(Pair.getSecond(lastWidgetStateAndFilePair))) {
+      JsonSchemaService service = getService();
+      if (service != null) {
+        return JsonSchemaStatusPopup.createPopup(service, project, file, ((MyWidgetState)lastWidgetState).isWarning());
+      }
+    }
+    return null;
   }
 
   @Override
-  protected void registerCustomListeners() {
+  protected void registerCustomListeners(@NotNull MessageBusConnection connection) {
     class Listener implements DumbService.DumbModeListener {
       volatile boolean isDumbMode;
 
@@ -445,8 +448,7 @@ class JsonSchemaStatusWidget extends EditorBasedStatusBarPopup {
       }
     }
 
-    Listener listener = new Listener();
-    myConnection.subscribe(DumbService.DUMB_MODE, listener);
+    connection.subscribe(DumbService.DUMB_MODE, new Listener());
   }
 
   @Override
@@ -454,15 +456,13 @@ class JsonSchemaStatusWidget extends EditorBasedStatusBarPopup {
     myIsNotified.set(false);
   }
 
-  @NotNull
   @Override
-  protected StatusBarWidget createInstance(@NotNull Project project) {
-    return new JsonSchemaStatusWidget(project);
+  protected @NotNull StatusBarWidget createInstance(@NotNull Project project) {
+    return new JsonSchemaStatusWidget(project, getScope());
   }
 
-  @NotNull
   @Override
-  public String ID() {
+  public @NotNull String ID() {
     return ID;
   }
 
@@ -478,7 +478,7 @@ class JsonSchemaStatusWidget extends EditorBasedStatusBarPopup {
   }
 
   @SuppressWarnings("SameParameterValue")
-  private static @Tooltip String createMessage(@NotNull final Collection<? extends VirtualFile> schemaFiles,
+  private static @Tooltip String createMessage(final @NotNull Collection<? extends VirtualFile> schemaFiles,
                                                @NotNull JsonSchemaService jsonSchemaService,
                                                @NotNull String separator,
                                                @NotNull @Nls String prefix,
@@ -487,7 +487,7 @@ class JsonSchemaStatusWidget extends EditorBasedStatusBarPopup {
       .map(file -> jsonSchemaService.getSchemaProvider(file))
       .filter(Objects::nonNull)
       .map(provider -> Pair.create(SchemaType.userSchema.equals(provider.getSchemaType()), provider.getName()))
-      .collect(Collectors.toList());
+      .toList();
 
     final long numOfSystemSchemas = pairList.stream().filter(pair -> !pair.getFirst()).count();
     // do not report anything if there is only one system schema and one user schema (user overrides schema that we provide)
@@ -532,7 +532,7 @@ class JsonSchemaStatusWidget extends EditorBasedStatusBarPopup {
       String message = new HtmlBuilder()
         .append(HtmlChunk.tag("b").addText(JsonBundle.message("schema.widget.conflict.popup.title")))
         .append(HtmlChunk.br()).append(HtmlChunk.br())
-        .appendRaw(((MyWidgetState)state).getTooltip()).toString();
+        .appendRaw(state.getToolTip()).toString();
       JComponent label = HintUtil.createErrorLabel(message);
       BalloonBuilder builder = JBPopupFactory.getInstance().createBalloonBuilder(label);
       JComponent statusBarComponent = getComponent();
