@@ -1,7 +1,6 @@
-// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.codeInspection.ex;
 
-import com.google.common.collect.Lists;
 import com.intellij.analysis.AnalysisScope;
 import com.intellij.codeInspection.DefaultInspectionToolResultExporter;
 import com.intellij.codeInspection.InspectionEP;
@@ -13,6 +12,7 @@ import com.intellij.codeInspection.ui.AggregateResultsExporter;
 import com.intellij.codeInspection.ui.GlobalReportedProblemFilter;
 import com.intellij.codeInspection.ui.ReportedProblemFilter;
 import com.intellij.configurationStore.JbXmlOutputter;
+import com.intellij.openapi.application.ReadAction;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.progress.ProcessCanceledException;
 import com.intellij.openapi.project.IndexNotReadyException;
@@ -50,13 +50,13 @@ public class GlobalInspectionContextEx extends GlobalInspectionContextBase {
   private static final int MAX_OPEN_GLOBAL_INSPECTION_XML_RESULT_FILES = SystemProperties
     .getIntProperty("max.open.global.inspection.xml.files", 50);
   private final ConcurrentMap<InspectionToolWrapper<?, ?>, InspectionToolResultExporter> myPresentationMap = new ConcurrentHashMap<>();
-  protected volatile Path myOutputDir;
-  protected GlobalReportedProblemFilter myGlobalReportedProblemFilter;
+  private volatile Path myOutputDir;
+  private GlobalReportedProblemFilter myGlobalReportedProblemFilter;
   private ReportedProblemFilter myReportedProblemFilter;
   private Map<Path, Long> myProfile;
   protected InspectionProblemConsumer myProblemConsumer;
 
-  public GlobalInspectionContextEx(@NotNull Project project) {super(project);}
+  public GlobalInspectionContextEx(@NotNull Project project) { super(project); }
 
   public void launchInspectionsOffline(@NotNull AnalysisScope scope,
                                        @NotNull Path outputPath,
@@ -65,35 +65,34 @@ public class GlobalInspectionContextEx extends GlobalInspectionContextBase {
     performInspectionsWithProgressAndExportResults(scope, runGlobalToolsOnly, true, outputPath, inspectionsResults);
   }
 
-  public void performInspectionsWithProgressAndExportResults(final @NotNull AnalysisScope scope,
-                                                             final boolean runGlobalToolsOnly,
-                                                             final boolean isOfflineInspections,
+  public void performInspectionsWithProgressAndExportResults(@NotNull AnalysisScope scope,
+                                                             boolean runGlobalToolsOnly,
+                                                             boolean isOfflineInspections,
                                                              @NotNull Path outputDir,
-                                                             final @NotNull List<? super Path> inspectionsResults) {
+                                                             @NotNull List<? super Path> inspectionsResults) {
     cleanupTools();
     setCurrentScope(scope);
 
-    final Runnable action = () -> {
-      myOutputDir = outputDir;
+    myOutputDir = outputDir;
+    try {
       try {
-        try {
-          performInspectionsWithProgress(scope, runGlobalToolsOnly, isOfflineInspections);
-        }
-        finally {
+        performInspectionsWithProgress(scope, runGlobalToolsOnly, isOfflineInspections);
+      }
+      finally {
+        if (areToolsInitialized()) {
           exportResultsSmart(inspectionsResults, outputDir);
         }
       }
-      finally {
-        myOutputDir = null;
-      }
-    };
-    action.run();
+    }
+    finally {
+      myOutputDir = null;
+    }
   }
 
-  protected void exportResults(@NotNull List<? super Path> inspectionsResults,
-                               @NotNull List<? extends Tools> inspections,
-                               @NotNull Path outputDir,
-                               @Nullable XMLOutputFactory xmlOutputFactory) {
+  private void exportResults(@NotNull List<? super Path> inspectionsResults,
+                             @NotNull List<? extends Tools> inspections,
+                             @NotNull Path outputDir,
+                             @Nullable XMLOutputFactory xmlOutputFactory) {
     if (xmlOutputFactory == null) {
       xmlOutputFactory = XMLOutputFactory.newDefaultFactory();
     }
@@ -119,20 +118,22 @@ public class GlobalInspectionContextEx extends GlobalInspectionContextBase {
         }
       }
 
+      List<List<ScopeToolState>> states = new ArrayList<>();
+      for (Tools inspection : inspections) {
+        states.add(inspection.getTools());
+      }
       getRefManager().iterate(new RefVisitor() {
         @Override
-        public void visitElement(final @NotNull RefEntity refEntity) {
-          int i = 0;
-          for (Tools tools : inspections) {
-            for (ScopeToolState state : tools.getTools()) {
+        public void visitElement(@NotNull RefEntity refEntity) {
+          for (int i = 0; i < states.size(); i++) {
+            for (ScopeToolState state : states.get(i)) {
               try {
                 InspectionToolWrapper<?, ?> toolWrapper = state.getTool();
-                InspectionToolResultExporter presentation = getPresentation(toolWrapper);
                 BufferedWriter writer = writers[i];
                 if (writer != null &&
                     (myGlobalReportedProblemFilter == null ||
                      myGlobalReportedProblemFilter.shouldReportProblem(refEntity, toolWrapper.getShortName()))) {
-                  presentation.exportResults(e -> {
+                  getPresentation(toolWrapper).exportResults(e -> {
                     try {
                       JbXmlOutputter.collapseMacrosAndWrite(e, getProject(), writer);
                       writer.flush();
@@ -142,12 +143,14 @@ public class GlobalInspectionContextEx extends GlobalInspectionContextBase {
                     }
                   }, refEntity, d -> false);
                 }
+                else {
+                  return;
+                }
               }
               catch (Throwable e) {
                 LOG.error("Problem when exporting: " + refEntity.getExternalName(), e);
               }
             }
-            i++;
           }
         }
       });
@@ -178,11 +181,11 @@ public class GlobalInspectionContextEx extends GlobalInspectionContextBase {
     }
   }
 
-  public void exportResultsSmart(@NotNull List<? super Path> inspectionsResults, @NotNull Path outputDir) {
-    final List<Tools> globalToolsWithProblems = new ArrayList<>();
-    final List<Tools> toolsWithResultsToAggregate = new ArrayList<>();
+  private void exportResultsSmart(@NotNull List<? super Path> inspectionsResults, @NotNull Path outputDir) {
+    List<Tools> globalToolsWithProblems = new ArrayList<>();
+    List<Tools> toolsWithResultsToAggregate = new ArrayList<>();
     for (Map.Entry<String, Tools> entry : getTools().entrySet()) {
-      final Tools sameTools = entry.getValue();
+      Tools sameTools = entry.getValue();
       boolean hasProblems = false;
       String toolName = entry.getKey();
       if (sameTools != null) {
@@ -191,7 +194,7 @@ public class GlobalInspectionContextEx extends GlobalInspectionContextBase {
           InspectionToolResultExporter presentation = getPresentation(toolWrapper);
           try {
             if (presentation instanceof AggregateResultsExporter) {
-              presentation.updateContent();
+              ReadAction.run(() -> presentation.updateContent());
               if (presentation.hasReportedProblems().toBoolean()) {
                 toolsWithResultsToAggregate.add(sameTools);
                 break;
@@ -201,7 +204,7 @@ public class GlobalInspectionContextEx extends GlobalInspectionContextBase {
               hasProblems = Files.exists(InspectionsResultUtil.getInspectionResultPath(outputDir, toolWrapper.getShortName()));
             }
             else {
-              presentation.updateContent();
+              ReadAction.run(() -> presentation.updateContent());
               if (presentation.hasReportedProblems().toBoolean()) {
                 globalToolsWithProblems.add(sameTools);
                 LOG.assertTrue(!hasProblems, toolName);
@@ -221,9 +224,9 @@ public class GlobalInspectionContextEx extends GlobalInspectionContextBase {
       // close "problem" tag for local inspections (see DefaultInspectionToolResultExporter.addProblemElement())
       if (hasProblems) {
         try {
-          final Path file = InspectionsResultUtil.getInspectionResultPath(outputDir, sameTools.getShortName());
+          Path file = InspectionsResultUtil.getInspectionResultPath(outputDir, sameTools.getShortName());
           inspectionsResults.add(file);
-          Files.write(file, ("</" + PROBLEMS_TAG_NAME + ">").getBytes(StandardCharsets.UTF_8), StandardOpenOption.APPEND);
+          Files.writeString(file, "</" + PROBLEMS_TAG_NAME + ">", StandardOpenOption.APPEND);
         }
         catch (IOException e) {
           LOG.error(e);
@@ -231,15 +234,13 @@ public class GlobalInspectionContextEx extends GlobalInspectionContextBase {
       }
     }
 
-    exportResultsWithAggregation(inspectionsResults, toolsWithResultsToAggregate, myOutputDir);
+    exportResultsWithAggregation(inspectionsResults, toolsWithResultsToAggregate, outputDir);
 
     // export global inspections
     if (!globalToolsWithProblems.isEmpty()) {
       XMLOutputFactory xmlOutputFactory = XMLOutputFactory.newDefaultFactory();
-      Lists.partition(globalToolsWithProblems, MAX_OPEN_GLOBAL_INSPECTION_XML_RESULT_FILES).forEach(inspections ->
-                                                                                                      exportResults(inspectionsResults,
-                                                                                                                    inspections, outputDir,
-                                                                                                                    xmlOutputFactory));
+      ContainerUtil.splitListToChunks(globalToolsWithProblems, MAX_OPEN_GLOBAL_INSPECTION_XML_RESULT_FILES)
+        .forEach(inspections -> exportResults(inspectionsResults, inspections, outputDir, xmlOutputFactory));
     }
   }
 
@@ -324,11 +325,7 @@ public class GlobalInspectionContextEx extends GlobalInspectionContextBase {
     }
   }
 
-  public InspectionProblemConsumer getProblemConsumer() {
-    return myProblemConsumer;
-  }
-
-  public void setProblemConsumer(InspectionProblemConsumer problemConsumer) {
+  public void setProblemConsumer(@NotNull InspectionProblemConsumer problemConsumer) {
     myProblemConsumer = problemConsumer;
   }
 }
