@@ -56,7 +56,7 @@ public abstract class InspectionTreeNode implements TreeNode {
     }
   });
 
-  protected final ProblemLevels myProblemLevels = new ProblemLevels();
+  final ProblemLevels myProblemLevels = new ProblemLevels();
   @Nullable
   volatile Children myChildren;
   final InspectionTreeNode myParent;
@@ -154,7 +154,7 @@ public abstract class InspectionTreeNode implements TreeNode {
   @NotNull
   public List<? extends InspectionTreeNode> getChildren() {
     Children children = myChildren;
-    return children == null ? Collections.emptyList() : ContainerUtil.immutableList(children.myChildren);
+    return children == null ? Collections.emptyList() : List.of(children.myChildren);
   }
 
   @Override
@@ -183,7 +183,7 @@ public abstract class InspectionTreeNode implements TreeNode {
   }
 
   @Override
-  public Enumeration children() {
+  public Enumeration<? extends TreeNode> children() {
     return Collections.enumeration(getChildren());
   }
 
