@@ -1,4 +1,4 @@
-// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.execution.wsl;
 
 import com.google.common.net.InetAddresses;
@@ -10,18 +10,15 @@ import com.intellij.execution.configurations.GeneralCommandLine;
 import com.intellij.execution.configurations.PathEnvironmentVariableUtil;
 import com.intellij.execution.process.*;
 import com.intellij.ide.IdeBundle;
-import com.intellij.openapi.application.Experiments;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.Key;
 import com.intellij.openapi.util.NlsSafe;
 import com.intellij.openapi.util.NullableLazyValue;
 import com.intellij.openapi.util.io.FileUtil;
+import com.intellij.openapi.util.io.OSAgnosticPathUtil;
 import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.util.text.Strings;
-import com.intellij.openapi.vfs.VfsUtil;
-import com.intellij.openapi.vfs.VirtualFile;
-import com.intellij.openapi.vfs.impl.local.LocalFileSystemBase;
 import com.intellij.openapi.vfs.impl.wsl.WslConstants;
 import com.intellij.util.Consumer;
 import com.intellij.util.Functions;
@@ -40,17 +37,19 @@ import java.net.DatagramSocket;
 import java.net.InetAddress;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.*;
+import java.util.function.Supplier;
+import java.util.regex.Pattern;
 
 import static com.intellij.execution.wsl.WSLUtil.LOG;
+import static com.intellij.openapi.util.NullableLazyValue.lazyNullable;
 
 /**
  * Represents a single linux distribution in WSL, installed after <a href="https://blogs.msdn.microsoft.com/commandline/2017/10/11/whats-new-in-wsl-in-windows-10-fall-creators-update/">Fall Creators Update</a>
  *
  * @see WSLUtil
  */
-public class WSLDistribution {
+public class WSLDistribution implements AbstractWslDistribution {
   public static final String DEFAULT_WSL_MNT_ROOT = "/mnt/";
   private static final int RESOLVE_SYMLINK_TIMEOUT = 10000;
   private static final String RUN_PARAMETER = "run";
@@ -62,15 +61,19 @@ public class WSLDistribution {
   public static final String EXEC_PARAMETER = "--exec";
 
   private static final Key<ProcessListener> SUDO_LISTENER_KEY = Key.create("WSL sudo listener");
-  private static final String RSYNC = "rsync";
+
+  /**
+   * @see <a href="https://www.gnu.org/software/bash/manual/html_node/Definitions.html#index-name">bash identifier definition</a>
+   */
+  private static final Pattern ENV_VARIABLE_NAME_PATTERN = Pattern.compile("[a-zA-Z_][a-zA-Z0-9_]*");
 
   private final @NotNull WslDistributionDescriptor myDescriptor;
   private final @Nullable Path myExecutablePath;
   private @Nullable Integer myVersion;
-  private final NullableLazyValue<String> myHostIp = NullableLazyValue.createValue(this::readHostIp);
-  private final NullableLazyValue<String> myWslIp = NullableLazyValue.createValue(this::readWslIp);
-  private final NullableLazyValue<String> myShellPath = NullableLazyValue.createValue(this::readShellPath);
-  private final NullableLazyValue<String> myUserHomeProvider = NullableLazyValue.createValue(this::readUserHome);
+  private final NullableLazyValue<String> myHostIp = lazyNullable(this::readHostIp);
+  private final NullableLazyValue<String> myWslIp = lazyNullable(this::readWslIp);
+  private final NullableLazyValue<String> myShellPath = lazyNullable(this::readShellPath);
+  private final NullableLazyValue<String> myUserHomeProvider = lazyNullable(this::readUserHome);
 
   protected WSLDistribution(@NotNull WSLDistribution dist) {
     this(dist.myDescriptor, dist.myExecutablePath);
@@ -88,10 +91,10 @@ public class WSLDistribution {
 
   /**
    * @return executable file, null for WSL distributions parsed from `wsl.exe --list` output
-   * @deprecated please don't use it, to be removed
+   * @deprecated please don't use it, to be will be removed after we collect statistics and make sure versions before 1903 aren't used.
+   * Check statistics and remove in the next version
    */
-  @ApiStatus.ScheduledForRemoval(inVersion = "2021.3")
-  @Deprecated
+  @Deprecated(forRemoval = true)
   public @Nullable Path getExecutablePath() {
     return myExecutablePath;
   }
@@ -134,14 +137,6 @@ public class WSLDistribution {
   }
 
   /**
-   * @return creates and patches command line, e.g:
-   * {@code ruby -v} => {@code bash -c "ruby -v"}
-   */
-  public @NotNull GeneralCommandLine createWslCommandLine(String @NotNull ... command) throws ExecutionException {
-    return patchCommandLine(new GeneralCommandLine(command), null, new WSLCommandLineOptions());
-  }
-
-  /**
    * Creates a patched command line, executes it on wsl distribution and returns output
    *
    * @param command                linux command, eg {@code gem env}
@@ -158,7 +153,13 @@ public class WSLDistribution {
     if (processHandlerConsumer != null) {
       processHandlerConsumer.consume(processHandler);
     }
-    return processHandler.runProcess(timeout);
+    ProcessOutput output = processHandler.runProcess(timeout);
+    if (output.getExitCode() != 0 || output.isTimeout() || output.isCancelled()) {
+      LOG.info("command on wsl: " + commandLine.getCommandLineString() + " was failed:" +
+               "ec=" + output.getExitCode() + ",timeout=" + output.isTimeout() + ",cancelled=" + output.isCancelled()
+               + ",stderr=" + output.getStderr() + ",stdout=" + output.getStdout());
+    }
+    return output;
   }
 
   public @NotNull ProcessOutput executeOnWsl(int timeout, @NonNls String @NotNull ... command) throws ExecutionException {
@@ -166,54 +167,9 @@ public class WSLDistribution {
   }
 
   /**
-   * Copying changed files recursively from wslPath/ to windowsPath/; with rsync
-   *
-   * @param wslPath           source path inside wsl, e.g. /usr/bin
-   * @param windowsPath       target windows path, e.g. C:/tmp; Directory going to be created
-   * @param additionalOptions may be used for --delete (not recommended), --include and so on
-   * @param handlerConsumer   consumes process handler just before execution. Can be used for fast cancellation
-   * @return process output
-   */
-
-  public void copyFromWsl(@NotNull String wslPath,
-                          @NotNull String windowsPath,
-                          @Nullable List<String> additionalOptions,
-                          @Nullable Consumer<? super ProcessHandler> handlerConsumer
-  )
-    throws ExecutionException {
-
-
-    //noinspection ResultOfMethodCallIgnored
-    new File(windowsPath).mkdirs();
-    List<String> command = new ArrayList<>(Arrays.asList(RSYNC, "-cr"));
-
-    if (additionalOptions != null) {
-      command.addAll(additionalOptions);
-    }
-
-    command.add(wslPath + "/");
-    String targetWslPath = getWslPath(windowsPath);
-    if (targetWslPath == null) {
-      throw new ExecutionException(IdeBundle.message("wsl.rsync.unable.to.copy.files.dialog.message", windowsPath));
-    }
-    command.add(targetWslPath + "/");
-    var process = executeOnWsl(command, new WSLCommandLineOptions(), -1, handlerConsumer);
-    if (process.getExitCode() != 0) {
-      // Most common problem is rsync not onstalled
-      if (executeOnWsl(10_000, "type", RSYNC).getExitCode() != 0) {
-        throw new ExecutionException(IdeBundle.message("wsl.no.rsync", this.myDescriptor.getMsId()));
-      }
-      else {
-        throw new ExecutionException(process.getStderr());
-      }
-    }
-  }
-
-  /**
    * @deprecated use {@link #patchCommandLine(GeneralCommandLine, Project, WSLCommandLineOptions)} instead
    */
   @Deprecated
-  @ApiStatus.ScheduledForRemoval(inVersion = "2021.3")
   public @NotNull <T extends GeneralCommandLine> T patchCommandLine(@NotNull T commandLine,
                                                                     @Nullable Project project,
                                                                     @Nullable String remoteWorkingDir,
@@ -229,20 +185,7 @@ public class WSLDistribution {
     }
   }
 
-  /**
-   * Patches passed command line to make it runnable in WSL context, e.g changes {@code date} to {@code ubuntu run "date"}.<p/>
-   * <p>
-   * Environment variables and working directory are mapped to the chain calls: working dir using {@code cd} and environment variables using {@code export},
-   * e.g {@code bash -c "export var1=val1 && export var2=val2 && cd /some/working/dir && date"}.<p/>
-   * <p>
-   * Method should properly handle quotation and escaping of the environment variables.<p/>
-   *
-   * @param commandLine command line to patch
-   * @param project     current project
-   * @param options     {@link WSLCommandLineOptions} instance
-   * @param <T>         GeneralCommandLine or descendant
-   * @return original {@code commandLine}, prepared to run in WSL context
-   */
+  @Override
   public @NotNull <T extends GeneralCommandLine> T patchCommandLine(@NotNull T commandLine,
                                                                     @Nullable Project project,
                                                                     @NotNull WSLCommandLineOptions options) throws ExecutionException {
@@ -294,7 +237,12 @@ public class WSLDistribution {
     }
     if (executeCommandInShell && !options.isPassEnvVarsUsingInterop()) {
       commandLine.getEnvironment().forEach((key, val) -> {
-        prependCommand(linuxCommand, "export", CommandLineUtil.posixQuote(key) + "=" + CommandLineUtil.posixQuote(val), "&&");
+        if (ENV_VARIABLE_NAME_PATTERN.matcher(key).matches()) {
+          prependCommand(linuxCommand, "export", key + "=" + CommandLineUtil.posixQuote(val), "&&");
+        }
+        else {
+          LOG.debug("Can not pass environment variable (bad name): '", key, "'");
+        }
       });
       commandLine.getEnvironment().clear();
     }
@@ -457,65 +405,78 @@ public class WSLDistribution {
   /**
    * @return environment map of the default user in wsl
    */
-  public @NotNull Map<String, String> getEnvironment() {
+  public @Nullable Map<String, String> getEnvironment() {
     try {
-      ProcessOutput processOutput =
-        executeOnWsl(Collections.singletonList("env"),
-                     new WSLCommandLineOptions()
-                       .setExecuteCommandInShell(true)
-                       .setExecuteCommandInLoginShell(true)
-                       .setExecuteCommandInInteractiveShell(true),
-                     5000,
-                     null);
-      Map<String, String> result = new HashMap<>();
-      for (String string : processOutput.getStdoutLines()) {
-        int assignIndex = string.indexOf('=');
-        if (assignIndex == -1) {
-          result.put(string, "");
+      ProcessOutput processOutput = WslExecution.executeInShellAndGetCommandOnlyStdout(
+        this, new GeneralCommandLine("env"),
+        new WSLCommandLineOptions()
+          .setExecuteCommandInShell(true)
+          .setExecuteCommandInLoginShell(true)
+          .setExecuteCommandInInteractiveShell(true),
+        5000);
+      if (processOutput.getExitCode() == 0) {
+        Map<String, String> result = new HashMap<>();
+        for (String string : processOutput.getStdoutLines()) {
+          int assignIndex = string.indexOf('=');
+          if (assignIndex == -1) {
+            result.put(string, "");
+          }
+          else {
+            result.put(string.substring(0, assignIndex), string.substring(assignIndex + 1));
+          }
         }
-        else {
-          result.put(string.substring(0, assignIndex), string.substring(assignIndex + 1));
-        }
+        return result;
       }
-      return result;
     }
     catch (ExecutionException e) {
       LOG.warn(e);
     }
+    return null;
+  }
 
-    return Collections.emptyMap();
+  public @NotNull @NlsSafe String getWindowsPath(@NotNull String wslPath) {
+    return getWindowsPath(wslPath, this::getMntRoot);
   }
 
   /**
    * @return Windows-dependent path for a file, pointed by {@code wslPath} in WSL, or {@code null} if path is unmappable
    */
-  public @NotNull @NlsSafe String getWindowsPath(@NotNull String wslPath) {
-    String windowsPath = WSLUtil.getWindowsPath(wslPath, getMntRoot());
-    if (windowsPath != null) {
-      return windowsPath;
+  public @NotNull @NlsSafe String getWindowsPath(@NotNull String wslPath, @NotNull Supplier<String> mntRootSupplier) {
+    if (containsDriveLetter(wslPath)) {
+      String windowsPath = WSLUtil.getWindowsPath(wslPath, mntRootSupplier.get());
+      if (windowsPath != null) {
+        return windowsPath;
+      }
     }
-    return getUNCRoot() + FileUtil.toSystemDependentName(FileUtil.normalize(wslPath));
+    return getUNCRootPathString() + FileUtil.toSystemDependentName(FileUtil.normalize(wslPath));
   }
 
-  /**
-   * @return Linux path for a file pointed by {@code windowsPath} or null if unavailable, like \\MACHINE\path
-   */
-  public @Nullable @NlsSafe String getWslPath(@NotNull String windowsPath) {
-    if (FileUtil.toSystemDependentName(windowsPath).startsWith(WslConstants.UNC_PREFIX)) {
-      windowsPath = StringUtil.trimStart(FileUtil.toSystemDependentName(windowsPath), WslConstants.UNC_PREFIX);
-      int index = windowsPath.indexOf('\\');
-      if (index == -1) return null;
-
-      String distName = windowsPath.substring(0, index);
-      if (!distName.equalsIgnoreCase(myDescriptor.getMsId())) {
-        throw new IllegalArgumentException(
-          "Trying to get WSL path from a different WSL distribution: in path: " + distName + "; mine is: " + myDescriptor.getMsId());
+  private static boolean containsDriveLetter(@NotNull String linuxPath) {
+    int slashInd = linuxPath.indexOf('/');
+    while (slashInd >= 0) {
+      int nextSlashInd = linuxPath.indexOf('/', slashInd + 1);
+      if ((nextSlashInd == slashInd + 2 || (nextSlashInd == -1 && slashInd + 2 == linuxPath.length())) &&
+          OSAgnosticPathUtil.isDriveLetter(linuxPath.charAt(slashInd + 1))) {
+        return true;
       }
-      return FileUtil.toSystemIndependentName(windowsPath.substring(index));
+      slashInd = nextSlashInd;
+    }
+    return false;
+  }
+
+  @Override
+  public @Nullable @NlsSafe String getWslPath(@NotNull String windowsPath) {
+    WslPath wslPath = WslPath.parseWindowsUncPath(windowsPath);
+    if (wslPath != null) {
+      if (wslPath.getDistributionId().equalsIgnoreCase(myDescriptor.getMsId())) {
+        return wslPath.getLinuxPath();
+      }
+      throw new IllegalArgumentException("Trying to get WSL path from a different WSL distribution. Requested path (" + windowsPath + ")" +
+                                         " belongs to " + wslPath.getDistributionId() + " distribution" +
+                                         ", but context distribution is " + myDescriptor.getMsId());
     }
 
-    //noinspection deprecation
-    if (FileUtil.isWindowsAbsolutePath(windowsPath)) { // absolute windows path => /mnt/disk_letter/path
+    if (OSAgnosticPathUtil.isAbsoluteDosPath(windowsPath)) { // absolute windows path => /mnt/disk_letter/path
       return getMntRoot() + convertWindowsPath(windowsPath);
     }
     return null;
@@ -548,6 +509,7 @@ public class WSLDistribution {
     return myDescriptor.getId();
   }
 
+  @Override
   public @NotNull @NlsSafe String getMsId() {
     return myDescriptor.getMsId();
   }
@@ -576,36 +538,16 @@ public class WSLDistribution {
   }
 
   /**
-   * @deprecated use {@link WSLDistribution#getUNCRootPath()} instead
-   */
-  @ApiStatus.ScheduledForRemoval(inVersion = "2022.1")
-  @Deprecated
-  public @NotNull File getUNCRoot() {
-    return new File(WslConstants.UNC_PREFIX + myDescriptor.getMsId());
-  }
-
-  /**
    * @return UNC root for the distribution, e.g. {@code \\wsl$\Ubuntu}
    */
+  @Override
   @ApiStatus.Experimental
   public @NotNull Path getUNCRootPath() {
-    return Paths.get(WslConstants.UNC_PREFIX + myDescriptor.getMsId());
+    return Path.of(getUNCRootPathString());
   }
 
-  /**
-   * @return UNC root for the distribution, e.g. {@code \\wsl$\Ubuntu}
-   * @implNote there is a hack in {@link LocalFileSystemBase#getAttributes(VirtualFile)} which causes all network
-   * virtual files to exists all the time. So we need to check explicitly that root exists. After implementing proper non-blocking check
-   * for the network resource availability, this method may be simplified to findFileByIoFile
-   * @see VfsUtil#findFileByIoFile(File, boolean)
-   */
-  @ApiStatus.Experimental
-  public @Nullable VirtualFile getUNCRootVirtualFile(boolean refreshIfNeed) {
-    if (!Experiments.getInstance().isFeatureEnabled("wsl.p9.support")) {
-      return null;
-    }
-    File uncRoot = getUNCRoot();
-    return uncRoot.exists() ? VfsUtil.findFileByIoFile(uncRoot, refreshIfNeed) : null;
+  private @NotNull String getUNCRootPathString() {
+    return WslConstants.UNC_PREFIX + myDescriptor.getMsId();
   }
 
   // https://docs.microsoft.com/en-us/windows/wsl/compare-versions#accessing-windows-networking-apps-from-linux-host-ip
@@ -632,8 +574,15 @@ public class WSLDistribution {
     }
     if (Registry.is("wsl.obtain.windows.host.ip.alternatively", true)) {
       InetAddress wslAddr = getWslIpAddress();
+      // Connect to any port on WSL IP. The destination endpoint is not needed to be reachable as no real connection is established.
+      // This transfers the socket into "connected" state including setting the local endpoint according to the system's routing table.
+      // Works on Windows and Linux.
       try (DatagramSocket datagramSocket = new DatagramSocket()) {
-        datagramSocket.connect(wslAddr, 0);
+        // Any port in range [1, 0xFFFF] can be used. Port=0 is forbidden: https://datatracker.ietf.org/doc/html/rfc8085
+        // "A UDP receiver SHOULD NOT bind to port zero".
+        // Java asserts "port != 0" since v15 (https://bugs.java.com/bugdatabase/view_bug.do?bug_id=8240533).
+        int anyPort = 1;
+        datagramSocket.connect(wslAddr, anyPort);
         return datagramSocket.getLocalAddress().getHostAddress();
       }
       catch (Exception e) {
@@ -708,4 +657,5 @@ public class WSLDistribution {
     return WslExecution.executeInShellAndGetCommandOnlyStdout(this, new GeneralCommandLine("printenv", "SHELL"), options, DEFAULT_TIMEOUT,
                                                               true);
   }
+
 }
