@@ -1,37 +1,39 @@
-// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.ide;
 
 import com.intellij.CommonBundle;
 import com.intellij.ide.impl.OpenProjectTask;
+import com.intellij.ide.impl.OpenProjectTaskKt;
 import com.intellij.ide.lightEdit.LightEdit;
 import com.intellij.ide.lightEdit.LightEditCompatible;
 import com.intellij.openapi.actionSystem.ActionPlaces;
 import com.intellij.openapi.actionSystem.AnAction;
 import com.intellij.openapi.actionSystem.AnActionEvent;
 import com.intellij.openapi.actionSystem.Presentation;
+import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.project.DumbAware;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.Messages;
 import com.intellij.openapi.util.NlsActions;
 import com.intellij.openapi.util.NlsSafe;
 import com.intellij.openapi.util.io.FileUtil;
-import com.intellij.openapi.wm.impl.welcomeScreen.ProjectDetector;
+import com.intellij.openapi.util.text.Strings;
+import com.intellij.openapi.wm.impl.welcomeScreen.recentProjects.RecentProjectItem;
 import com.intellij.util.BitUtil;
+import kotlin.Unit;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.SystemIndependent;
 
-import java.awt.event.InputEvent;
+import java.awt.event.ActionEvent;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
-@SuppressWarnings("ComponentNotRegistered")
 public class ReopenProjectAction extends AnAction implements DumbAware, LightEditCompatible {
   private final String myProjectPath;
   private final String myProjectName;
   private boolean myIsRemoved = false;
-  @Nullable private ProjectGroup myProjectGroup;
+  private @Nullable ProjectGroup myProjectGroup;
 
   public ReopenProjectAction(@NotNull @SystemIndependent String projectPath, @NlsSafe String projectName, @NlsSafe String displayName) {
     myProjectPath = projectPath;
@@ -41,6 +43,10 @@ public class ReopenProjectAction extends AnAction implements DumbAware, LightEdi
     String text = projectPath.equals(displayName) ? FileUtil.getLocationRelativeToUserHome(projectPath) : displayName;
     presentation.setText(text, false);
     presentation.setDescription(FileUtil.toSystemDependentName(projectPath));
+    if (Strings.isEmpty(text)) {
+      Logger.getInstance(ReopenProjectAction.class).error(
+        String.format("Empty action text for projectName='%s' displayName='%s' path='%s'", projectName, displayName, projectPath));
+    }
   }
 
   @Override
@@ -49,7 +55,7 @@ public class ReopenProjectAction extends AnAction implements DumbAware, LightEdi
     IdeEventQueue.getInstance().getPopupManager().closeAllPopups();
 
     Project project = e.getProject();
-    Path file = Paths.get(myProjectPath).normalize();
+    Path file = Path.of(myProjectPath).normalize();
     if (!Files.exists(file)) {
       if (Messages.showDialog(project, IdeBundle
                                 .message("message.the.path.0.does.not.exist.maybe.on.remote", FileUtil.toSystemDependentName(myProjectPath)),
@@ -61,19 +67,20 @@ public class ReopenProjectAction extends AnAction implements DumbAware, LightEdi
     }
 
 
-    int modifiers = e.getModifiers();
-    boolean forceOpenInNewFrame = BitUtil.isSet(modifiers, InputEvent.CTRL_MASK)
-                                  || BitUtil.isSet(modifiers, InputEvent.SHIFT_MASK)
-                                  || e.getPlace() == ActionPlaces.WELCOME_SCREEN
-                                  || LightEdit.owns(project);
-    RecentProjectsManagerBase.getInstanceEx().openProject(file, OpenProjectTask.withProjectToClose(project, forceOpenInNewFrame).withRunConfigurators());
-    for (ProjectDetector extension : ProjectDetector.EXTENSION_POINT_NAME.getExtensions()) {
-      extension.logRecentProjectOpened(myProjectGroup);
-    }
+    OpenProjectTask options = OpenProjectTaskKt.OpenProjectTask(builder -> {
+      builder.setProjectToClose(project);
+      int modifiers = e.getModifiers();
+      builder.setForceOpenInNewFrame(BitUtil.isSet(modifiers, ActionEvent.CTRL_MASK) ||
+                                     BitUtil.isSet(modifiers, ActionEvent.SHIFT_MASK) ||
+                                     ActionPlaces.WELCOME_SCREEN.equals(e.getPlace()) ||
+                                     LightEdit.owns(project));
+      builder.setRunConfigurators(true);
+      return Unit.INSTANCE;
+    });
+    RecentProjectItem.Companion.openProjectAndLogRecent(file, options, myProjectGroup);
   }
 
-  @SystemIndependent
-  public String getProjectPath() {
+  public @SystemIndependent String getProjectPath() {
     return myProjectPath;
   }
 
@@ -81,18 +88,15 @@ public class ReopenProjectAction extends AnAction implements DumbAware, LightEdi
     return myIsRemoved;
   }
 
-  @NlsSafe
-  public String getProjectName() {
-    final RecentProjectsManager mgr = RecentProjectsManager.getInstance();
-    if (mgr instanceof RecentProjectsManagerBase) {
-      return ((RecentProjectsManagerBase)mgr).getProjectName(myProjectPath);
+  public @NlsSafe String getProjectName() {
+    RecentProjectsManager manager = RecentProjectsManager.getInstance();
+    if (manager instanceof RecentProjectsManagerBase) {
+      return ((RecentProjectsManagerBase)manager).getProjectName(myProjectPath);
     }
     return myProjectName;
   }
 
-  @NlsSafe
-  @Nullable
-  public String getProjectNameToDisplay() {
+  public @NlsSafe @Nullable String getProjectNameToDisplay() {
     final RecentProjectsManager mgr = RecentProjectsManager.getInstance();
     String displayName = mgr instanceof RecentProjectsManagerBase
                          ? ((RecentProjectsManagerBase)mgr).getDisplayName(myProjectPath)
@@ -100,10 +104,8 @@ public class ReopenProjectAction extends AnAction implements DumbAware, LightEdi
     return displayName != null ? displayName : getProjectName();
   }
 
-  @NlsActions.ActionText
-  @Nullable
   @Override
-  public String getTemplateText() {
+  public @NlsActions.ActionText @Nullable String getTemplateText() {
     return IdeBundle.message("action.ReopenProject.reopen.project.text");
   }
 
