@@ -1,37 +1,34 @@
-// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.ide.plugins;
 
 import com.intellij.CommonBundle;
 import com.intellij.core.CoreBundle;
+import com.intellij.diagnostic.LoadingState;
 import com.intellij.ide.IdeBundle;
 import com.intellij.ide.plugins.marketplace.MarketplacePluginDownloadService;
 import com.intellij.ide.plugins.marketplace.PluginSignatureChecker;
 import com.intellij.ide.plugins.marketplace.statistics.PluginManagerUsageCollector;
 import com.intellij.ide.plugins.marketplace.statistics.enums.InstallationSourceEnum;
 import com.intellij.ide.plugins.org.PluginManagerFilters;
-import com.intellij.ide.util.PropertiesComponent;
+import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.ApplicationNamesInfo;
 import com.intellij.openapi.application.PathManager;
 import com.intellij.openapi.application.ex.ApplicationInfoEx;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.extensions.PluginDescriptor;
 import com.intellij.openapi.extensions.PluginId;
-import com.intellij.openapi.fileChooser.FileChooser;
-import com.intellij.openapi.fileChooser.FileChooserDescriptor;
 import com.intellij.openapi.progress.ProgressIndicator;
 import com.intellij.openapi.progress.ProgressManager;
 import com.intellij.openapi.progress.Task;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.ex.MessagesEx;
-import com.intellij.openapi.util.Comparing;
 import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.io.FileUtilRt;
-import com.intellij.openapi.util.registry.Registry;
+import com.intellij.openapi.util.io.NioFiles;
+import com.intellij.openapi.util.registry.RegistryManager;
 import com.intellij.openapi.util.text.StringUtil;
-import com.intellij.openapi.vfs.VfsUtil;
-import com.intellij.openapi.vfs.VfsUtilCore;
-import com.intellij.openapi.vfs.VirtualFile;
+import com.intellij.util.concurrency.annotations.RequiresEdt;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.io.Decompressor;
 import org.jetbrains.annotations.ApiStatus;
@@ -42,25 +39,22 @@ import javax.swing.*;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.*;
-import java.util.function.BiConsumer;
+import java.util.ArrayList;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 import java.util.function.Consumer;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
 
 import static com.intellij.ide.startup.StartupActionScriptManager.*;
 
-/**
- * @author stathik
- */
 public final class PluginInstaller {
   private static final Logger LOG = Logger.getInstance(PluginInstaller.class);
 
   public static final String UNKNOWN_HOST_MARKER = "__unknown_repository__";
 
   static final Object ourLock = new Object();
-  private static final String PLUGINS_PRESELECTION_PATH = "plugins.preselection.path";
 
   private PluginInstaller() { }
 
@@ -88,7 +82,8 @@ public final class PluginInstaller {
     return false;
   }
 
-  private static void uninstallAfterRestart(@NotNull Path pluginPath) throws IOException {
+  @ApiStatus.Internal
+  public static void uninstallAfterRestart(@NotNull Path pluginPath) throws IOException {
     addActionCommand(new DeleteCommand(pluginPath));
   }
 
@@ -97,7 +92,8 @@ public final class PluginInstaller {
                                                boolean isUpdate) {
     boolean uninstalledWithoutRestart = true;
     if (pluginDescriptor.isEnabled()) {
-      DynamicPlugins.UnloadPluginOptions options = new DynamicPlugins.UnloadPluginOptions().withDisable(false)
+      DynamicPlugins.UnloadPluginOptions options = new DynamicPlugins.UnloadPluginOptions()
+        .withDisable(false)
         .withUpdate(isUpdate)
         .withWaitForClassloaderUnload(true);
 
@@ -128,10 +124,21 @@ public final class PluginInstaller {
     return uninstalledWithoutRestart;
   }
 
-  public static void installAfterRestart(@NotNull Path sourceFile,
-                                         boolean deleteSourceFile,
+  @ApiStatus.Internal
+  public static void installAfterRestartAndKeepIfNecessary(@NotNull IdeaPluginDescriptor newDescriptor,
+                                                           @NotNull Path newPluginPath,
+                                                           @Nullable Path oldPluginPath) throws IOException {
+    installAfterRestart(newDescriptor,
+                        newPluginPath,
+                        oldPluginPath,
+                        !keepArchive());
+  }
+
+  @ApiStatus.Internal
+  public static void installAfterRestart(@NotNull IdeaPluginDescriptor descriptor,
+                                         @NotNull Path sourceFile,
                                          @Nullable Path existingPlugin,
-                                         @NotNull IdeaPluginDescriptor descriptor) throws IOException {
+                                         boolean deleteSourceFile) throws IOException {
     List<ActionCommand> commands = new ArrayList<>();
 
     if (existingPlugin != null) {
@@ -190,7 +197,7 @@ public final class PluginInstaller {
     }
     else {
       target = targetPath.resolve(rootEntryName(sourceFile));
-      FileUtilRt.delete(target.toFile());
+      NioFiles.deleteRecursively(target);
       new Decompressor.Zip(sourceFile).extract(targetPath);
     }
     return target;
@@ -198,15 +205,16 @@ public final class PluginInstaller {
 
   public static String rootEntryName(@NotNull Path zip) throws IOException {
     try (ZipFile zipFile = new ZipFile(zip.toFile())) {
-      Enumeration<? extends ZipEntry> entries = zipFile.entries();
+      var entries = zipFile.entries();
       while (entries.hasMoreElements()) {
         ZipEntry zipEntry = entries.nextElement();
         // we do not necessarily get a separate entry for the subdirectory when the file
-        // in the ZIP archive is placed in a subdirectory, so we need to check if the slash
-        // is found anywhere in the path
+        // in the ZIP archive is placed in a subdirectory, so we need to check if the slash  is found anywhere in the path
         String name = zipEntry.getName();
         int i = name.indexOf('/');
-        if (i > 0) return name.substring(0, i);
+        if (i > 0) {
+          return name.substring(0, i);
+        }
       }
     }
 
@@ -217,24 +225,19 @@ public final class PluginInstaller {
     PluginStateManager.addStateListener(listener);
   }
 
-  static boolean installFromDisk(@NotNull File file,
-                                 @Nullable Project project,
-                                 @Nullable JComponent parent) {
-    return installFromDisk(new InstalledPluginsTableModel(project),
-                           PluginEnabler.HEADLESS,
-                           file,
-                           parent,
-                           PluginInstaller::installPluginFromCallbackData);
-  }
-
+  @RequiresEdt
   static boolean installFromDisk(@NotNull InstalledPluginsTableModel model,
                                  @NotNull PluginEnabler pluginEnabler,
                                  @NotNull File file,
+                                 @Nullable Project project,
                                  @Nullable JComponent parent,
                                  @NotNull Consumer<? super PluginInstallCallbackData> callback) {
     try {
       Path path = file.toPath();
-      IdeaPluginDescriptorImpl pluginDescriptor = PluginDescriptorLoader.loadDescriptorFromArtifact(path, null);
+      IdeaPluginDescriptorImpl pluginDescriptor = ProgressManager.getInstance().runProcessWithProgressSynchronously(() -> {
+        return PluginDescriptorLoader.loadDescriptorFromArtifact(path, null);
+      }, IdeBundle.message("action.InstallFromDiskAction.progress.text"), true, project);
+
       if (pluginDescriptor == null) {
         MessagesEx.showErrorDialog(parent,
                                    IdeBundle.message("dialog.message.fail.to.load.plugin.descriptor.from.file", file.getName()),
@@ -321,14 +324,14 @@ public final class PluginInstaller {
                                   !DynamicPlugins.allowLoadUnloadWithoutRestart(pluginDescriptor) ||
                                   operation.isRestartRequired();
       if (isRestartRequired) {
-        installAfterRestart(path, false, oldFile, pluginDescriptor);
+        installAfterRestart(pluginDescriptor, path, oldFile, false);
       }
       ourState.onPluginInstall(pluginDescriptor, installedPlugin != null, isRestartRequired);
 
       IdeaPluginDescriptor toDisable = pair.getSecond();
       if (toDisable != null) {
         // TODO[yole] unload and check for restart
-        pluginEnabler.disablePlugins(Set.of(toDisable));
+        pluginEnabler.disable(Set.of(toDisable));
       }
 
       Set<PluginInstallCallbackData> installedDependencies = operation.getInstalledDependentPlugins();
@@ -358,7 +361,7 @@ public final class PluginInstaller {
         }
       }
 
-      if (path.toString().endsWith(".zip") && Registry.is("ide.plugins.keep.archive")) {
+      if (path.toString().endsWith(".zip") && keepArchive()) {
         File tempFile = MarketplacePluginDownloadService.getPluginTempFile();
         FileUtil.copy(file, tempFile);
         MarketplacePluginDownloadService.renameFileToZipRoot(tempFile);
@@ -388,14 +391,19 @@ public final class PluginInstaller {
     }
 
     IdeaPluginDescriptorImpl targetDescriptor = PluginDescriptorLoader.loadDescriptor(targetFile,
-                                                                                      DisabledPluginsState.disabledPlugins(),
                                                                                       false,
                                                                                       PluginXmlPathResolver.DEFAULT_PATH_RESOLVER);
     if (targetDescriptor == null) {
       return false;
     }
 
-    return DynamicPlugins.INSTANCE.loadPlugin(targetDescriptor);
+    return PluginEnabler.HEADLESS.isDisabled(targetDescriptor.getPluginId()) ||
+           DynamicPlugins.INSTANCE.loadPlugin(targetDescriptor);
+  }
+
+  private static boolean keepArchive() {
+    return !LoadingState.COMPONENTS_LOADED.isOccurred() ||
+           RegistryManager.getInstance().is("ide.plugins.keep.archive");
   }
 
   private static @NotNull Set<String> findNotInstalledPluginDependencies(@NotNull List<? extends IdeaPluginDependency> dependencies,
@@ -418,51 +426,32 @@ public final class PluginInstaller {
     return notInstalled;
   }
 
-  static void chooseAndInstall(@Nullable Project project,
-                               @Nullable JComponent parent,
-                               @NotNull BiConsumer<? super File, ? super JComponent> callback) {
-    FileChooserDescriptor descriptor = new FileChooserDescriptor(false, false, true, true, false, false) {
-
-      {
-        setTitle(IdeBundle.message("chooser.title.plugin.file"));
-        setDescription(IdeBundle.message("chooser.description.jar.and.zip.archives.are.accepted"));
-      }
-
-      @Override
-      public boolean isFileSelectable(@Nullable VirtualFile file) {
-        if (file == null) {
-          return false;
-        }
-
-        final String extension = file.getExtension();
-        return Comparing.strEqual(extension, "jar") || Comparing.strEqual(extension, "zip");
-      }
-    };
-
-    String oldPath = PropertiesComponent.getInstance().getValue(PLUGINS_PRESELECTION_PATH);
-    VirtualFile toSelect = oldPath != null ?
-                           VfsUtil.findFileByIoFile(new File(FileUtilRt.toSystemDependentName(oldPath)), false) :
-                           null;
-
-    FileChooser.chooseFile(descriptor, project, parent, toSelect, virtualFile -> {
-      File file = VfsUtilCore.virtualToIoFile(virtualFile);
-      PropertiesComponent.getInstance().setValue(PLUGINS_PRESELECTION_PATH,
-                                                 FileUtilRt.toSystemIndependentName(file.getParent()));
-      callback.accept(file, parent);
-    });
-  }
-
   private static @NotNull Path getPluginsPath() {
-    return Paths.get(PathManager.getPluginsPath());
+    return Path.of(PathManager.getPluginsPath());
   }
 
-  private static void installPluginFromCallbackData(@NotNull PluginInstallCallbackData callbackData) {
+  @RequiresEdt
+  static void installPluginFromCallbackData(@NotNull PluginInstallCallbackData callbackData,
+                                            @Nullable Project project,
+                                            @Nullable JComponent parentComponent) {
     IdeaPluginDescriptorImpl descriptor = callbackData.getPluginDescriptor();
-    if (!callbackData.getRestartNeeded() &&
-        installAndLoadDynamicPlugin(callbackData.getFile(), descriptor)) {
-      return;
+    if (callbackData.getRestartNeeded()) {
+      shutdownOrRestartAppAfterInstall(descriptor);
     }
+    else {
+      ProgressManager.getInstance().runProcessWithProgressSynchronously(() -> {
+        boolean loaded = installAndLoadDynamicPlugin(callbackData.getFile(), descriptor);
 
+        if (!loaded) {
+          ApplicationManager.getApplication().invokeLater(() -> {
+            shutdownOrRestartAppAfterInstall(descriptor);
+          });
+        }
+      }, IdeBundle.message("action.InstallFromDiskAction.progress.text"), false, project, parentComponent);
+    }
+  }
+
+  private static void shutdownOrRestartAppAfterInstall(@NotNull IdeaPluginDescriptorImpl descriptor) {
     PluginManagerConfigurable.shutdownOrRestartAppAfterInstall(PluginManagerConfigurable.getUpdatesDialogTitle(),
                                                                action -> IdeBundle.message("plugin.installed.ide.restart.required.message",
                                                                                            descriptor.getName(),
