@@ -1,6 +1,7 @@
-// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.vfs.newvfs.persistent;
 
+import com.intellij.CacheSwitcher;
 import com.intellij.ide.plugins.DynamicPluginsTestUtil;
 import com.intellij.openapi.Disposable;
 import com.intellij.openapi.application.ApplicationManager;
@@ -14,7 +15,9 @@ import com.intellij.openapi.project.ProjectManager;
 import com.intellij.openapi.roots.ContentEntry;
 import com.intellij.openapi.roots.ModuleRootModificationUtil;
 import com.intellij.openapi.util.Disposer;
+import com.intellij.openapi.util.Ref;
 import com.intellij.openapi.util.SystemInfo;
+import com.intellij.openapi.util.io.ByteArraySequence;
 import com.intellij.openapi.util.io.FileAttributes;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.io.IoTestUtil;
@@ -22,10 +25,7 @@ import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vfs.*;
 import com.intellij.openapi.vfs.ex.temp.TempFileSystem;
 import com.intellij.openapi.vfs.impl.jar.JarFileSystemImpl;
-import com.intellij.openapi.vfs.newvfs.BulkFileListener;
-import com.intellij.openapi.vfs.newvfs.FileAttribute;
-import com.intellij.openapi.vfs.newvfs.ManagingFS;
-import com.intellij.openapi.vfs.newvfs.NewVirtualFile;
+import com.intellij.openapi.vfs.newvfs.*;
 import com.intellij.openapi.vfs.newvfs.events.*;
 import com.intellij.openapi.vfs.newvfs.impl.VirtualDirectoryImpl;
 import com.intellij.openapi.vfs.newvfs.impl.VirtualFileSystemEntry;
@@ -43,6 +43,7 @@ import com.intellij.util.messages.MessageBusConnection;
 import com.intellij.util.ui.UIUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.junit.Ignore;
 import org.junit.Rule;
 import org.junit.Test;
 
@@ -59,12 +60,16 @@ import java.util.concurrent.atomic.AtomicInteger;
 import java.util.jar.JarFile;
 import java.util.jar.Manifest;
 
-import static com.intellij.openapi.util.io.IoTestUtil.assumeWindows;
-import static com.intellij.openapi.util.io.IoTestUtil.setCaseSensitivity;
 import static com.intellij.testFramework.EdtTestUtil.runInEdtAndGet;
 import static com.intellij.testFramework.EdtTestUtil.runInEdtAndWait;
-import static com.intellij.testFramework.UsefulTestCase.assertInstanceOf;
-import static com.intellij.testFramework.UsefulTestCase.assertOneElement;
+import static com.intellij.testFramework.UsefulTestCase.*;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertSame;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
 import static org.junit.Assert.*;
 import static org.junit.Assume.assumeFalse;
 import static org.junit.Assume.assumeTrue;
@@ -77,11 +82,18 @@ public class PersistentFsTest extends BareTestFixtureTestCase {
     File file = tempDirectory.newFile("test.txt");
     VirtualFile vFile = refreshAndFind(file);
     int id = ((VirtualFileWithId)vFile).getId();
-    assertEquals(vFile, PersistentFS.getInstance().findFileById(id));
+
+    assertEquals("File is unique identified by its fileId",
+                 vFile,
+                 PersistentFS.getInstance().findFileById(id)
+    );
+
     VfsTestUtil.deleteFile(vFile);
-    assertNull(PersistentFS.getInstance().findFileById(id));
+    assertNull("Deleted file can't be found by its fileId anymore",
+               PersistentFS.getInstance().findFileById(id));
   }
 
+  @NotNull
   private static VirtualFile refreshAndFind(File file) {
     return Objects.requireNonNull(LocalFileSystem.getInstance().refreshAndFindFileByIoFile(file), file.getPath());
   }
@@ -152,21 +164,19 @@ public class PersistentFsTest extends BareTestFixtureTestCase {
   @Test
   public void testDeleteSubstRoots() {
     IoTestUtil.assumeWindows();
+    Ref<VirtualFile> subst = new Ref<>();
+    Ref<String> substPath = new Ref<>();
 
-    File substRoot = IoTestUtil.createSubst(tempDirectory.getRoot().getPath());
-    VirtualFile subst;
-    try {
-      subst = refreshAndFind(substRoot);
+    IoTestUtil.performTestOnWindowsSubst(tempDirectory.getRoot().getPath(), substRoot -> {
+      substPath.set(substRoot.getPath());
+      subst.set(refreshAndFind(substRoot));
       assertNotNull(substRoot.listFiles());
-    }
-    finally {
-      IoTestUtil.deleteSubst(substRoot.getPath());
-    }
-    subst.refresh(false, true);
+    });
+    subst.get().refresh(false, true);
 
     VirtualFile[] roots = PersistentFS.getInstance().getRoots(LocalFileSystem.getInstance());
     for (VirtualFile root : roots) {
-      String prefix = StringUtil.commonPrefix(root.getPath(), substRoot.getPath());
+      String prefix = StringUtil.commonPrefix(root.getPath(), substPath.get());
       assertTrue(prefix, prefix.isEmpty());
     }
   }
@@ -201,7 +211,7 @@ public class PersistentFsTest extends BareTestFixtureTestCase {
     int[] logCount = {0};
     LoggedErrorProcessor.executeWith(new LoggedErrorProcessor() {
       @Override
-      public boolean processWarn(@NotNull String category, String message, Throwable t) {
+      public boolean processWarn(@NotNull String category, @NotNull String message, Throwable t) {
         if (message.contains(jarFile.getName())) logCount[0]++;
         return super.processWarn(category, message, t);
       }
@@ -269,38 +279,34 @@ public class PersistentFsTest extends BareTestFixtureTestCase {
 
     assumeTrue("Not yet exists: " + nestedTestDir.getParent().getParent(), secondRun);
 
-    assertEquals("subDir\n" +
-                 "subDir/subSubDir\n" +
-                 "subDir/subSubDir/Foo.txt\n",
+    assertEquals("""
+                   subDir
+                   subDir/subSubDir
+                   subDir/subSubDir/Foo.txt
+                   """,
                  eventLog.toString());
   }
 
   @Test
-  public void testModCountIncreases() throws IOException {
+  public void testGlobalFSModCountIncreasesOnMostFileAttributesModifications() throws IOException {
     VirtualFile vFile = tempDirectory.newVirtualFile("file.txt");
     HeavyPlatformTestCase.setBinaryContent(vFile, "x".getBytes(StandardCharsets.UTF_8)); // make various listeners update their VFS views
     ManagingFS managingFS = ManagingFS.getInstance();
-    int inSessionModCount = managingFS.getModificationCount();
-    int globalModCount = managingFS.getFilesystemModificationCount();
-    int parentModCount = managingFS.getModificationCount(vFile.getParent());
+    int globalFsModCount = managingFS.getFilesystemModificationCount();
 
     WriteAction.runAndWait(() -> vFile.setWritable(false));
 
-    assertEquals(globalModCount + 1, managingFS.getModificationCount(vFile));
-    assertEquals(globalModCount + 1, managingFS.getFilesystemModificationCount());
-    assertEquals(parentModCount, managingFS.getModificationCount(vFile.getParent()));
-    assertEquals(inSessionModCount + 1, managingFS.getModificationCount());
+    assertEquals(globalFsModCount + 1, managingFS.getFilesystemModificationCount());
 
     FSRecords.force();
-    assertFalse(FSRecords.isDirty());
-    ++globalModCount;
+    assertFalse("FSRecords.force() was just called, must be !dirty",
+                FSRecords.isDirty());
+    ++globalFsModCount;
 
-    int finalGlobalModCount = globalModCount;
+    int finalGlobalModCount = globalFsModCount;
 
     HeavyProcessLatch.INSTANCE.performOperation(HeavyProcessLatch.Type.Processing, "This test wants no indices flush", ()-> {
       WriteAction.runAndWait(() -> {
-        long timestamp = vFile.getTimeStamp();
-        int finalInSessionModCount = managingFS.getModificationCount();
         try {
           vFile.setWritable(true);  // 1 change
           vFile.setBinaryContent("foo".getBytes(Charset.defaultCharset())); // content change + length change + maybe timestamp change
@@ -309,39 +315,37 @@ public class PersistentFsTest extends BareTestFixtureTestCase {
           throw new RuntimeException(e);
         }
 
+        //TODO RC: I don't think it is worth to check exact number of 'changes' -- those look like
+        //         an implementation detail. Better to just check _there are_ changes (i.e. modCount
+        //         increases) after any sensible change.
+
         // we check in write action to avoid observing background thread to index stuff
-        int changesCount = timestamp == vFile.getTimeStamp() ? 3 : 4;
-        assertEquals(finalGlobalModCount + changesCount, managingFS.getModificationCount(vFile));
-        assertEquals(finalGlobalModCount + changesCount, managingFS.getFilesystemModificationCount());
-        assertEquals(finalInSessionModCount + changesCount, managingFS.getModificationCount());
-        assertEquals(parentModCount, managingFS.getModificationCount(vFile.getParent()));
+        final int changesCount = 3; //flags, content, length, +...
+        assertTrue(
+          "fsModCount(="+managingFS.getFilesystemModificationCount()+") should +3 at least since before (="+finalGlobalModCount+")",
+          managingFS.getFilesystemModificationCount() >= finalGlobalModCount + changesCount);
       });
     });
   }
 
+  @Ignore("Now all that changes DO lead to modCount increments")
   @Test
-  public void testModCountNotIncreases() throws IOException {
-    VirtualFile vFile = tempDirectory.newVirtualFile("file.txt");
+  public void testGlobalFsModCountIncreasesOnAddingFileAttributeOrLengthOrTimestampChanges() throws IOException {
+    final VirtualFile vFile = tempDirectory.newVirtualFile("file.txt");
     ManagingFS managingFS = ManagingFS.getInstance();
-    int globalModCount = managingFS.getFilesystemModificationCount();
-    int parentModCount = managingFS.getModificationCount(vFile.getParent());
-    int fileModCount = managingFS.getModificationCount(vFile);
-    int inSessionModCount = managingFS.getModificationCount();
+    final int globalFsModCountBefore = managingFS.getFilesystemModificationCount();
 
     FSRecords.force();
     assertFalse(FSRecords.isDirty());
 
     FileAttribute attribute = new FileAttribute("test.attribute", 1, true);
     WriteAction.runAndWait(() -> {
-      try(DataOutputStream output = attribute.writeAttribute(vFile)) {
+      try(DataOutputStream output = attribute.writeFileAttribute(vFile)) {
         DataInputOutputUtil.writeINT(output, 1);
       }
     });
 
-    assertEquals(fileModCount, managingFS.getModificationCount(vFile));
-    assertEquals(globalModCount, managingFS.getFilesystemModificationCount());
-    assertEquals(parentModCount, managingFS.getModificationCount(vFile.getParent()));
-    assertEquals(inSessionModCount + 1, managingFS.getModificationCount());
+    assertEquals(globalFsModCountBefore, managingFS.getFilesystemModificationCount());
 
     assertTrue(FSRecords.isDirty());
     FSRecords.force();
@@ -351,10 +355,7 @@ public class PersistentFsTest extends BareTestFixtureTestCase {
     FSRecords.setTimestamp(fileId, FSRecords.getTimestamp(fileId));
     FSRecords.setLength(fileId, FSRecords.getLength(fileId));
 
-    assertEquals(fileModCount, managingFS.getModificationCount(vFile));
-    assertEquals(globalModCount, managingFS.getFilesystemModificationCount());
-    assertEquals(parentModCount, managingFS.getModificationCount(vFile.getParent()));
-    assertEquals(inSessionModCount + 1, managingFS.getModificationCount());
+    assertEquals(globalFsModCountBefore, managingFS.getFilesystemModificationCount());
     assertFalse(FSRecords.isDirty());
   }
 
@@ -383,7 +384,7 @@ public class PersistentFsTest extends BareTestFixtureTestCase {
         }
       });
 
-      WriteCommandAction.runWriteCommandAction(null, () -> PersistentFS.getInstance().processEvents(Arrays.asList(eventsToApply)));
+      WriteCommandAction.runWriteCommandAction(null, () -> RefreshQueue.getInstance().processEvents(false, List.of(eventsToApply)));
     }
     finally {
       connection.disconnect();
@@ -396,8 +397,10 @@ public class PersistentFsTest extends BareTestFixtureTestCase {
   public void testProcessEventsMustIgnoreDeleteDuplicates() {
     VirtualFile file = tempDirectory.newVirtualFile("file.txt");
 
-    checkEvents("Before: VFileDeleteEvent->file.txt\n" +
-                "After: VFileDeleteEvent->file.txt\n",
+    checkEvents("""
+                  Before: VFileDeleteEvent->file.txt
+                  After: VFileDeleteEvent->file.txt
+                  """,
 
                 new VFileDeleteEvent(this, file, false),
                 new VFileDeleteEvent(this, file, false));
@@ -407,8 +410,10 @@ public class PersistentFsTest extends BareTestFixtureTestCase {
   public void testProcessEventsMustGroupDependentEventsCorrectly() {
     VirtualFile file = tempDirectory.newVirtualFile("file.txt");
 
-    checkEvents("Before: VFileCreateEvent->xx.created VFileDeleteEvent->file.txt\n" +
-                "After: VFileCreateEvent->xx.created VFileDeleteEvent->file.txt\n",
+    checkEvents("""
+                  Before: VFileCreateEvent->xx.created VFileDeleteEvent->file.txt
+                  After: VFileCreateEvent->xx.created VFileDeleteEvent->file.txt
+                  """,
 
                 new VFileDeleteEvent(this, file, false),
                 new VFileCreateEvent(this, file.getParent(), "xx.created", false, null, null, false, null),
@@ -419,8 +424,10 @@ public class PersistentFsTest extends BareTestFixtureTestCase {
   public void testProcessEventsMustBeAwareOfDeleteEventsDomination() {
     VirtualFile file = tempDirectory.newVirtualFile("d/x.txt");
 
-    checkEvents("Before: VFileDeleteEvent->d\n" +
-                "After: VFileDeleteEvent->d\n",
+    checkEvents("""
+                  Before: VFileDeleteEvent->d
+                  After: VFileDeleteEvent->d
+                  """,
 
                 new VFileDeleteEvent(this, file.getParent(), false),
                 new VFileDeleteEvent(this, file, false),
@@ -431,8 +438,10 @@ public class PersistentFsTest extends BareTestFixtureTestCase {
   public void testProcessCreateEventsMustFilterOutDuplicates() {
     VirtualFile file = tempDirectory.newVirtualFile("d/x.txt");
 
-    checkEvents("Before: VFileCreateEvent->xx.created\n" +
-                "After: VFileCreateEvent->xx.created\n",
+    checkEvents("""
+                  Before: VFileCreateEvent->xx.created
+                  After: VFileCreateEvent->xx.created
+                  """,
 
                 new VFileCreateEvent(this, file.getParent(), "xx.created", false, null, null, false, null),
                 new VFileCreateEvent(this, file.getParent(), "xx.created", false, null, null, false, null)                );
@@ -442,10 +451,12 @@ public class PersistentFsTest extends BareTestFixtureTestCase {
   public void testProcessEventsMustGroupDependentEventsCorrectly2() {
     VirtualFile file = tempDirectory.newVirtualFile("a/b/c/test.txt");
 
-    checkEvents("Before: VFileCreateEvent->xx.created VFileCreateEvent->xx.created2 VFileDeleteEvent->test.txt\n" +
-                "After: VFileCreateEvent->xx.created VFileCreateEvent->xx.created2 VFileDeleteEvent->test.txt\n" +
-                "Before: VFileDeleteEvent->c\n" +
-                "After: VFileDeleteEvent->c\n",
+    checkEvents("""
+                  Before: VFileCreateEvent->xx.created VFileCreateEvent->xx.created2 VFileDeleteEvent->test.txt
+                  After: VFileCreateEvent->xx.created VFileCreateEvent->xx.created2 VFileDeleteEvent->test.txt
+                  Before: VFileDeleteEvent->c
+                  After: VFileDeleteEvent->c
+                  """,
 
                 new VFileDeleteEvent(this, file, false),
                 new VFileCreateEvent(this, file.getParent(), "xx.created", false, null, null, false, null),
@@ -457,10 +468,12 @@ public class PersistentFsTest extends BareTestFixtureTestCase {
   public void testProcessEventsMustGroupDependentEventsCorrectly3() {
     VirtualFile vFile = tempDirectory.newVirtualFile("a/b/c/test.txt");
 
-    checkEvents("Before: VFileContentChangeEvent->c\n" +
-                "After: VFileContentChangeEvent->c\n" +
-                "Before: VFileDeleteEvent->test.txt\n" +
-                "After: VFileDeleteEvent->test.txt\n",
+    checkEvents("""
+                  Before: VFileContentChangeEvent->c
+                  After: VFileContentChangeEvent->c
+                  Before: VFileDeleteEvent->test.txt
+                  After: VFileDeleteEvent->test.txt
+                  """,
 
                 new VFileContentChangeEvent(this, vFile.getParent(), 0, 0, false),
                 new VFileDeleteEvent(this, vFile, false));
@@ -471,10 +484,12 @@ public class PersistentFsTest extends BareTestFixtureTestCase {
     VirtualFile file = tempDirectory.newVirtualFile("a/b/c/test.txt");
     VirtualFile file2 = tempDirectory.newVirtualFile("a/b/c/test2.txt");
 
-    checkEvents("Before: VFileDeleteEvent->test.txt\n" +
-                "After: VFileDeleteEvent->test.txt\n" +
-                "Before: VFileDeleteEvent->c\n" +
-                "After: VFileDeleteEvent->c\n",
+    checkEvents("""
+                  Before: VFileDeleteEvent->test.txt
+                  After: VFileDeleteEvent->test.txt
+                  Before: VFileDeleteEvent->c
+                  After: VFileDeleteEvent->c
+                  """,
 
                 new VFileDeleteEvent(this, file, false),
                 new VFileDeleteEvent(this, file.getParent(), false),
@@ -485,8 +500,10 @@ public class PersistentFsTest extends BareTestFixtureTestCase {
   public void testProcessContentChangedLikeReconcilableEventsMustResultInSingleBatch() {
     VirtualFile file = tempDirectory.newVirtualFile("a/b/c/test.txt");
 
-    checkEvents("Before: VFileContentChangeEvent->test.txt VFilePropertyChangeEvent->test.txt VFilePropertyChangeEvent->test.txt\n" +
-                "After: VFileContentChangeEvent->test.txt VFilePropertyChangeEvent->test.txt VFilePropertyChangeEvent->test.txt\n",
+    checkEvents("""
+                  Before: VFileContentChangeEvent->test.txt VFilePropertyChangeEvent->test.txt VFilePropertyChangeEvent->test.txt
+                  After: VFileContentChangeEvent->test.txt VFilePropertyChangeEvent->test.txt VFilePropertyChangeEvent->test.txt
+                  """,
 
                 new VFileContentChangeEvent(this, file, 0, 1, false),
                 new VFilePropertyChangeEvent(this, file, VirtualFile.PROP_WRITABLE, false, true, false),
@@ -498,10 +515,12 @@ public class PersistentFsTest extends BareTestFixtureTestCase {
     VirtualFile testTxt = tempDirectory.newVirtualFile("a/b/c/test.txt");
     VirtualFile newParent = tempDirectory.newVirtualDirectory("a/b/d");
 
-    checkEvents("Before: VFileMoveEvent->test.txt\n" +
-                "After: VFileMoveEvent->test.txt\n" +
-                "Before: VFileDeleteEvent->d\n" +
-                "After: VFileDeleteEvent->d\n",
+    checkEvents("""
+                  Before: VFileMoveEvent->test.txt
+                  After: VFileMoveEvent->test.txt
+                  Before: VFileDeleteEvent->d
+                  After: VFileDeleteEvent->d
+                  """,
 
                 new VFileMoveEvent(this, testTxt, newParent),
                 new VFileDeleteEvent(this, newParent, false));
@@ -512,10 +531,12 @@ public class PersistentFsTest extends BareTestFixtureTestCase {
     VirtualFile file = tempDirectory.newVirtualFile("a/b/c/test.txt");
     VirtualFile newParent = tempDirectory.newVirtualDirectory("a/b/d");
 
-    checkEvents("Before: VFileCopyEvent->new.txt\n" +
-                "After: VFileCopyEvent->new.txt\n" +
-                "Before: VFileDeleteEvent->test.txt\n" +
-                "After: VFileDeleteEvent->test.txt\n",
+    checkEvents("""
+                  Before: VFileCopyEvent->new.txt
+                  After: VFileCopyEvent->new.txt
+                  Before: VFileDeleteEvent->test.txt
+                  After: VFileDeleteEvent->test.txt
+                  """,
 
                 new VFileCopyEvent(this, file, newParent, "new.txt"),
                 new VFileDeleteEvent(this, file, false));
@@ -526,10 +547,12 @@ public class PersistentFsTest extends BareTestFixtureTestCase {
     VirtualFile file = tempDirectory.newVirtualFile("a/b/c/test.txt");
     VirtualFile file2 = tempDirectory.newVirtualFile("a/b/c/test2.txt");
 
-    checkEvents("Before: VFileDeleteEvent->test2.txt\n" +
-                "After: VFileDeleteEvent->test2.txt\n" +
-                "Before: VFilePropertyChangeEvent->test.txt\n" +
-                "After: VFilePropertyChangeEvent->test2.txt\n",
+    checkEvents("""
+                  Before: VFileDeleteEvent->test2.txt
+                  After: VFileDeleteEvent->test2.txt
+                  Before: VFilePropertyChangeEvent->test.txt
+                  After: VFilePropertyChangeEvent->test2.txt
+                  """,
 
                 new VFileDeleteEvent(this, file2, false),
                 new VFilePropertyChangeEvent(this, file, VirtualFile.PROP_NAME, file.getName(), file2.getName(), false));
@@ -877,12 +900,12 @@ public class PersistentFsTest extends BareTestFixtureTestCase {
 
   @Test
   public void testFileContentChangeEventsMustDifferentiateCaseSensitivityToggledFiles() throws IOException {
-    assumeWindows();
+    IoTestUtil.assumeWindows();
     assumeTrue("'fsutil.exe' needs elevated privileges to work", SuperUserStatus.isSuperUser());
 
     File dir = tempDirectory.newDirectory();
     VirtualFile vDir = refreshAndFind(dir);
-    setCaseSensitivity(dir, true);
+    IoTestUtil.setCaseSensitivity(dir, true);
     File file = new File(dir, "file.txt");
     assertTrue(file.createNewFile());
     File FILE = new File(dir, "FILE.TXT");
@@ -896,7 +919,7 @@ public class PersistentFsTest extends BareTestFixtureTestCase {
       public void after(@NotNull List<? extends @NotNull VFileEvent> e) {
         for (VFileEvent event : e) {
           VirtualFile evFile = event.getFile();
-          if (evFile.getParent().equals(vDir)) {
+          if (vDir.equals(evFile.getParent())) {
             events.add(event);
           }
         }
@@ -958,7 +981,7 @@ public class PersistentFsTest extends BareTestFixtureTestCase {
 
   private VFileEvent ignoreCrazyVFileContentChangedEquals(VFileEvent exp) {
     if (exp instanceof VFileContentChangeEvent) {
-      exp = new VFileContentChangeEvent(this, exp.getFile(), 0, 0, -1, -1, -1, -1, true);
+      exp = new VFileContentChangeEvent(this, ((VFileContentChangeEvent)exp).getFile(), 0, 0, -1, -1, -1, -1, true);
     }
     return exp;
   }
@@ -974,7 +997,7 @@ public class PersistentFsTest extends BareTestFixtureTestCase {
       public void after(@NotNull List<? extends @NotNull VFileEvent> e) {
         for (VFileEvent event : e) {
           VirtualFile evFile = event.getFile();
-          if (evFile.getParent().equals(vDir)) {
+          if (vDir.equals(evFile.getParent())) {
             events.add(event);
           }
         }
@@ -989,5 +1012,65 @@ public class PersistentFsTest extends BareTestFixtureTestCase {
     assertEquals(3, ((VFileContentChangeEvent)event).getNewLength());
 
     events.clear();
+  }
+
+  @Test
+  public void testChildMove() throws IOException {
+    final File firstDirIoFile = tempDirectory.newDirectory("dir1");
+    final File secondDirIoFile = tempDirectory.newDirectory("dir2");
+
+    final VirtualFile firstDir = refreshAndFind(firstDirIoFile);
+    final VirtualFile secondDir = refreshAndFind(secondDirIoFile);
+
+    final VirtualFile xxx = WriteAction.computeAndWait(() -> firstDir.createChildDirectory(this, "xxx"));
+    final VirtualFile xxxFooBar = WriteAction.computeAndWait(() -> xxx.createChildData(this, "foo.bar"));
+    final VirtualFile someTxt = WriteAction.computeAndWait(() -> firstDir.createChildData(this, "some.txt"));
+
+    assertEquals(List.of(xxx, someTxt), Arrays.asList(firstDir.getChildren()));
+    assertEquals(List.of(xxxFooBar), Arrays.asList(xxx.getChildren()));
+
+    assertEmpty(secondDir.getChildren());
+
+    final int firstDirId = ((NewVirtualFile)firstDir).getId();
+    final int secondDirId = ((NewVirtualFile)secondDir).getId();
+
+    final int xxxId = ((NewVirtualFile)xxx).getId();
+    final int xxxFooBarId = ((NewVirtualFile)xxxFooBar).getId();
+    final int someTxtId = ((NewVirtualFile)someTxt).getId();
+
+    CacheSwitcher.INSTANCE.switchIndexAndVfs(null, null, "resetting vfs", () -> { return null; });
+
+    PersistentFSImpl.moveChildrenRecords(firstDirId, secondDirId);
+
+    assertEmpty(refreshAndFind(firstDirIoFile).getChildren());
+
+    final VirtualFile[] movedChildren = refreshAndFind(secondDirIoFile).getChildren();
+    assertEquals(List.of(xxxId, someTxtId), ContainerUtil.map(movedChildren, it -> ((NewVirtualFile)it).getId()));
+    assertEquals(List.of("xxx", "some.txt"), ContainerUtil.map(movedChildren, VirtualFile::getName));
+
+    final VirtualFile[] movedGrandChildren = ContainerUtil.find(movedChildren, it -> "xxx".equals(it.getName())).getChildren();
+    assertEquals(List.of(xxxFooBarId), ContainerUtil.map(movedGrandChildren, it -> ((NewVirtualFile)it).getId()));
+    assertEquals(List.of("foo.bar"), ContainerUtil.map(movedGrandChildren, VirtualFile::getName));
+  }
+
+  @Test
+  public void testContentReadingWhileModification() throws IOException {
+    byte[] initialContent = StringUtil.repeat("one_two", 500_000).getBytes(StandardCharsets.UTF_8);
+    File file = tempDirectory.newFile("test.txt", initialContent);
+    VirtualFile vFile = refreshAndFind(file);
+    int id = ((VirtualFileWithId)vFile).getId();
+    vFile.contentsToByteArray();
+
+    DataInputStream stream = FSRecords.readContent(id);
+    assertNotNull(stream);
+    byte[] bytes = stream.readNBytes(initialContent.length);
+    assertArrayEquals(initialContent, bytes);
+    DataInputStream stream2 = FSRecords.readContent(id);
+    byte[] portion1 = stream2.readNBytes(40);
+    FSRecords.writeContent(id, ByteArraySequence.EMPTY, true);
+    DataInputStream stream3 = FSRecords.readContent(id);
+    assertEquals(-1, stream3.read());
+    byte[] portion2 = stream2.readNBytes(initialContent.length - 40);
+    assertArrayEquals(initialContent, ArrayUtil.mergeArrays(portion1, portion2));
   }
 }
