@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.roots;
 
 import com.intellij.openapi.util.Condition;
@@ -7,6 +7,7 @@ import com.intellij.util.containers.ContainerUtil;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.Unmodifiable;
 
 import java.util.*;
 
@@ -18,15 +19,18 @@ class ImmutableSyntheticLibrary extends SyntheticLibrary {
   private final Condition<? super VirtualFile> myExcludeCondition;
   private final int hashCode;
 
-  ImmutableSyntheticLibrary(@NotNull List<? extends VirtualFile> sourceRoots,
+  ImmutableSyntheticLibrary(@Nullable String comparisonId,
+                            @NotNull List<? extends VirtualFile> sourceRoots,
                             @NotNull List<? extends VirtualFile> binaryRoots,
                             @NotNull Set<? extends VirtualFile> excludedRoots,
-                            @Nullable Condition<? super VirtualFile> excludeCondition) {
+                            @Nullable Condition<? super VirtualFile> excludeCondition,
+                            @Nullable ExcludeFileCondition constantCondition) {
+    super(comparisonId, constantCondition);
     mySourceRoots = immutableOrEmptyList(sourceRoots);
     myBinaryRoots = immutableOrEmptyList(binaryRoots);
     myExcludedRoots = ContainerUtil.unmodifiableOrEmptySet(excludedRoots);
     myExcludeCondition = excludeCondition;
-    hashCode = 31*(31*sourceRoots.hashCode() + binaryRoots.hashCode())+excludedRoots.hashCode();
+    hashCode = Objects.hash(mySourceRoots, myBinaryRoots, myExcludedRoots, myExcludeCondition);
   }
 
   @NotNull
@@ -58,6 +62,7 @@ class ImmutableSyntheticLibrary extends SyntheticLibrary {
     if (this == o) return true;
     if (o == null || getClass() != o.getClass()) return false;
     ImmutableSyntheticLibrary library = (ImmutableSyntheticLibrary)o;
+    if (!Objects.equals(getComparisonId(), library.getComparisonId())) return false;
     if (!mySourceRoots.equals(library.getSourceRoots())) return false;
     if (!myBinaryRoots.equals(library.getBinaryRoots())) return false;
     if (!myExcludedRoots.equals(library.getExcludedRoots())) return false;
@@ -70,7 +75,8 @@ class ImmutableSyntheticLibrary extends SyntheticLibrary {
   }
 
   @NotNull
+  @Unmodifiable
   private static <E> List<E> immutableOrEmptyList(@NotNull List<? extends E> list) {
-    return list.isEmpty() ? Collections.emptyList() : ContainerUtil.immutableList(list);
-  } 
+    return list.isEmpty() ? Collections.emptyList() : List.copyOf(list);
+  }
 }
