@@ -1,5 +1,5 @@
 /*
- * Copyright 2003-2021 Dave Griffith, Bas Leijdekkers
+ * Copyright 2003-2023 Dave Griffith, Bas Leijdekkers
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -32,8 +32,9 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
+
+import static com.intellij.openapi.util.Predicates.nonNull;
 
 public final class ClassUtils {
 
@@ -44,19 +45,19 @@ public final class ClassUtils {
   private static final Set<PsiType> integralTypes = new HashSet<>(5);
 
   static {
-    integralTypes.add(PsiType.LONG);
-    integralTypes.add(PsiType.INT);
-    integralTypes.add(PsiType.SHORT);
-    integralTypes.add(PsiType.CHAR);
-    integralTypes.add(PsiType.BYTE);
+    integralTypes.add(PsiTypes.longType());
+    integralTypes.add(PsiTypes.intType());
+    integralTypes.add(PsiTypes.shortType());
+    integralTypes.add(PsiTypes.charType());
+    integralTypes.add(PsiTypes.byteType());
 
-    primitiveNumericTypes.add(PsiType.BYTE);
-    primitiveNumericTypes.add(PsiType.CHAR);
-    primitiveNumericTypes.add(PsiType.SHORT);
-    primitiveNumericTypes.add(PsiType.INT);
-    primitiveNumericTypes.add(PsiType.LONG);
-    primitiveNumericTypes.add(PsiType.FLOAT);
-    primitiveNumericTypes.add(PsiType.DOUBLE);
+    primitiveNumericTypes.add(PsiTypes.byteType());
+    primitiveNumericTypes.add(PsiTypes.charType());
+    primitiveNumericTypes.add(PsiTypes.shortType());
+    primitiveNumericTypes.add(PsiTypes.intType());
+    primitiveNumericTypes.add(PsiTypes.longType());
+    primitiveNumericTypes.add(PsiTypes.floatType());
+    primitiveNumericTypes.add(PsiTypes.doubleType());
 
     immutableTypes.add(CommonClassNames.JAVA_LANG_BOOLEAN);
     immutableTypes.add(CommonClassNames.JAVA_LANG_CHARACTER);
@@ -135,11 +136,14 @@ public final class ClassUtils {
     if (aClass == null) {
       return false;
     }
-    if (isImmutableClass(aClass)) return true;
-    return JCiPUtil.isImmutable(aClass, checkDocComment);
+    return isImmutableClass(aClass, checkDocComment);
   }
 
   public static boolean isImmutableClass(@NotNull PsiClass aClass) {
+    return isImmutableClass(aClass, false);
+  }
+
+  private static boolean isImmutableClass(@NotNull PsiClass aClass, boolean checkDocComment) {
     if (aClass.isRecord()) {
       return true;
     }
@@ -148,12 +152,16 @@ public final class ClassUtils {
         (immutableTypes.contains(qualifiedName) || qualifiedName.startsWith("com.google.common.collect.Immutable"))) {
       return true;
     }
+    if (JCiPUtil.isImmutable(aClass, checkDocComment)) {
+      return true;
+    }
 
     return aClass.hasModifierProperty(PsiModifier.FINAL) &&
-           Arrays.stream(aClass.getAllFields())
-             .filter(field -> !field.hasModifierProperty(PsiModifier.STATIC))
-             .map(field -> field.getType())
-             .allMatch(type -> TypeConversionUtil.isPrimitiveAndNotNull(type) || immutableTypes.contains(type.getCanonicalText()));
+           ContainerUtil.and(aClass.getAllFields(),
+                             field -> !field.hasModifierProperty(PsiModifier.STATIC) &&
+                                      field.hasModifierProperty(PsiModifier.FINAL) &&
+                                      (TypeConversionUtil.isPrimitiveAndNotNull(field.getType()) ||
+                                       immutableTypes.contains(field.getType().getCanonicalText())));
   }
 
   public static boolean inSamePackage(@Nullable PsiElement element1, @Nullable PsiElement element2) {
@@ -161,18 +169,14 @@ public final class ClassUtils {
       return false;
     }
     final PsiFile containingFile1 = element1.getContainingFile();
-    if (!(containingFile1 instanceof PsiClassOwner)) {
+    if (!(containingFile1 instanceof PsiClassOwner containingJavaFile1)) {
       return false;
     }
-    final PsiClassOwner containingJavaFile1 =
-      (PsiClassOwner)containingFile1;
     final String packageName1 = containingJavaFile1.getPackageName();
     final PsiFile containingFile2 = element2.getContainingFile();
-    if (!(containingFile2 instanceof PsiClassOwner)) {
+    if (!(containingFile2 instanceof PsiClassOwner containingJavaFile2)) {
       return false;
     }
-    final PsiClassOwner containingJavaFile2 =
-      (PsiClassOwner)containingFile2;
     final String packageName2 = containingJavaFile2.getPackageName();
     return packageName1.equals(packageName2);
   }
@@ -264,10 +268,9 @@ public final class ClassUtils {
     if (parent == null || parent instanceof PsiFile) {
       return false;
     }
-    if (!(parent instanceof PsiClass)) {
+    if (!(parent instanceof PsiClass parentClass)) {
       return true;
     }
-    final PsiClass parentClass = (PsiClass)parent;
     return !parentClass.isInterface();
   }
 
@@ -345,18 +348,19 @@ public final class ClassUtils {
                                                             !m.hasModifierProperty(PsiModifier.PRIVATE) &&
                                                             !m.hasModifierProperty(PsiModifier.STATIC));
     }
-    if (getIfOnlyInvisibleConstructors(aClass).length == 0) {
+    final PsiMethod[] constructors = getIfOnlyInvisibleConstructors(aClass);
+    if (constructors.length != 1) {
       return false;
     }
     final PsiField selfInstance = getIfOneStaticSelfInstance(aClass);
-    return selfInstance != null && newOnlyAssignsToStaticSelfInstance(getIfOnlyInvisibleConstructors(aClass)[0], selfInstance);
+    return selfInstance != null && newOnlyAssignsToStaticSelfInstance(constructors[0], selfInstance);
   }
 
   private static PsiField getIfOneStaticSelfInstance(PsiClass aClass) {
     Stream<PsiField> fieldStream = Arrays.stream(aClass.getFields());
 
     StreamEx<PsiField> enclosingClassFields =
-      StreamEx.iterate(aClass.getContainingClass(), Objects::nonNull, c -> c.getContainingClass()).filter(Objects::nonNull)
+      StreamEx.iterate(aClass.getContainingClass(), nonNull(), c -> c.getContainingClass()).filter(nonNull())
               .flatMap(c -> Stream.of(c.getFields()));
     fieldStream = Stream.concat(fieldStream, enclosingClassFields);
 
@@ -365,7 +369,7 @@ public final class ClassUtils {
                                       .filter(innerClass -> innerClass.hasModifierProperty(PsiModifier.STATIC))
                                       .flatMap(innerClass -> Arrays.stream(innerClass.getFields())));
 
-    final List<PsiField> fields = fieldStream.filter(field -> resolveToSingletonField(aClass, field)).limit(2).collect(Collectors.toList());
+    final List<PsiField> fields = fieldStream.filter(field -> resolveToSingletonField(aClass, field)).limit(2).toList();
     return fields.size() == 1 ? fields.get(0) : null;
   }
 
@@ -398,7 +402,7 @@ public final class ClassUtils {
 
   private static boolean newOnlyAssignsToStaticSelfInstance(PsiMethod method, final PsiField field) {
     if (field instanceof LightElement) return true;
-    final Query<PsiReference> search = MethodReferencesSearch.search(method, field.getUseScope(), false);
+    final Query<PsiReference> search = MethodReferencesSearch.search(method, method.getUseScope(), false);
     final NewOnlyAssignedToFieldProcessor processor = new NewOnlyAssignedToFieldProcessor(field);
     search.forEach(processor);
     return processor.isNewOnlyAssignedToField();
@@ -425,17 +429,15 @@ public final class ClassUtils {
       if (field.equals(grandParent)) {
         return true;
       }
-      if (!(grandParent instanceof PsiAssignmentExpression)) {
+      if (!(grandParent instanceof PsiAssignmentExpression assignmentExpression)) {
         newOnlyAssignedToField = false;
         return false;
       }
-      final PsiAssignmentExpression assignmentExpression = (PsiAssignmentExpression)grandParent;
       final PsiExpression lhs = assignmentExpression.getLExpression();
-      if (!(lhs instanceof PsiReferenceExpression)) {
+      if (!(lhs instanceof PsiReferenceExpression referenceExpression)) {
         newOnlyAssignedToField = false;
         return false;
       }
-      final PsiReferenceExpression referenceExpression = (PsiReferenceExpression)lhs;
       final PsiElement target = referenceExpression.resolve();
       if (!field.equals(target)) {
         newOnlyAssignedToField = false;
