@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.idea.devkit.run;
 
 import com.intellij.execution.JUnitPatcher;
@@ -8,20 +8,19 @@ import com.intellij.openapi.application.PathManager;
 import com.intellij.openapi.application.ReadAction;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.module.Module;
+import com.intellij.openapi.progress.ProcessCanceledException;
 import com.intellij.openapi.project.DumbService;
 import com.intellij.openapi.project.Project;
-import com.intellij.openapi.projectRoots.JavaSdkType;
-import com.intellij.openapi.projectRoots.Sdk;
-import com.intellij.openapi.projectRoots.SdkAdditionalData;
+import com.intellij.openapi.projectRoots.*;
 import com.intellij.openapi.util.Key;
 import com.intellij.openapi.util.ThrowableComputable;
 import com.intellij.openapi.util.UserDataHolder;
-import com.intellij.openapi.util.io.FileUtil;
-import com.intellij.openapi.util.registry.Registry;
-import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.psi.JavaPsiFacade;
+import com.intellij.psi.search.FilenameIndex;
 import com.intellij.psi.search.GlobalSearchScope;
-import com.intellij.util.lang.UrlClassLoader;
+import com.intellij.psi.search.ProjectScope;
+import com.intellij.util.JavaModuleOptions;
+import com.intellij.util.system.OS;
 import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -33,48 +32,55 @@ import org.jetbrains.idea.devkit.util.PsiUtil;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.List;
 
 final class JUnitDevKitPatcher extends JUnitPatcher {
   private static final Logger LOG = Logger.getInstance(JUnitDevKitPatcher.class);
-  private static final String SYSTEM_CL_PROPERTY = "java.system.class.loader";
+  static final String SYSTEM_CL_PROPERTY = "java.system.class.loader";
+  private static final Key<Boolean> LOADER_VALID = Key.create("LOADER_VALID_9");
 
   @Override
   public void patchJavaParameters(@NotNull Project project, @Nullable Module module, JavaParameters javaParameters) {
     Sdk jdk = javaParameters.getJdk();
-    if (jdk == null) return;
+    if (jdk == null) {
+      return;
+    }
 
     ParametersList vm = javaParameters.getVMParametersList();
 
     if (PsiUtil.isIdeaProject(project)) {
-      if (!vm.hasProperty(SYSTEM_CL_PROPERTY)) {
-        String qualifiedName = UrlClassLoader.class.getName();
+      if (!vm.hasProperty(SYSTEM_CL_PROPERTY) && !vm.getList().contains("--add-modules")) {
+        // check that UrlClassLoader is available in the test module classpath
+        // if module-path is used, skip custom loader
+        String qualifiedName = "com.intellij.util.lang.UrlClassLoader";
         if (loaderValid(project, module, qualifiedName)) {
           vm.addProperty(SYSTEM_CL_PROPERTY, qualifiedName);
         }
       }
       String basePath = project.getBasePath();
       if (!vm.hasProperty(PathManager.PROPERTY_SYSTEM_PATH)) {
-        vm.addProperty(PathManager.PROPERTY_SYSTEM_PATH, new File(basePath, "system/test").getAbsolutePath());
+        assert basePath != null;
+        vm.addProperty(PathManager.PROPERTY_SYSTEM_PATH, Path.of(basePath, "system/test").toAbsolutePath().toString());
       }
       if (!vm.hasProperty(PathManager.PROPERTY_CONFIG_PATH)) {
-        vm.addProperty(PathManager.PROPERTY_CONFIG_PATH, new File(basePath, "config/test").getAbsolutePath());
+        assert basePath != null;
+        vm.addProperty(PathManager.PROPERTY_CONFIG_PATH, Path.of(basePath, "config/test").toAbsolutePath().toString());
       }
-    }
 
-    if (Registry.is("idea.lazy.classloading.caches") &&
-        vm.hasProperty(SYSTEM_CL_PROPERTY) &&
-        "com.intellij.util.lang.UrlClassLoader".equals(vm.getPropertyValue(SYSTEM_CL_PROPERTY))) {
-      vm.addProperty("idea.lazy.classloading.caches", "true");
+      appendAddOpensWhenNeeded(project, jdk, vm);
     }
 
     jdk = IdeaJdk.findIdeaJdk(jdk);
-    if (jdk == null) return;
+    if (jdk == null) {
+      return;
+    }
 
     @NonNls String libPath = jdk.getHomePath() + File.separator + "lib";
     @NonNls String bootJarPath = libPath + File.separator + "boot.jar";
-    if (new File(bootJarPath).exists()) {
-      //there is no need to add boot.jar in modern IDE builds (181.*)
+    if (Files.exists(Path.of(bootJarPath))) {
+      // there is no need to add boot.jar in modern IDE builds (181.*)
       vm.add("-Xbootclasspath/a:" + bootJarPath);
     }
 
@@ -83,19 +89,25 @@ final class JUnitDevKitPatcher extends JUnitPatcher {
       //we need to explicitly add optional dependencies to properly test them
       List<String> ids = DescriptorUtil.getPluginAndOptionalDependenciesIds(module);
       if (!ids.isEmpty()) {
-        vm.defineProperty("idea.load.plugins.id", StringUtil.join(ids, ","));
+        vm.defineProperty("idea.load.plugins.id", String.join(",", ids));
       }
     }
 
-    File sandboxHome = getSandboxPath(jdk);
+    Path sandboxHome = getSandboxPath(jdk);
     if (sandboxHome != null) {
       if (!vm.hasProperty(PathManager.PROPERTY_HOME_PATH)) {
-        File homeDir = new File(sandboxHome, "test");
-        FileUtil.createDirectory(homeDir);
+        Path homeDir = sandboxHome.resolve("test");
+        try {
+          Files.createDirectories(homeDir);
+        }
+        catch (IOException e) {
+          LOG.error(e);
+        }
+
         String buildNumber = IdeaJdk.getBuildNumber(jdk.getHomePath());
         if (buildNumber != null) {
           try {
-            FileUtil.writeToFile(new File(homeDir, "build.txt"), buildNumber);
+            Files.writeString(homeDir.resolve("build.txt"), buildNumber);
           }
           catch (IOException e) {
             LOG.warn("failed to create build.txt in " + homeDir + ": " + e.getMessage(), e);
@@ -104,10 +116,10 @@ final class JUnitDevKitPatcher extends JUnitPatcher {
         else {
           LOG.warn("Cannot determine build number for " + jdk.getHomePath());
         }
-        vm.defineProperty(PathManager.PROPERTY_HOME_PATH, homeDir.getAbsolutePath());
+        vm.defineProperty(PathManager.PROPERTY_HOME_PATH, homeDir.toString());
       }
       if (!vm.hasProperty(PathManager.PROPERTY_PLUGINS_PATH)) {
-        vm.defineProperty(PathManager.PROPERTY_PLUGINS_PATH, new File(sandboxHome, "plugins").getAbsolutePath());
+        vm.defineProperty(PathManager.PROPERTY_PLUGINS_PATH, sandboxHome.resolve("plugins").toString());
       }
     }
 
@@ -116,18 +128,35 @@ final class JUnitDevKitPatcher extends JUnitPatcher {
     javaParameters.getClassPath().addFirst(((JavaSdkType)jdk.getSdkType()).getToolsPath(jdk));
   }
 
-  private static final Key<Boolean> LOADER_VALID_9 = Key.create("LOADER_VALID_9");
-
-  private static boolean loaderValid(Project project, Module module, String qualifiedName) {
-    if (!Registry.is("idea.use.loader.for.jdk9")) {
-      return false;
+  static void appendAddOpensWhenNeeded(@NotNull Project project, @NotNull Sdk jdk, @NotNull ParametersList vm) {
+    var sdkVersion = ((JavaSdk)jdk.getSdkType()).getVersion(jdk);
+    if (sdkVersion != null && sdkVersion.isAtLeast(JavaSdkVersion.JDK_17)) {
+      var scope = ProjectScope.getContentScope(project);
+      var files = ReadAction.compute(() -> FilenameIndex.getVirtualFilesByName("OpenedPackages.txt", scope));
+      if (files.size() > 1) {
+        LOG.error("expecting 1 file, found: " + files);
+      }
+      else if (!files.isEmpty()) {
+        var file = files.iterator().next();
+        try (var stream = file.getInputStream()) {
+          JavaModuleOptions.readOptions(stream, OS.CURRENT).forEach(vm::add);
+        }
+        catch (ProcessCanceledException e) {
+          throw e; //unreachable
+        }
+        catch (Throwable e) {
+          LOG.error("Failed to load --add-opens list from 'OpenedPackages.txt'", e);
+        }
+      }
     }
+  }
 
-    UserDataHolder holder = module != null ? module : project;
-    Key<Boolean> cacheKey = LOADER_VALID_9;
-    Boolean res = holder.getUserData(cacheKey);
-    if (res == null) {
-      res = ReadAction.compute(() -> {
+  static boolean loaderValid(Project project, Module module, String qualifiedName) {
+    UserDataHolder holder = module == null ? project : module;
+    Key<Boolean> cacheKey = LOADER_VALID;
+    Boolean result = holder.getUserData(cacheKey);
+    if (result == null) {
+      result = ReadAction.compute(() -> {
         //noinspection RedundantCast
         return DumbService.getInstance(project).computeWithAlternativeResolveEnabled((ThrowableComputable<Boolean, RuntimeException>)() -> {
           GlobalSearchScope scope = module != null ? GlobalSearchScope.moduleRuntimeScope(module, true)
@@ -135,21 +164,19 @@ final class JUnitDevKitPatcher extends JUnitPatcher {
           return JavaPsiFacade.getInstance(project).findClass(qualifiedName, scope) != null;
         });
       });
-      holder.putUserData(cacheKey, res);
+      holder.putUserData(cacheKey, result);
     }
-    return res;
+    return result;
   }
 
-  @Nullable
-  private static File getSandboxPath(final Sdk jdk) {
+  private static @Nullable Path getSandboxPath(Sdk jdk) {
     SdkAdditionalData additionalData = jdk.getSdkAdditionalData();
     if (additionalData instanceof Sandbox) {
       String sandboxHome = ((Sandbox)additionalData).getSandboxHome();
       if (sandboxHome != null) {
-        return new File(FileUtil.toCanonicalPath(sandboxHome));
+        return Path.of(sandboxHome).normalize().toAbsolutePath();
       }
     }
-
     return null;
   }
 }
