@@ -1,41 +1,47 @@
-// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.idea.maven.project;
 
 import com.intellij.build.BuildProgressListener;
 import com.intellij.build.SyncViewManager;
 import com.intellij.configurationStore.SettingsSavingComponentJavaAdapter;
+import com.intellij.ide.impl.ProjectUtilKt;
 import com.intellij.ide.startup.StartupManagerEx;
+import com.intellij.internal.statistic.StructuredIdeActivity;
 import com.intellij.openapi.Disposable;
 import com.intellij.openapi.application.Application;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.ReadAction;
 import com.intellij.openapi.components.PersistentStateComponent;
 import com.intellij.openapi.components.State;
-import com.intellij.openapi.externalSystem.ExternalSystemModulePropertyManager;
 import com.intellij.openapi.externalSystem.service.project.IdeModifiableModelsProvider;
 import com.intellij.openapi.externalSystem.service.project.ProjectDataManager;
 import com.intellij.openapi.externalSystem.service.project.autoimport.ExternalSystemProjectsWatcherImpl;
+import com.intellij.openapi.externalSystem.statistics.ExternalSystemStatUtilKt;
+import com.intellij.openapi.externalSystem.statistics.ProjectImportCollector;
 import com.intellij.openapi.fileEditor.FileDocumentManager;
 import com.intellij.openapi.fileEditor.ex.FileEditorManagerEx;
 import com.intellij.openapi.module.Module;
+import com.intellij.openapi.module.ModuleManager;
 import com.intellij.openapi.progress.impl.CoreProgressManager;
 import com.intellij.openapi.project.DumbAwareRunnable;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.roots.ModuleRootManager;
 import com.intellij.openapi.roots.ProjectFileIndex;
 import com.intellij.openapi.roots.ProjectRootManager;
-import com.intellij.openapi.startup.StartupManager;
 import com.intellij.openapi.util.Disposer;
 import com.intellij.openapi.util.ModificationTracker;
 import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.Ref;
-import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.openapi.vfs.VirtualFileManager;
 import com.intellij.psi.util.CachedValueProvider;
 import com.intellij.psi.util.CachedValuesManager;
 import com.intellij.psi.util.PsiModificationTracker;
-import com.intellij.util.*;
+import com.intellij.util.Alarm;
+import com.intellij.util.EventDispatcher;
+import com.intellij.util.NullableConsumer;
+import com.intellij.util.ObjectUtils;
+import com.intellij.util.concurrency.annotations.RequiresReadLock;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.io.PathKt;
 import com.intellij.util.ui.update.Update;
@@ -45,10 +51,12 @@ import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.TestOnly;
 import org.jetbrains.concurrency.AsyncPromise;
 import org.jetbrains.concurrency.Promise;
+import org.jetbrains.idea.maven.buildtool.MavenImportSpec;
 import org.jetbrains.idea.maven.buildtool.MavenSyncConsole;
 import org.jetbrains.idea.maven.execution.SyncBundle;
 import org.jetbrains.idea.maven.externalSystemIntegration.output.quickfixes.CacheForCompilerErrorMessages;
-import org.jetbrains.idea.maven.importing.MavenFoldersImporter;
+import org.jetbrains.idea.maven.importing.MavenImportStats;
+import org.jetbrains.idea.maven.importing.MavenImportUtil;
 import org.jetbrains.idea.maven.importing.MavenPomPathModuleService;
 import org.jetbrains.idea.maven.importing.MavenProjectImporter;
 import org.jetbrains.idea.maven.indices.MavenIndicesManager;
@@ -57,6 +65,7 @@ import org.jetbrains.idea.maven.navigator.MavenProjectsNavigator;
 import org.jetbrains.idea.maven.project.MavenArtifactDownloader.DownloadResult;
 import org.jetbrains.idea.maven.project.importing.FilesList;
 import org.jetbrains.idea.maven.project.importing.MavenImportingManager;
+import org.jetbrains.idea.maven.project.importing.MavenProjectManagerListenerToBusBridge;
 import org.jetbrains.idea.maven.server.MavenDistributionsCache;
 import org.jetbrains.idea.maven.server.MavenEmbedderWrapper;
 import org.jetbrains.idea.maven.server.MavenServerProgressIndicator;
@@ -67,15 +76,15 @@ import org.jetbrains.idea.maven.utils.*;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 @State(name = "MavenProjectsManager")
-public final class MavenProjectsManager extends MavenSimpleProjectComponent
+public class MavenProjectsManager extends MavenSimpleProjectComponent
   implements PersistentStateComponent<MavenProjectsManagerState>, SettingsSavingComponentJavaAdapter, Disposable {
   private static final int IMPORT_DELAY = 1000;
 
@@ -117,7 +126,8 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
   private volatile MavenSyncConsole mySyncConsole;
   private final MavenMergingUpdateQueue mySaveQueue;
   private static final int SAVE_DELAY = 1000;
-  private Module myDummyModule;
+  private Module myPreviewModule;
+  private transient boolean forceUpdateSnapshots = false;
 
   public static MavenProjectsManager getInstance(@NotNull Project project) {
     return project.getService(MavenProjectsManager.class);
@@ -142,8 +152,13 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
   }
 
   @TestOnly
-  public void setProgressListener(SyncViewManager testViewManager) {
+  public void setProgressListener(BuildProgressListener testViewManager) {
     myProgressListener = testViewManager;
+  }
+
+  @TestOnly
+  public BuildProgressListener getProgressListener() {
+    return myProgressListener;
   }
 
   @Override
@@ -159,7 +174,7 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
     myState = state;
     if (isInitialized()) {
       applyStateToTree(myProjectsTree, this);
-      scheduleUpdateAllProjects(false);
+      scheduleUpdateAllProjects(new MavenImportSpec(false, false, false));
     }
   }
 
@@ -167,6 +182,14 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
   public void dispose() {
     mySyncConsole = null;
     myManagerListeners.clear();
+  }
+
+  public static void setupCreatedMavenProject(@NotNull Project project) {
+    setupCreatedMavenProject(getInstance(project).getImportingSettings());
+  }
+
+  public static void setupCreatedMavenProject(@NotNull MavenImportingSettings settings) {
+    settings.setWorkspaceImportEnabled(true);
   }
 
   public ModificationTracker getModificationTracker() {
@@ -207,21 +230,14 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
       return;
     }
 
-    Runnable runnable = () -> {
+    //noinspection deprecation
+    ProjectUtilKt.executeOnPooledThread(myProject, () -> {
       boolean wasMavenized = !myState.originalFiles.isEmpty();
       if (!wasMavenized) {
         return;
       }
       initMavenized();
-    };
-
-    StartupManager startupManager = StartupManager.getInstance(myProject);
-    if (startupManager.postStartupActivityPassed()) {
-      ApplicationManager.getApplication().executeOnPooledThread(runnable);
-    }
-    else {
-      startupManager.registerStartupActivity(runnable);
-    }
+    });
   }
 
   private void initMavenized() {
@@ -247,6 +263,8 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
       if (isInitialized.getAndSet(true)) {
         return;
       }
+      initManagerListenerToBusBridge();
+      initBusToManagerListenerBridge();
       initPreloadMavenServices();
       initProjectsTree(!isNew);
       initWorkers();
@@ -255,14 +273,14 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
       registerSyncConsoleListener();
       updateTabTitles();
 
-
       MavenUtil.runWhenInitialized(myProject, (DumbAwareRunnable)() -> {
         if (!ApplicationManager.getApplication().isUnitTestMode()) {
+          MavenIndicesManager.getInstance(myProject).scheduleUpdateIndicesList(null);
           fireActivated();
           listenForExternalChanges();
         }
-        if (!Registry.is("maven.new.import")) {
-          scheduleUpdateAllProjects(isNew);
+        if (!MavenUtil.isLinearImportEnabled()) {
+          scheduleUpdateAllProjects(new MavenImportSpec(false, isNew, false));
         }
       });
     }
@@ -271,11 +289,41 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
     }
   }
 
+  private void initBusToManagerListenerBridge() {
+    if (!MavenUtil.isLinearImportEnabled()) return;
+    myProject.getMessageBus().connect(this).subscribe(MavenImportingManager.LEGACY_PROJECT_MANAGER_LISTENER, new Listener() {
+      @Override
+      public void activated() {
+        fireActivated();
+      }
+
+      @Override
+      public void projectsScheduled() {
+        fireProjectScheduled();
+      }
+
+      @Override
+      public void importAndResolveScheduled() {
+        for (Listener each : myManagerListeners) {
+          each.importAndResolveScheduled();
+        }
+      }
+
+      @Override
+      public void projectImportCompleted() {
+        fireProjectImportCompleted();
+      }
+    });
+  }
+
+  private void initManagerListenerToBusBridge() {
+    if (MavenUtil.isLinearImportEnabled()) return;
+    addManagerListener(new MavenProjectManagerListenerToBusBridge(myProject), this);
+  }
+
   private void initPreloadMavenServices() {
     // init maven tool window
     MavenProjectsNavigator.getInstance(myProject);
-    // init indices manager
-    MavenIndicesManager.getInstance(myProject);
     // add CompileManager before/after tasks
     MavenTasksManager.getInstance(myProject);
     // init maven shortcuts manager to subscribe to KeymapManagerListener
@@ -311,11 +359,12 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
     return mySyncConsole;
   }
 
-  private void initProjectsTree(boolean tryToLoadExisting) {
+  @NotNull
+  private MavenProjectsTree initProjectsTree(boolean tryToLoadExisting) {
     if (tryToLoadExisting) {
       Path file = getProjectsTreeFile();
       try {
-        if (PathKt.exists(file)) {
+        if (Files.exists(file)) {
           myProjectsTree = MavenProjectsTree.read(myProject, file);
         }
       }
@@ -328,6 +377,7 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
     myMavenProjectResolver = new MavenProjectResolver(myProjectsTree);
     applyStateToTree(myProjectsTree, this);
     myProjectsTree.addListener(myProjectsTreeDispatcher.getMulticaster(), this);
+    return myProjectsTree;
   }
 
   private void applyTreeToState() {
@@ -405,10 +455,16 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
       public void createModuleForAggregatorsChanged() {
         scheduleImportSettings();
       }
+
+      @Override
+      public void updateAllProjectStructure() {
+        scheduleAllProjectImport();
+      }
     });
   }
 
   private void registerSyncConsoleListener() {
+    if (MavenUtil.isLinearImportEnabled()) return;
     myProjectsTreeDispatcher.addListener(new MavenProjectsTree.Listener() {
       @Override
       public void pluginsResolved(@NotNull MavenProject project) {
@@ -423,18 +479,17 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
   }
 
   private void listenForProjectsTreeChanges() {
-    myProjectsTree.addListener(new MavenProjectsTree.Listener() {
+    if (MavenUtil.isLinearImportEnabled()) return;
+    myProjectsTreeDispatcher.addListener(new MavenProjectsTree.Listener() {
       @Override
       public void projectsIgnoredStateChanged(@NotNull List<MavenProject> ignored,
                                               @NotNull List<MavenProject> unignored,
                                               boolean fromImport) {
-        if (!fromImport) scheduleImport();
+        if (!fromImport) scheduleImportChangedProjects();
       }
 
       @Override
       public void projectsUpdated(@NotNull List<Pair<MavenProject, MavenProjectChanges>> updated, @NotNull List<MavenProject> deleted) {
-        myEmbeddersManager.clearCaches();
-
         unscheduleAllTasks(deleted);
 
         List<MavenProject> updatedProjects = MavenUtil.collectFirsts(updated);
@@ -488,6 +543,7 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
       @Override
       public void projectResolved(@NotNull Pair<MavenProject, MavenProjectChanges> projectWithChanges,
                                   @Nullable NativeMavenProjectHolder nativeMavenProject) {
+        forceUpdateSnapshots = false;
         if (nativeMavenProject != null) {
           if (shouldScheduleProject(projectWithChanges)) {
             scheduleForNextImport(projectWithChanges);
@@ -537,9 +593,13 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
   private void projectClosed() {
     initLock.lock();
     try {
-      if (!isInitialized.getAndSet(false)) return;
+      if (!isInitialized.getAndSet(false)) {
+        return;
+      }
 
-      Disposer.dispose(myImportingQueue);
+      if (myImportingQueue != null) {
+        Disposer.dispose(myImportingQueue);
+      }
 
       myWatcher.stop();
 
@@ -573,7 +633,7 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
   }
 
   public boolean isMavenizedModule(@NotNull Module m) {
-    return ReadAction.compute(() -> !m.isDisposed() && ExternalSystemModulePropertyManager.getInstance(m).isMavenized());
+    return MavenUtil.isMavenizedModule(m);
   }
 
   @TestOnly
@@ -582,8 +642,8 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
   }
 
 
-  public void addManagedFilesWithProfiles(final List<VirtualFile> files, MavenExplicitProfiles profiles, Module dummyModuleToDelete) {
-    myDummyModule = dummyModuleToDelete;
+  public void addManagedFilesWithProfiles(final List<VirtualFile> files, MavenExplicitProfiles profiles, Module previewModuleToDelete) {
+    myPreviewModule = previewModuleToDelete;
     if (!isInitialized()) {
       initNew(files, profiles);
     }
@@ -688,6 +748,16 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
 
   @Nullable
   public MavenProject findProject(@NotNull Module module) {
+    MavenProject mavenProject = getMavenProject(module);
+    String moduleName = module.getName();
+    if (mavenProject == null && MavenImportUtil.isMainOrTestSubmodule(moduleName)) {
+      Module parentModule = ModuleManager.getInstance(myProject).findModuleByName(MavenImportUtil.getParentModuleName(moduleName));
+      mavenProject = parentModule != null ? getMavenProject(parentModule) : null;
+    }
+    return mavenProject;
+  }
+
+  private MavenProject getMavenProject(@NotNull Module module) {
     return CachedValuesManager.getManager(module.getProject()).getCachedValue(module, () -> {
       VirtualFile f = findPomFile(module, new MavenModelsProvider() {
         @Override
@@ -705,8 +775,8 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
     });
   }
 
-  @Nullable
-  public Module findModule(@NotNull MavenProject project) {
+  @RequiresReadLock
+  public @Nullable Module findModule(@NotNull MavenProject project) {
     if (!isInitialized()) return null;
     return ProjectRootManager.getInstance(myProject).getFileIndex().getModuleForFile(project.getFile());
   }
@@ -731,7 +801,7 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
       return VirtualFileManager.getInstance().findFileByUrl(pomFileUrl);
     }
     for (VirtualFile root : modelsProvider.getContentRoots(module)) {
-      List<VirtualFile> pomFiles = MavenUtil.streamPomFiles(module.getProject(), root).collect(Collectors.toList());
+      List<VirtualFile> pomFiles = MavenUtil.streamPomFiles(module.getProject(), root).toList();
       if (pomFiles.isEmpty()) {
         continue;
       }
@@ -794,6 +864,12 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
     return myProjectsTree.getIgnoredState(project);
   }
 
+  @ApiStatus.Internal
+  public void setIgnoredStateForPoms(@NotNull List<String> pomPaths, boolean ignored) {
+    if (!isInitialized()) return;
+    myProjectsTree.setIgnoredStateForPoms(pomPaths, ignored);
+  }
+
   public void setIgnoredState(@NotNull List<MavenProject> projects, boolean ignored) {
     if (!isInitialized()) return;
     myProjectsTree.setIgnoredState(projects, ignored);
@@ -829,50 +905,81 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
   }
 
   @ApiStatus.Internal
-  public void setProjectsTree(MavenProjectsTree newTree) {
+  public void setProjectsTree(@NotNull MavenProjectsTree newTree) {
+    if (!isInitialized()) {
+      initNew(Collections.emptyList(), MavenExplicitProfiles.NONE);
+    }
+    newTree.addListenersFrom(myProjectsTree);
     myProjectsTree = newTree;
+    myWatcher.setProjectsTree(newTree);
   }
 
-  private void scheduleUpdateAllProjects(boolean forceImportAndResolve) {
-    doScheduleUpdateProjects(null, false, forceImportAndResolve);
+  @ApiStatus.Internal
+  public EventDispatcher<MavenProjectsTree.Listener> getTreeListenerEventDispatcher() {
+    return myProjectsTreeDispatcher;
+  }
+
+  @ApiStatus.Internal
+  @NotNull
+  public MavenProjectsTree getProjectsTree() {
+    if (myProjectsTree == null) {
+      return initProjectsTree(true);
+    }
+    return myProjectsTree;
+  }
+
+  private void scheduleUpdateAllProjects(MavenImportSpec spec) {
+    doScheduleUpdateProjects(List.of(), spec);
   }
 
   @ApiStatus.Internal
   public AsyncPromise<Void> forceUpdateProjects() {
-    return doScheduleUpdateProjects(null, true, true);
+    return (AsyncPromise<Void>)doScheduleUpdateProjects(List.of(), MavenImportSpec.EXPLICIT_IMPORT);
   }
 
   public AsyncPromise<Void> forceUpdateProjects(@NotNull Collection<MavenProject> projects) {
-    return doScheduleUpdateProjects(projects, true, true);
+    return (AsyncPromise<Void>)doScheduleUpdateProjects(projects, MavenImportSpec.EXPLICIT_IMPORT);
   }
 
   public void forceUpdateAllProjectsOrFindAllAvailablePomFiles() {
-    if (Registry.is("maven.new.import")) {
-      MavenImportingManager.getInstance(myProject)
-        .openProjectAndImport(new FilesList(collectAllAvailablePomFiles()), getImportingSettings(), getGeneralSettings());
-      return;
-    }
+    forceUpdateAllProjectsOrFindAllAvailablePomFiles(MavenImportSpec.EXPLICIT_IMPORT);
+  }
+
+  public void forceUpdateAllProjectsOrFindAllAvailablePomFiles(MavenImportSpec spec) {
+
     if (!isMavenizedProject()) {
       addManagedFiles(collectAllAvailablePomFiles());
     }
-    doScheduleUpdateProjects(null, true, true);
+    if (MavenUtil.isLinearImportEnabled()) {
+      MavenLog.LOG.warn("forceUpdateAllProjectsOrFindAllAvailablePomFiles: Linear Import is enabled");
+      MavenImportingManager.getInstance(myProject)
+        .openProjectAndImport(new FilesList(myProjectsTree.getExistingManagedFiles()), getImportingSettings(), getGeneralSettings(), spec);
+      return;
+    }
+    MavenLog.LOG.warn("forceUpdateAllProjectsOrFindAllAvailablePomFiles: Linear Import is disabled");
+    doScheduleUpdateProjects(List.of(), spec);
   }
 
-  private AsyncPromise<Void> doScheduleUpdateProjects(final Collection<MavenProject> projects,
-                                                      final boolean forceUpdate,
-                                                      final boolean forceImportAndResolve) {
+  private Promise<Void> doScheduleUpdateProjects(@NotNull final Collection<MavenProject> projects,
+                                                 final MavenImportSpec spec) {
+    if (MavenUtil.isLinearImportEnabled()) {
+      MavenLog.LOG.warn("doScheduleUpdateProjects: Linear Import is enabled");
+      return MavenImportingManager.getInstance(myProject)
+        .openProjectAndImport(new FilesList(ContainerUtil.map(projects, MavenProject::getFile)), getImportingSettings(),
+                              getGeneralSettings(), spec).getFinishPromise().then(it -> null);
+    }
+    MavenLog.LOG.warn("doScheduleUpdateProjects: Linear Import is disabled");
     MavenDistributionsCache.getInstance(myProject).cleanCaches();
     MavenWslCache.getInstance().clearCache();
     final AsyncPromise<Void> promise = new AsyncPromise<>();
     MavenUtil.runWhenInitialized(myProject, (DumbAwareRunnable)() -> {
-      if (projects == null) {
-        myWatcher.scheduleUpdateAll(forceUpdate, forceImportAndResolve).processed(promise);
+      if (projects.isEmpty()) {
+        myWatcher.scheduleUpdateAll(spec).processed(promise);
       }
       else {
         myWatcher.scheduleUpdate(MavenUtil.collectFiles(projects),
                                  Collections.emptyList(),
-                                 forceUpdate,
-                                 forceImportAndResolve).processed(promise);
+                                 spec).processed(promise);
       }
     });
     return promise;
@@ -882,15 +989,30 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
    * Returned {@link Promise} instance isn't guarantied to be marked as rejected in all cases where importing wasn't performed (e.g.
    * if project is closed)
    */
+
   public Promise<List<Module>> scheduleImportAndResolve() {
+    return scheduleImportAndResolve(MavenImportSpec.EXPLICIT_IMPORT);
+  }
+
+  public Promise<List<Module>> scheduleImportAndResolve(MavenImportSpec spec) {
     MavenSyncConsole console = getSyncConsole();
-    console.startImport(myProgressListener);
-    fireImportAndResolveScheduled();
+    console.startImport(myProgressListener, spec);
+    StructuredIdeActivity activity = MavenImportStats.startImportActivity(myProject);
+    myMavenProjectResolver.clearPluginCache();
+    fireImportAndResolveScheduled(spec);
     AsyncPromise<List<Module>> promise = scheduleResolve();
     promise.onProcessed(m -> {
-      completeMavenSyncOnImportCompletion(console);
+      completeMavenSyncOnImportCompletion(activity);
     });
     return promise;
+  }
+
+  private void completeMavenSyncOnImportCompletion(StructuredIdeActivity activity) {
+    waitForImportCompletion().onProcessed(o -> {
+      activity.finished();
+      MavenResolveResultProblemProcessor.notifyMavenProblems(myProject);
+      MavenSyncConsole.finishTransaction(myProject);
+    });
   }
 
   public void showServerException(Throwable e) {
@@ -901,15 +1023,10 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
     getSyncConsole().terminated(exitCode);
   }
 
-  private void completeMavenSyncOnImportCompletion(MavenSyncConsole console) {
-    waitForImportCompletion().onProcessed(o -> {
-      MavenUtil.notifyMavenProblems(myProject);
-      console.finishImport();
-    });
-  }
-
   @ApiStatus.Internal
   public Promise<?> waitForImportCompletion() {
+    if (MavenUtil.isLinearImportEnabled()) return MavenImportingManager.getInstance(myProject).getImportFinishPromise();
+
     AsyncPromise<?> promise = new AsyncPromise<>();
     MavenUtil.runInBackground(myProject, SyncBundle.message("maven.sync.waiting.for.completion"), false, indicator -> {
       if (myReadingProcessor != null) {
@@ -956,10 +1073,10 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
         return;
       }
 
-      final ResolveContext context = new ResolveContext();
+      final ResolveContext context = new ResolveContext(getProjectsTree());
       Runnable onCompletion = () -> {
         if (hasScheduledProjects()) {
-          scheduleImport().processed(result);
+          scheduleImportChangedProjects().processed(result);
         }
         else {
           result.setResult(Collections.emptyList());
@@ -1039,18 +1156,24 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
     scheduleResolveInTests(getProjects());
   }
 
-  public void scheduleFoldersResolve(final Collection<MavenProject> projects) {
+  public Promise<?> scheduleFoldersResolve(final Collection<MavenProject> projects) {
+    if (MavenUtil.isLinearImportEnabled()) {
+      return MavenImportingManager.getInstance(myProject).resolveFolders(projects);
+    }
+    AsyncPromise<Void> result = new AsyncPromise<>();
     runWhenFullyOpen(() -> {
       Iterator<MavenProject> it = projects.iterator();
       while (it.hasNext()) {
         MavenProject each = it.next();
         Runnable onCompletion = it.hasNext() ? null : () -> {
-          if (hasScheduledProjects()) scheduleImport();
+          result.setResult(null);
+          if (hasScheduledProjects()) scheduleImportChangedProjects();
         };
         myFoldersResolvingProcessor.scheduleTask(
           new MavenProjectsProcessorFoldersResolvingTask(each, getImportingSettings(), myProjectsTree, onCompletion));
       }
     });
+    return result;
   }
 
   public void scheduleFoldersResolveForAllProjects() {
@@ -1059,7 +1182,8 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
 
   private void schedulePluginsResolve(final MavenProject project, final NativeMavenProjectHolder nativeMavenProject) {
     runWhenFullyOpen(() -> myPluginsResolvingProcessor
-      .scheduleTask(new MavenProjectsProcessorPluginsResolvingTask(project, nativeMavenProject, myProjectsTree)));
+      .scheduleTask(new MavenProjectsProcessorPluginsResolvingTask(project, nativeMavenProject, myProjectsTree, myMavenProjectResolver,
+                                                                   forceUpdateSnapshots)));
   }
 
   public void scheduleArtifactsDownloading(final Collection<MavenProject> projects,
@@ -1081,11 +1205,11 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
     synchronized (myImportingDataLock) {
       myImportModuleGroupsRequired = importModuleGroupsRequired;
     }
-    scheduleImport();
+    scheduleImportChangedProjects();
   }
 
   // TODO merge [result] promises (now, promise will be lost after merge of import requests)
-  private Promise<List<Module>> scheduleImport() {
+  private Promise<List<Module>> scheduleImportChangedProjects() {
     final AsyncPromise<List<Module>> result = new AsyncPromise<>();
     runWhenFullyOpen(() -> myImportingQueue.queue(new Update(this) {
       @Override
@@ -1095,6 +1219,21 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
       }
     }));
     return result;
+  }
+
+  private void scheduleAllProjectImport() {
+    runWhenFullyOpen(() -> myImportingQueue.queue(new Update(this) {
+      @Override
+      public void run() {
+        synchronized (myImportingDataLock) {
+          for (MavenProject project : getProjectsTree().getProjects()) {
+            myProjectsToImport.put(project, MavenProjectChanges.ALL);
+          }
+        }
+        importProjects();
+        fireProjectImportCompleted();
+      }
+    }));
   }
 
   @TestOnly
@@ -1107,7 +1246,7 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
       }
     }
     scheduleForNextImport(toImport);
-    scheduleImport();
+    scheduleImportChangedProjects();
   }
 
   private void scheduleForNextImport(Pair<MavenProject, MavenProjectChanges> projectWithChanges) {
@@ -1117,8 +1256,9 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
   private void scheduleForNextImport(Collection<Pair<MavenProject, MavenProjectChanges>> projectsWithChanges) {
     synchronized (myImportingDataLock) {
       for (Pair<MavenProject, MavenProjectChanges> each : projectsWithChanges) {
-        MavenProjectChanges changes = each.second.mergedWith(myProjectsToImport.get(each.first));
-        myProjectsToImport.put(each.first, changes);
+        myProjectsToImport.compute(each.first, (__, previousChanges) ->
+          previousChanges == null ? each.second : MavenProjectChangesBuilder.merged(each.second, previousChanges)
+        );
       }
     }
   }
@@ -1138,6 +1278,7 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
 
   @TestOnly
   public boolean hasScheduledImportsInTests() {
+    checkNoLegacyImportInNewTests();
     if (!isInitialized()) return false;
     return !myImportingQueue.isEmpty();
   }
@@ -1146,6 +1287,12 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
   public void performScheduledImportInTests() {
     if (!isInitialized()) return;
     runWhenFullyOpen(() -> myImportingQueue.flush());
+  }
+
+  private static void checkNoLegacyImportInNewTests() {
+    if (ApplicationManager.getApplication().isUnitTestMode() && MavenUtil.isLinearImportEnabled()) {
+      throw new IllegalStateException("Do not call this API in tests");
+    }
   }
 
   private void runWhenFullyOpen(final Runnable runnable) {
@@ -1157,7 +1304,7 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
     }
 
     final Ref<Runnable> wrapper = new Ref<>();
-    wrapper.set(() -> {
+    wrapper.set((DumbAwareRunnable)() -> {
       if (!StartupManagerEx.getInstanceEx(myProject).postStartupActivityPassed()) {
         myInitializationAlarm.addRequest(wrapper.get(), 1000);
         return;
@@ -1231,7 +1378,7 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
     ApplicationManager.getApplication().invokeLater(() -> {
       if (myProject.isDisposed()) return;
 
-      MavenFoldersImporter.updateProjectFolders(myProject, true);
+      MavenProjectImporter.tryUpdateTargetFolders(myProject);
       VirtualFileManager.getInstance().asyncRefresh(null);
     });
   }
@@ -1255,27 +1402,20 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
     final Ref<List<MavenProjectsProcessorTask>> postTasks = new Ref<>();
 
     final Runnable r = () -> {
-      MavenProjectImporter projectImporter = new MavenProjectImporter(myProject,
-                                                                      myProjectsTree,
-                                                                      getFileToModuleMapping(new MavenModelsProvider() {
-                                                                        @Override
-                                                                        public Module[] getModules() {
-                                                                          return ArrayUtil.remove(modelsProvider.getModules(),
-                                                                                                  myDummyModule);
-                                                                        }
-
-                                                                        @Override
-                                                                        public VirtualFile[] getContentRoots(Module module) {
-                                                                          return modelsProvider.getContentRoots(module);
-                                                                        }
-                                                                      }),
-                                                                      projectsToImportWithChanges,
-                                                                      importModuleGroupsRequired,
-                                                                      modelsProvider,
-                                                                      getImportingSettings(),
-                                                                      myDummyModule);
-      importer.set(projectImporter);
-      postTasks.set(projectImporter.importProject());
+      StructuredIdeActivity activity = ExternalSystemStatUtilKt.importActivityStarted(myProject, MavenUtil.SYSTEM_ID, () ->
+        Collections.singletonList(ProjectImportCollector.TASK_CLASS.with(MavenImportStats.ImportingTaskOld.class))
+      );
+      try {
+        MavenProjectImporter projectImporter = MavenProjectImporter.createImporter(
+          myProject, getProjectsTree(), projectsToImportWithChanges, importModuleGroupsRequired,
+          modelsProvider, getImportingSettings(), myPreviewModule, activity
+        );
+        importer.set(projectImporter);
+        postTasks.set(projectImporter.importProject());
+      }
+      finally {
+        activity.finished();
+      }
     };
 
     // called from wizard or ui
@@ -1308,7 +1448,7 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
     myImportingQueue.restartTimer();
 
     MavenProjectImporter projectImporter = importer.get();
-    List<Module> createdModules = projectImporter == null ? Collections.emptyList() : projectImporter.getCreatedModules();
+    List<Module> createdModules = projectImporter == null ? Collections.emptyList() : projectImporter.createdModules();
     if (!projectsToImportWithChanges.isEmpty()) {
       myProject.getMessageBus().syncPublisher(MavenImportListener.TOPIC)
         .importFinished(projectsToImportWithChanges.keySet(), createdModules);
@@ -1333,6 +1473,11 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
     return result;
   }
 
+
+  /**
+   * @deprecated use addManagerListener(Listener, Disposable) instead
+   */
+  @Deprecated
   public void addManagerListener(Listener listener) {
     myManagerListeners.add(listener);
   }
@@ -1367,7 +1512,12 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
     }
   }
 
-  private void fireImportAndResolveScheduled() {
+  private void fireImportAndResolveScheduled(MavenImportSpec spec) {
+
+    myProject.getMessageBus()
+      .syncPublisher(MavenImportListener.TOPIC)
+      .importStarted(spec);
+
     for (Listener each : myManagerListeners) {
       each.importAndResolveScheduled();
     }
@@ -1377,6 +1527,14 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
     for (Listener each : myManagerListeners) {
       each.projectImportCompleted();
     }
+  }
+
+  public void setForceUpdateSnapshots(boolean forceUpdateSnapshots) {
+    this.forceUpdateSnapshots = forceUpdateSnapshots;
+  }
+
+  public boolean getForceUpdateSnapshots() {
+    return forceUpdateSnapshots;
   }
 
   public interface Listener {
@@ -1397,7 +1555,7 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
 
     @Override
     public void markDirtyAllExternalProjects(@NotNull Project project) {
-      runWhenFullyOpen(project, (manager) -> manager.doScheduleUpdateProjects(null, true, false));
+      runWhenFullyOpen(project, (manager) -> manager.doScheduleUpdateProjects(List.of(), new MavenImportSpec(true, false, false)));
     }
 
     @Override
@@ -1405,7 +1563,7 @@ public final class MavenProjectsManager extends MavenSimpleProjectComponent
       runWhenFullyOpen(module.getProject(), (manager) -> {
         MavenProject mavenProject = manager.findProject(module);
         if (mavenProject != null) {
-          manager.doScheduleUpdateProjects(Collections.singletonList(mavenProject), true, false);
+          manager.doScheduleUpdateProjects(Collections.singletonList(mavenProject), new MavenImportSpec(true, false, false));
         }
       });
     }
