@@ -1,7 +1,6 @@
 // Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package org.jetbrains.plugins.terminal.ui;
 
-import com.intellij.ide.IdeBundle;
 import com.intellij.ide.IdeCoreBundle;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.diagnostic.Logger;
@@ -11,27 +10,24 @@ import com.intellij.openapi.editor.colors.EditorColorsScheme;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.Splitter;
 import com.intellij.openapi.util.Disposer;
-import com.intellij.openapi.wm.IdeFocusManager;
-import com.intellij.terminal.JBTerminalWidget;
+import com.intellij.terminal.ui.TerminalWidget;
 import com.intellij.ui.OnePixelSplitter;
 import com.intellij.ui.content.Content;
 import com.intellij.util.ObjectUtils;
 import com.intellij.util.ui.JBUI;
 import com.jediterm.terminal.ProcessTtyConnector;
-import com.jediterm.terminal.ui.TerminalWidgetListener;
+import com.jediterm.terminal.TtyConnector;
 import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.plugins.terminal.ShellTerminalWidget;
 import org.jetbrains.plugins.terminal.TerminalBundle;
 import org.jetbrains.plugins.terminal.TerminalOptionsProvider;
-import org.jetbrains.plugins.terminal.TerminalView;
+import org.jetbrains.plugins.terminal.TerminalToolWindowManager;
 
 import javax.swing.*;
 import java.awt.*;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.*;
 import java.util.List;
 
 public class TerminalContainer {
@@ -39,31 +35,28 @@ public class TerminalContainer {
   private static final Logger LOG = Logger.getInstance(TerminalContainer.class);
 
   private final Content myContent;
-  private final JBTerminalWidget myTerminalWidget;
+  private final TerminalWidget myTerminalWidget;
   private final Project myProject;
-  private final TerminalView myTerminalView;
-  private JPanel myPanel;
+  private final TerminalToolWindowManager myTerminalToolWindowManager;
+  private @Nullable TerminalWrapperPanel myWrapperPanel;
   private boolean myForceHideUiWhenSessionEnds = false;
-  private final TerminalWidgetListener myListener;
 
   public TerminalContainer(@NotNull Project project,
                            @NotNull Content content,
-                           @NotNull JBTerminalWidget terminalWidget,
-                           @NotNull TerminalView terminalView) {
+                           @NotNull TerminalWidget terminalWidget,
+                           @NotNull TerminalToolWindowManager terminalToolWindowManager) {
     myProject = project;
     myContent = content;
     myTerminalWidget = terminalWidget;
-    myTerminalView = terminalView;
-    myPanel = createPanel(terminalWidget);
-    myListener = widget -> {
+    myTerminalToolWindowManager = terminalToolWindowManager;
+    terminalWidget.addTerminationCallback(() -> {
       ApplicationManager.getApplication().invokeLater(() -> processSessionCompleted(), myProject.getDisposed());
-    };
-    terminalWidget.addListener(myListener);
-    terminalView.register(this);
+    }, terminalWidget);
+    terminalToolWindowManager.register(this);
     Disposer.register(content, () -> cleanup());
   }
 
-  public @NotNull JBTerminalWidget getTerminalWidget() {
+  public @NotNull TerminalWidget getTerminalWidget() {
     return myTerminalWidget;
   }
 
@@ -73,47 +66,37 @@ public class TerminalContainer {
 
   public void closeAndHide() {
     myForceHideUiWhenSessionEnds = true;
-    if (myTerminalWidget.getTtyConnector().isConnected()) {
-      myTerminalWidget.close();
+    TtyConnector connector = myTerminalWidget.getTtyConnector();
+    if (connector != null && connector.isConnected()) {
+      connector.close();
     }
     else {
-      // When "Close session when it ends" is off, terminal session is shown even with terminated shell process.
+      // When "Close session when it ends" is off, terminal session is shown even with terminated process.
       processSessionCompleted();
     }
   }
 
-  private static @NotNull JPanel createPanel(@NotNull JBTerminalWidget terminalWidget ) {
-    JPanel panel = new JPanel(new BorderLayout());
-    panel.setBorder(null);
-    panel.setFocusable(false);
-    panel.add(terminalWidget.getComponent(), BorderLayout.CENTER);
-    return panel;
+  public @NotNull TerminalWrapperPanel getWrapperPanel() {
+    if (myWrapperPanel == null) {
+      myWrapperPanel = new TerminalWrapperPanel(this);
+    }
+    return myWrapperPanel;
   }
 
-  public @NotNull JComponent getComponent() {
-    return myPanel;
-  }
-
-  public void split(boolean vertically, @NotNull JBTerminalWidget newTerminalWidget) {
-    boolean hasFocus = myTerminalWidget.getTerminalPanel().hasFocus();
-    JPanel parent = myPanel;
-    parent.remove(myTerminalWidget.getComponent());
-
-    myPanel = createPanel(myTerminalWidget);
-
-    Splitter splitter = createSplitter(vertically);
-    splitter.setFirstComponent(myPanel);
-    TerminalContainer newContainer = new TerminalContainer(myProject, myContent, newTerminalWidget, myTerminalView);
-    splitter.setSecondComponent(newContainer.getComponent());
-
-    parent.add(splitter, BorderLayout.CENTER);
-    parent.revalidate();
+  public void split(boolean vertically, @NotNull TerminalWidget newTerminalWidget) {
+    boolean hasFocus = myTerminalWidget.hasFocus();
+    TerminalWrapperPanel newParent = getWrapperPanel();
+    myWrapperPanel = new TerminalWrapperPanel(this);
+    TerminalContainer newContainer = new TerminalContainer(myProject, myContent, newTerminalWidget, myTerminalToolWindowManager);
+    Splitter splitter = createSplitter(vertically, myWrapperPanel, newContainer.getWrapperPanel());
+    newParent.setChildSplitter(splitter);
     if (hasFocus) {
-      requestFocus(myTerminalWidget);
+      myTerminalWidget.requestFocus();
     }
   }
 
-  private static @NotNull Splitter createSplitter(boolean vertically) {
+  private static @NotNull Splitter createSplitter(boolean vertically,
+                                                  @NotNull JComponent firstComponent, @NotNull JComponent secondComponent) {
     Splitter splitter = new OnePixelSplitter(vertically, 0.5f, 0.1f, 0.9f);
     splitter.setDividerWidth(JBUI.scale(1));
     EditorColorsScheme scheme = EditorColorsManager.getInstance().getGlobalScheme();
@@ -121,31 +104,21 @@ public class TerminalContainer {
     if (color != null) {
       splitter.getDivider().setBackground(color);
     }
+    splitter.setFirstComponent(firstComponent);
+    splitter.setSecondComponent(secondComponent);
     return splitter;
   }
 
   private void processSessionCompleted() {
-    Container parent = myPanel.getParent();
-    if (parent instanceof Splitter) {
-      JBTerminalWidget nextToFocus = null;
-      if (myTerminalWidget.getTerminalPanel().hasFocus()) {
-        nextToFocus = getNextSplitTerminal(true);
-      }
-      Splitter splitter = (Splitter)parent;
-      parent = parent.getParent();
-      JComponent otherComponent = myPanel.equals(splitter.getFirstComponent()) ? splitter.getSecondComponent()
-                                                                               : splitter.getFirstComponent();
-      Component realComponent = unwrapComponent(otherComponent);
-      if (realComponent instanceof JBTerminalWidget) {
-        TerminalContainer otherContainer = myTerminalView.getContainer((JBTerminalWidget)realComponent);
-        otherContainer.myPanel = (JPanel)parent;
-      }
-      realComponent.getParent().remove(realComponent);
-      parent.remove(splitter);
-      parent.add(realComponent, BorderLayout.CENTER);
-      parent.revalidate();
+    TerminalWrapperPanel thisPanel = getWrapperPanel();
+    if (thisPanel.getParent() instanceof Splitter splitter) {
+      TerminalWidget nextToFocus = myTerminalWidget.hasFocus() ? getNextSplitTerminal(true) : null;
+      TerminalWrapperPanel parent = getSplitterParent(splitter);
+      TerminalWrapperPanel otherPanel = splitter.getFirstComponent().equals(thisPanel) ? (TerminalWrapperPanel)splitter.getSecondComponent()
+                                                                                       : (TerminalWrapperPanel)splitter.getFirstComponent();
+      parent.transferChildFrom(otherPanel);
       if (nextToFocus != null) {
-        requestFocus(nextToFocus);
+        nextToFocus.requestFocus();
       }
       cleanup();
       Disposer.dispose(myTerminalWidget);
@@ -156,22 +129,21 @@ public class TerminalContainer {
   }
 
   private void cleanup() {
-    myTerminalWidget.removeListener(myListener);
-    myTerminalView.unregister(this);
+    myTerminalToolWindowManager.unregister(this);
   }
 
   private void processSingleTerminalCompleted() {
-    if (myForceHideUiWhenSessionEnds || TerminalOptionsProvider.getInstance().closeSessionOnLogout()) {
-      myTerminalView.closeTab(myContent);
+    if (myForceHideUiWhenSessionEnds || TerminalOptionsProvider.getInstance().getCloseSessionOnLogout()) {
+      myTerminalToolWindowManager.closeTab(myContent);
     }
     else {
       String text = getSessionCompletedMessage(myTerminalWidget);
       myTerminalWidget.writePlainMessage("\n" + text + "\n");
-      myTerminalWidget.getTerminalPanel().setCursorVisible(false);
+      myTerminalWidget.setCursorVisible(false);
     }
   }
 
-  private static @NotNull @Nls String getSessionCompletedMessage(@NotNull JBTerminalWidget widget) {
+  private static @NotNull @Nls String getSessionCompletedMessage(@NotNull TerminalWidget widget) {
     String text = "[" + TerminalBundle.message("session.terminated.text") + "]";
     ProcessTtyConnector connector = ShellTerminalWidget.getProcessTtyConnector(widget.getTtyConnector());
     if (connector != null) {
@@ -187,11 +159,11 @@ public class TerminalContainer {
   }
 
   public boolean isSplitTerminal() {
-    return findRootSplitter() != null;
+    return getParentSplitter(myWrapperPanel) != null;
   }
 
-  public @Nullable JBTerminalWidget getNextSplitTerminal(boolean forward) {
-    List<JBTerminalWidget> terminals = listTerminals();
+  public @Nullable TerminalWidget getNextSplitTerminal(boolean forward) {
+    List<TerminalWidget> terminals = listTerminals();
     int ind = terminals.indexOf(myTerminalWidget);
     if (ind < 0) {
       LOG.error("All split terminal list (" + terminals.size() + ") doesn't contain this terminal");
@@ -204,62 +176,111 @@ public class TerminalContainer {
     return terminals.get(newInd);
   }
 
-  private @NotNull List<JBTerminalWidget> listTerminals() {
+  private @NotNull List<TerminalWidget> listTerminals() {
     Splitter rootSplitter = findRootSplitter();
     if (rootSplitter == null) {
-      return Collections.singletonList(myTerminalWidget);
+      return List.of(myTerminalWidget);
     }
-    List<JBTerminalWidget> terminals = new ArrayList<>();
+    List<TerminalWidget> terminals = new ArrayList<>();
     traverseSplitters(rootSplitter, terminals);
     return terminals;
   }
 
-  private void traverseSplitters(@NotNull Splitter splitter, @NotNull List<JBTerminalWidget> terminals) {
-    traverseParentPanel(splitter.getFirstComponent(), terminals);
-    traverseParentPanel(splitter.getSecondComponent(), terminals);
+  private void traverseSplitters(@NotNull Splitter splitter, @NotNull List<TerminalWidget> terminals) {
+    traverseWrapperPanel((TerminalWrapperPanel)splitter.getFirstComponent(), terminals);
+    traverseWrapperPanel((TerminalWrapperPanel)splitter.getSecondComponent(), terminals);
   }
 
-  private void traverseParentPanel(@NotNull JComponent parentPanel, @NotNull List<JBTerminalWidget> terminals) {
-    Component[] components = parentPanel.getComponents();
-    if (components.length == 1) {
-      Component c = components[0];
-      if (c instanceof Splitter) {
-        traverseSplitters((Splitter)c, terminals);
-      }
-      else if (c instanceof JBTerminalWidget) {
-        terminals.add((JBTerminalWidget)c);
-      }
+  private void traverseWrapperPanel(@NotNull TerminalWrapperPanel panel, @NotNull List<TerminalWidget> terminals) {
+    Object child = panel.validateAndGetChild();
+    if (child instanceof Splitter splitter) {
+      traverseSplitters(splitter, terminals);
+    }
+    else {
+      terminals.add(((TerminalContainer)child).myTerminalWidget);
     }
   }
 
   private @Nullable Splitter findRootSplitter() {
-    Splitter splitter = ObjectUtils.tryCast(myPanel.getParent(), Splitter.class);
+    Splitter splitter = getParentSplitter(myWrapperPanel);
     while (splitter != null) {
-      Component panel = splitter.getParent();
-      Splitter parentSplitter = panel != null ? ObjectUtils.tryCast(panel.getParent(), Splitter.class) : null;
-      if (parentSplitter != null) {
-        splitter = parentSplitter;
+      Splitter parentSplitter = getParentSplitter(getSplitterParent(splitter));
+      if (parentSplitter == null) break;
+      splitter = parentSplitter;
+    }
+    return splitter;
+  }
+
+  private static @Nullable Splitter getParentSplitter(@Nullable TerminalWrapperPanel panel) {
+    return panel != null ? ObjectUtils.tryCast(panel.getParent(), Splitter.class) : null;
+  }
+
+  private static @NotNull TerminalWrapperPanel getSplitterParent(@NotNull Splitter splitter) {
+    return (TerminalWrapperPanel)splitter.getParent();
+  }
+
+  private static class TerminalWrapperPanel extends JPanel {
+    private TerminalContainer myTerminal;
+
+    private TerminalWrapperPanel(@NotNull TerminalContainer terminal) {
+      super(new BorderLayout());
+      setBorder(null);
+      setFocusable(false);
+      setChildTerminal(terminal);
+    }
+
+    private void setChildTerminal(@NotNull TerminalContainer terminal) {
+      if (myTerminal != null) {
+        throw new IllegalStateException("Cannot set a new terminal when another terminal is still set");
+      }
+      myTerminal = terminal;
+      myTerminal.myWrapperPanel = this;
+      setChildComponent(terminal.myTerminalWidget.getComponent());
+    }
+
+    private void setChildSplitter(@NotNull Splitter splitter) {
+      myTerminal = null;
+      setChildComponent(splitter);
+    }
+
+    private void setChildComponent(@NotNull Component childComponent) {
+      Container parent = childComponent.getParent();
+      if (parent != null) {
+        parent.remove(childComponent);
+      }
+      removeAll();
+      add(childComponent, BorderLayout.CENTER);
+      revalidate();
+    }
+
+    private void transferChildFrom(@NotNull TerminalWrapperPanel other) {
+      Object childObj = other.validateAndGetChild();
+      if (childObj instanceof TerminalContainer otherTerminal) {
+        setChildTerminal(otherTerminal);
       }
       else {
-        return splitter;
+        setChildSplitter((Splitter)childObj);
       }
     }
-    return null;
-  }
 
-  private static @NotNull Component unwrapComponent(@NotNull JComponent component) {
-    Component[] components = component.getComponents();
-    if (components.length == 1) {
-      Component c = components[0];
-      if (c instanceof JBTerminalWidget || c instanceof Splitter) {
-        return c;
+    private @NotNull Object /* TerminalContainer | Splitter */ validateAndGetChild() {
+      Component[] children = getComponents();
+      if (children.length != 1) {
+        throw new IllegalStateException("Expected 1 child, but got " + children.length + ": " + Arrays.toString(children));
+      }
+      Component child = Objects.requireNonNull(children[0]);
+      if (myTerminal != null) {
+        if (child == myTerminal.myTerminalWidget.getComponent()) {
+          return myTerminal;
+        }
+        throw new IllegalStateException("Expected terminal widget (" + myTerminal.myTerminalWidget.getComponent() + "), got " + child);
+      }
+      else {
+        if (child instanceof Splitter splitter) {
+          return splitter;
+        }
+        throw new IllegalStateException("Expected splitter, got " + child);
       }
     }
-    LOG.error("Cannot unwrap " + component + ", children: " + Arrays.toString(components));
-    return component;
-  }
-
-  public void requestFocus(@NotNull JBTerminalWidget terminal) {
-    IdeFocusManager.getInstance(myProject).requestFocus(terminal.getTerminalPanel(), true);
   }
 }
