@@ -12,13 +12,10 @@ import com.intellij.lang.annotation.HighlightSeverity;
 import com.intellij.navigation.GotoRelatedItem;
 import com.intellij.openapi.editor.markup.GutterIconRenderer;
 import com.intellij.openapi.project.Project;
-import com.intellij.openapi.util.Computable;
+import com.intellij.openapi.util.*;
 import com.intellij.openapi.util.NlsContexts.PopupContent;
 import com.intellij.openapi.util.NlsContexts.PopupTitle;
 import com.intellij.openapi.util.NlsContexts.Tooltip;
-import com.intellij.openapi.util.NotNullFactory;
-import com.intellij.openapi.util.NotNullLazyValue;
-import com.intellij.openapi.util.Ref;
 import com.intellij.psi.PsiElement;
 import com.intellij.psi.SmartPointerManager;
 import com.intellij.psi.SmartPsiElementPointer;
@@ -28,7 +25,6 @@ import com.intellij.util.NullableFunction;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.xml.DomElement;
 import com.intellij.util.xml.ElementPresentationManager;
-import com.intellij.util.xml.highlighting.DomElementAnnotationHolder;
 import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
@@ -41,8 +37,6 @@ import java.util.*;
 /**
  * DOM-specific builder for {@link GutterIconRenderer}
  * and {@link com.intellij.codeInsight.daemon.LineMarkerInfo}.
- *
- * @author peter
  */
 public class NavigationGutterIconBuilder<T> {
   @NonNls private static final String PATTERN = "&nbsp;&nbsp;&nbsp;&nbsp;{0}";
@@ -53,11 +47,11 @@ public class NavigationGutterIconBuilder<T> {
   private final NotNullFunction<? super T, ? extends Collection<? extends PsiElement>> myConverter;
 
   protected NotNullLazyValue<Collection<? extends T>> myTargets;
-  protected boolean myLazy;
+  private boolean myLazy;
   protected @Tooltip String myTooltipText;
   protected @PopupTitle String myPopupTitle;
   protected @PopupContent String myEmptyText;
-  protected @PopupTitle String myTooltipTitle;
+  @PopupTitle private String myTooltipTitle;
   protected GutterIconRenderer.Alignment myAlignment = GutterIconRenderer.Alignment.CENTER;
   private Computable<PsiElementListCellRenderer<?>> myCellRenderer;
   private @NotNull NullableFunction<? super T, String> myNamer = ElementPresentationManager.namer();
@@ -66,12 +60,12 @@ public class NavigationGutterIconBuilder<T> {
     o -> ContainerUtil.createMaybeSingletonList(o.getXmlElement());
   public static final NotNullFunction<DomElement, Collection<? extends GotoRelatedItem>> DOM_GOTO_RELATED_ITEM_PROVIDER = dom -> {
     if (dom.getXmlElement() != null) {
-      return Collections.singletonList(new DomGotoRelatedItem(dom));
+      return List.of(new DomGotoRelatedItem(dom));
     }
     return Collections.emptyList();
   };
   protected static final NotNullFunction<PsiElement, Collection<? extends GotoRelatedItem>> PSI_GOTO_RELATED_ITEM_PROVIDER =
-    dom -> Collections.singletonList(new GotoRelatedItem(dom, InspectionsBundle.message("xml.goto.group")));
+    dom -> List.of(new GotoRelatedItem(dom, InspectionsBundle.message("xml.goto.group")));
 
   protected NavigationGutterIconBuilder(@NotNull final Icon icon, @NotNull NotNullFunction<? super T, ? extends Collection<? extends PsiElement>> converter) {
     this(icon, converter, null);
@@ -86,8 +80,13 @@ public class NavigationGutterIconBuilder<T> {
   }
 
   @NotNull
-  public static NavigationGutterIconBuilder<PsiElement> create(@NotNull final Icon icon) {
+  public static NavigationGutterIconBuilder<PsiElement> create(@NotNull Icon icon) {
     return create(icon, DEFAULT_PSI_CONVERTOR, PSI_GOTO_RELATED_ITEM_PROVIDER);
+  }
+
+  @NotNull
+  public static NavigationGutterIconBuilder<PsiElement> create(@NotNull Icon icon, @NlsContexts.Separator String navigationGroup) {
+    return create(icon, DEFAULT_PSI_CONVERTOR, element -> List.of(new GotoRelatedItem(element, navigationGroup)));
   }
 
   @NotNull
@@ -166,16 +165,26 @@ public class NavigationGutterIconBuilder<T> {
     return this;
   }
 
+  /**
+   * This method may lead to a deadlock when used from pooled thread, e.g., from
+   * {@link com.intellij.codeInsight.daemon.LineMarkerProvider#collectSlowLineMarkers(List, Collection)}.
+   * {@link PsiElementListCellRenderer} is a UI component that acquires Swing tree lock on init.
+   *
+   * @deprecated Use {@link #setCellRenderer(Computable)} instead, then renderer will be instantiated lazily and from EDT
+   */
+  @Deprecated
   @NotNull
-  public NavigationGutterIconBuilder<T> setCellRenderer(@NotNull final PsiElementListCellRenderer cellRenderer) {
+  public NavigationGutterIconBuilder<T> setCellRenderer(@NotNull final PsiElementListCellRenderer<?> cellRenderer) {
     myCellRenderer = new Computable.PredefinedValueComputable<>(cellRenderer);
     return this;
   }
 
-  @Nullable
-  public Annotation install(@NotNull DomElementAnnotationHolder holder, @Nullable DomElement element) {
-    if (!myLazy && myTargets.getValue().isEmpty() || element == null) return null;
-    return doInstall(holder.createAnnotation(element, HighlightSeverity.INFORMATION, null), element.getManager().getProject());
+  /**
+   * @param cellRendererProvider list cell renderer for navigation popup
+   */
+  public @NotNull NavigationGutterIconBuilder<T> setCellRenderer(@NotNull Computable<PsiElementListCellRenderer<?>> cellRendererProvider) {
+    myCellRenderer = cellRendererProvider;
+    return this;
   }
 
   /**
@@ -185,33 +194,33 @@ public class NavigationGutterIconBuilder<T> {
   @Deprecated
   public Annotation install(@NotNull AnnotationHolder holder, @Nullable PsiElement element) {
     if (!myLazy && myTargets.getValue().isEmpty() || element == null) return null;
-    return doInstall(holder.createInfoAnnotation(element, null), element.getProject());
+    return holder.newSilentAnnotation(HighlightSeverity.INFORMATION)
+      .gutterIconRenderer(createGutterIconRenderer(element.getProject(), null))
+      .needsUpdateOnTyping(false).createAnnotation();
   }
 
   public void createGutterIcon(@NotNull AnnotationHolder holder, @Nullable PsiElement element) {
     if (!myLazy && myTargets.getValue().isEmpty() || element == null) return;
-    holder.newSilentAnnotation(HighlightSeverity.INFORMATION).range(element).gutterIconRenderer(createGutterIconRenderer(
-      element.getProject())).needsUpdateOnTyping(false).create();
-  }
 
-  @NotNull
-  private Annotation doInstall(@NotNull Annotation annotation, @NotNull Project project) {
-    NavigationGutterIconRenderer renderer = createGutterIconRenderer(project);
-    annotation.setGutterIconRenderer(renderer);
-    annotation.setNeedsUpdateOnTyping(false);
-    return annotation;
+    NavigationGutterIconRenderer renderer = createGutterIconRenderer(element.getProject(), null);
+
+    holder.newSilentAnnotation(HighlightSeverity.INFORMATION)
+      .range(element)
+      .gutterIconRenderer(renderer)
+      .needsUpdateOnTyping(false)
+      .create();
   }
 
   @NotNull
   public RelatedItemLineMarkerInfo<PsiElement> createLineMarkerInfo(@NotNull PsiElement element) {
-    NavigationGutterIconRenderer renderer = createGutterIconRenderer(element.getProject());
+    NavigationGutterIconRenderer renderer = createGutterIconRenderer(element.getProject(), null);
     return createLineMarkerInfo(element, renderer.isNavigateAction() ? renderer : null);
   }
 
   @NotNull
   public RelatedItemLineMarkerInfo<PsiElement> createLineMarkerInfo(@NotNull PsiElement element,
                                                                     @Nullable GutterIconNavigationHandler<PsiElement> navigationHandler) {
-    NavigationGutterIconRenderer renderer = createGutterIconRenderer(element.getProject());
+    NavigationGutterIconRenderer renderer = createGutterIconRenderer(element.getProject(), navigationHandler);
     String tooltip = renderer.getTooltipText();
     return new RelatedItemLineMarkerInfo<>(
       element,
@@ -254,7 +263,8 @@ public class NavigationGutterIconBuilder<T> {
   }
 
   @NotNull
-  protected NavigationGutterIconRenderer createGutterIconRenderer(@NotNull final Project project) {
+  protected NavigationGutterIconRenderer createGutterIconRenderer(@NotNull Project project,
+                                                                  @Nullable GutterIconNavigationHandler<PsiElement> navigationHandler) {
     checkBuilt();
 
     NotNullFactory<Collection<? extends T>> factory = evaluateAndForget(myTargets);
@@ -283,24 +293,26 @@ public class NavigationGutterIconBuilder<T> {
 
     Computable<PsiElementListCellRenderer<?>> renderer =
       myCellRenderer == null ? DefaultPsiElementCellRenderer::new : myCellRenderer;
-    return createGutterIconRenderer(pointers, renderer, empty);
+    return createGutterIconRenderer(pointers, renderer, empty, navigationHandler);
   }
 
   @NotNull
-  protected NavigationGutterIconRenderer createGutterIconRenderer(@NotNull NotNullLazyValue<List<SmartPsiElementPointer<?>>> pointers,
-                                                                  @NotNull Computable<PsiElementListCellRenderer<?>> renderer,
-                                                                  boolean empty) {
+  protected NavigationGutterIconRenderer createGutterIconRenderer(@NotNull NotNullLazyValue<? extends List<SmartPsiElementPointer<?>>> pointers,
+                                                                  @NotNull Computable<? extends PsiElementListCellRenderer<?>> renderer,
+                                                                  boolean empty,
+                                                                  @Nullable GutterIconNavigationHandler<PsiElement> navigationHandler) {
     if (myLazy) {
-      return createLazyGutterIconRenderer(pointers, renderer, empty);
+      return createLazyGutterIconRenderer(pointers, renderer, empty, navigationHandler);
     }
-    return new MyNavigationGutterIconRenderer(this, myAlignment, myIcon, myTooltipText, pointers, renderer, empty);
+    return new MyNavigationGutterIconRenderer(this, myAlignment, myIcon, myTooltipText, pointers, renderer, empty, navigationHandler);
   }
 
   @NotNull
-  protected NavigationGutterIconRenderer createLazyGutterIconRenderer(@NotNull NotNullLazyValue<List<SmartPsiElementPointer<?>>> pointers,
-                                                                      @NotNull Computable<PsiElementListCellRenderer<?>> renderer,
-                                                                      boolean empty) {
-    return new MyNavigationGutterIconRenderer(this, myAlignment, myIcon, myTooltipText, pointers, renderer, empty, true);
+  private NavigationGutterIconRenderer createLazyGutterIconRenderer(@NotNull NotNullLazyValue<? extends List<SmartPsiElementPointer<?>>> pointers,
+                                                                    @NotNull Computable<? extends PsiElementListCellRenderer<?>> renderer,
+                                                                    boolean empty,
+                                                                    @Nullable GutterIconNavigationHandler<PsiElement> navigationHandler) {
+    return new MyNavigationGutterIconRenderer(this, myAlignment, myIcon, myTooltipText, pointers, renderer, empty, true, navigationHandler);
   }
 
   @NotNull
@@ -340,17 +352,8 @@ public class NavigationGutterIconBuilder<T> {
     if (myLazy) {
       return false;
     }
-
-    Set<PsiElement> elements = new HashSet<>();
     Collection<? extends T> targets = myTargets.getValue();
-    for (final T target : targets) {
-      for (final PsiElement psiElement : myConverter.fun(target)) {
-        if (elements.add(psiElement)) {
-          return false;
-        }
-      }
-    }
-    return true;
+    return ContainerUtil.all(targets, target -> myConverter.fun(target).isEmpty());
   }
 
   private static class MyNavigationGutterIconRenderer extends NavigationGutterIconRenderer {
@@ -363,10 +366,11 @@ public class NavigationGutterIconBuilder<T> {
                                    @NotNull Alignment alignment,
                                    final Icon icon,
                                    @Nullable final @Tooltip String tooltipText,
-                                   @NotNull NotNullLazyValue<List<SmartPsiElementPointer<?>>> pointers,
-                                   @NotNull Computable<PsiElementListCellRenderer<?>> cellRenderer,
-                                   boolean empty) {
-      super(builder.myPopupTitle, builder.myEmptyText, cellRenderer, pointers);
+                                   @NotNull NotNullLazyValue<? extends List<SmartPsiElementPointer<?>>> pointers,
+                                   @NotNull Computable<? extends PsiElementListCellRenderer<?>> cellRenderer,
+                                   boolean empty,
+                                   @Nullable GutterIconNavigationHandler<PsiElement> navigationHandler) {
+      super(builder.myPopupTitle, builder.myEmptyText, cellRenderer, pointers, false, navigationHandler);
       myAlignment = alignment;
       myIcon = icon;
       myTooltipText = tooltipText;
@@ -377,11 +381,12 @@ public class NavigationGutterIconBuilder<T> {
                                    @NotNull Alignment alignment,
                                    Icon icon,
                                    @Nullable @Tooltip String tooltipText,
-                                   @NotNull NotNullLazyValue<List<SmartPsiElementPointer<?>>> pointers,
-                                   @NotNull Computable<PsiElementListCellRenderer<?>> cellRenderer,
+                                   @NotNull NotNullLazyValue<? extends List<SmartPsiElementPointer<?>>> pointers,
+                                   @NotNull Computable<? extends PsiElementListCellRenderer<?>> cellRenderer,
                                    boolean empty,
-                                   boolean computeTargetsInBackground) {
-      super(builder.myPopupTitle, builder.myEmptyText, cellRenderer, pointers, computeTargetsInBackground);
+                                   boolean computeTargetsInBackground,
+                                   @Nullable GutterIconNavigationHandler<PsiElement> navigationHandler) {
+      super(builder.myPopupTitle, builder.myEmptyText, cellRenderer, pointers, computeTargetsInBackground, navigationHandler);
       myAlignment = alignment;
       myIcon = icon;
       myTooltipText = tooltipText;
@@ -419,10 +424,8 @@ public class NavigationGutterIconBuilder<T> {
       final MyNavigationGutterIconRenderer that = (MyNavigationGutterIconRenderer)o;
 
       if (myAlignment != that.myAlignment) return false;
-      if (myIcon != null ? !myIcon.equals(that.myIcon) : that.myIcon != null) return false;
-      if (myTooltipText != null ? !myTooltipText.equals(that.myTooltipText) : that.myTooltipText != null) return false;
-
-      return true;
+      if (!Objects.equals(myIcon, that.myIcon)) return false;
+      return Objects.equals(myTooltipText, that.myTooltipText);
     }
 
     @Override
